--- a/app/beta/ios-ipados/index.html
+++ b/app/beta/ios-ipados/index.html
@@ -32,7 +32,7 @@
       <li class="crumb dark logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb dark"><a href="../" title="Animat Habitat beta.">Beta</a></li>
       <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
-      <li class="crumb scene dark"><a><em>App</em></a></li>
+      <li class="crumb scene dark"><a><i>App</i></a></li>
     </ul>
   </nav>
 
@@ -44,7 +44,7 @@
         <div>
           <h3 class="letterhead">Beta App on iOS and iPadOS<font class="fr"><br>Application b&ecirc;ta sur iOS et iPadOS</font></h3>
           <ul class="square">
-            <li>Preview the <em>White Elephant</em> comic book, its companion app and its interactive story.<font class="fr">&nbsp;&#92;&nbsp;Pr&eacute;visualisez la bande dessin&eacute;e <em>White Elephant</em>, son application compagnon et son histoire interactive.</font></li>
+            <li>Preview the <i>White Elephant</i> comic book, its companion app and its interactive story.<font class="fr">&nbsp;&#92;&nbsp;Pr&eacute;visualisez la bande dessin&eacute;e <i>White Elephant</i>, son application compagnon et son histoire interactive.</font></li>
             <li>Provide feedback to help us develop the commercial version of the companion app.<font class="fr">&nbsp;&#92;&nbsp;Fournissez vos commentaires pour nous aider &agrave; d&eacute;velopper la version commerciale de l’application compagnon.</font></li>
 
           </ul>
