--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
     <ul class="page">
       <li class="crumb dark logo"><a href="../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
-      <li class="crumb scene dark"><a><em>App</em></a></li>
+      <li class="crumb scene dark"><a><i>App</i></a></li>
     </ul>
   </nav>
 
@@ -48,7 +48,7 @@
         </div>
 
         <!-- <div class="clear-top">
-          <p class="small">We appreciate your participation in our beta program. The objective is improve the commercial experience for everyone who purchases the companion app designed for the <em>White Elephant</em> comic book. And we believe that objective can be achieved better, together.</p>
+          <p class="small">We appreciate your participation in our beta program. The objective is improve the commercial experience for everyone who purchases the companion app designed for the <i>White Elephant</i> comic book. And we believe that objective can be achieved better, together.</p>
 
         </div> -->
       </div>
