--- a/boutique/exit/index.html
+++ b/boutique/exit/index.html
@@ -26,7 +26,7 @@
     <ul class="page">
       <li class="crumb dark logo"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb dark"><a href="../" title="Animat Habitat boutique.">Boutique</a></li>
-      <li class="crumb active dark"><a><em>Exit</em></a></li>
+      <li class="crumb active dark"><a><i>Exit</i></a></li>
       <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
     </ul>
   </nav>
