--- a/boutique/medium/digital-numerique/last-of-the-big-tuskers/index.html
+++ b/boutique/medium/digital-numerique/last-of-the-big-tuskers/index.html
@@ -27,7 +27,7 @@
       <li class="crumb dark logo"><a href="../../../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb dark"><a href="../../../" title="Animat Habitat boutique.">Boutique</a></li>
       <li class="crumb dark"><a href="../" title="Animat Habitat boutique. Digital editions. &ndash;&nbsp;&Eacute;ditions num&eacute;riques.">Digital</a></li>
-      <li class="crumb active dark"><a><em>Magnificent Seven</em></a></li>
+      <li class="crumb active dark"><a><i>Magnificent Seven</i></a></li>
       <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
       <li class="right thin dark"><a class="title" onclick="toggle_currency();">
         <font class="paypal-ca"><b class="overscore">CA</b>&nbsp;&#92;&nbsp;US</font>
@@ -51,7 +51,7 @@
     <a onclick="preview_isilo();">
       <div class="quote">
         <img alt="Last of the Big Tuskers &ndash; Isilo [preview]" class="wp-post-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.1440-864.jpg" />
-        <p class="text-right gutter-side"><em>Isilo</em> &ndash; Tembe Elephant Park, South Africa</p>
+        <p class="text-right gutter-side"><i>Isilo</i> &ndash; Tembe Elephant Park, South Africa</p>
 
       </div>
     </a>
@@ -61,7 +61,7 @@
     <a onclick="preview_kamboyo();">
       <div class="quote">
         <img alt="Last of the Big Tuskers &ndash; Kamboyo [preview]" class="wp-post-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.kamboyo.c.1440-864.jpg" />
-        <p class="text-right gutter-side"><em>Kamboyo</em> &ndash; Tsavo Conservation Area, Kenya</p>
+        <p class="text-right gutter-side"><i>Kamboyo</i> &ndash; Tsavo Conservation Area, Kenya</p>
 
       </div>
     </a>
@@ -71,7 +71,7 @@
     <a onclick="preview_masthulele();">
       <div class="quote">
         <img alt="Last of the Big Tuskers &ndash; Masthulele [preview]" class="wp-post-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.masthulele.c.1440-864.jpg" />
-        <p class="text-right gutter-side"><em>Masthulele</em> &ndash; Kruger National Park, South Africa</p>
+        <p class="text-right gutter-side"><i>Masthulele</i> &ndash; Kruger National Park, South Africa</p>
 
       </div>
     </a>
@@ -81,7 +81,7 @@
     <a onclick="preview_one_ton();">
       <div class="quote">
         <img alt="Last of the Big Tuskers &ndash; One Ton [preview]" class="wp-post-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.one-ton.c.1440-864.jpg" />
-        <p class="text-right gutter-side"><em>One Ton</em> &ndash; Chyulu Hills National Park, Kenya</p>
+        <p class="text-right gutter-side"><i>One Ton</i> &ndash; Chyulu Hills National Park, Kenya</p>
 
       </div>
     </a>
@@ -91,7 +91,7 @@
     <a onclick="preview_satao();">
       <div class="quote">
         <img alt="Last of the Big Tuskers &ndash; Satao [preview]" class="wp-post-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.satao.c.1440-864.jpg" />
-        <p class="text-right gutter-side"><em>Satao</em> &ndash; Tsavo East National Park, Kenya</p>
+        <p class="text-right gutter-side"><i>Satao</i> &ndash; Tsavo East National Park, Kenya</p>
 
       </div>
     </a>
@@ -101,7 +101,7 @@
     <a onclick="preview_tim();">
       <div class="quote">
         <img alt="Last of the Big Tuskers &ndash; Tim [preview]" class="wp-post-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.tim.c.1440-864.jpg" />
-        <p class="text-right gutter-side"><em>Tim</em> &ndash; Amboseli National Park, Kenya</p>
+        <p class="text-right gutter-side"><i>Tim</i> &ndash; Amboseli National Park, Kenya</p>
 
       </div>
     </a>
@@ -111,7 +111,7 @@
     <a onclick="preview_craig();">
       <div class="quote">
         <img alt="Last of the Big Tuskers &ndash; Craig [preview]" class="wp-post-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.craig.c.1440-864.jpg" />
-        <p class="text-right gutter-side"><em>Craig</em> &ndash; Amboseli National Park, Kenya</p>
+        <p class="text-right gutter-side"><i>Craig</i> &ndash; Amboseli National Park, Kenya</p>
 
       </div>
     </a>
@@ -142,7 +142,7 @@
       </div>
 
     </div>
-    <p class="gutter-side text-right"><em>Magnificent Seven</em> (digital paint, 2018) &copy;&nbsp;Dane&nbsp;Aleksander</p>
+    <p class="gutter-side text-right"><i>Magnificent Seven</i> (digital paint, 2018) &copy;&nbsp;Dane&nbsp;Aleksander</p>
 
   </section>
 
@@ -153,13 +153,13 @@
       <div>
         <h5 class="color tag"><a class="overscore" onclick="toggle_meta();">Digital Paintings</a><font class="fr">&nbsp;&#92;&nbsp;Peintures num&egrave;riques</font></h5>
         <div class="clear" id="p-meta">
-          <p class="small">Art of<font class="fr">&nbsp;&#92;&nbsp;de</font> <em>Last of the Big Tuskers</em> (2018).</p>
+          <p class="small">Art of<font class="fr">&nbsp;&#92;&nbsp;de</font> <i>Last of the Big Tuskers</i> (2018).</p>
 
         </div>
         <h5 class="author">Art by<font class="fr">&nbsp;&#92;&nbsp;par</font> Dane Aleksander.</h5>
         <!-- <p>Published in December<font class="fr">&nbsp;&#92;&nbsp;Publi&eacute; en d&eacute;cembre</font> 2018.</p> -->
 
-        <p class="linebreak">The complete collection of digital paintings painted in the making of <em>Last of the Big Tuskers</em> (documentary film, 2018). The collection is made available for download in a range of high-definition resolutions.<font class="fr">&nbsp;&#92;&nbsp;La collection compl&egrave;te de peintures num&eacute;riques peintes lors de la r&eacute;alisation du film documentaire <em>Last of the Big Tuskers</em>. La collection comprend une gamme de r&eacute;solutions.</font></p>
+        <p class="linebreak">The complete collection of digital paintings painted in the making of <i>Last of the Big Tuskers</i> (documentary film, 2018). The collection is made available for download in a range of high-definition resolutions.<font class="fr">&nbsp;&#92;&nbsp;La collection compl&egrave;te de peintures num&eacute;riques peintes lors de la r&eacute;alisation du film documentaire <i>Last of the Big Tuskers</i>. La collection comprend une gamme de r&eacute;solutions.</font></p>
 
         <!-- fit to the aspect ratio of widescreen monitors and device formats -->
         <!-- adapt&eacute;es au rapport d'aspect des moniteurs &agrave; &eacute;cran large et des formats d'appareils -->
