--- a/boutique/medium/giclee/index.html
+++ b/boutique/medium/giclee/index.html
@@ -26,7 +26,7 @@
     <ul class="page">
       <li class="crumb dark logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb dark"><a href="../../" title="Animat Habitat boutique.">Boutique</a></li>
-      <li class="crumb active dark"><a><em>Gicl&eacute;e</em></a></li>
+      <li class="crumb active dark"><a><i>Gicl&eacute;e</i></a></li>
       <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
     </ul>
   </nav>
@@ -64,7 +64,7 @@
 
           <a href="isilo/"><h5 class="woo-title">Isilo</h5></a>
           <h5 class="woo-description">Tembe Elephant Park, South Africa</h5>
-          <h5 class="woo-tag"><em>Last of the Big Tuskers</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
+          <h5 class="woo-tag"><i>Last of the Big Tuskers</i><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
 
         </li>
 
@@ -75,7 +75,7 @@
             </div></a>
           <a href="kamboyo/"><h5 class="woo-title">Kamboyo</h5></a>
           <h5 class="woo-description">Tsavo Conservation Area, Kenya</h5>
-          <h5 class="woo-tag"><em>Last of the Big Tuskers</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
+          <h5 class="woo-tag"><i>Last of the Big Tuskers</i><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
         </li> -->
 
         <!-- <li class="post-1507 has-post-thumbnail">
@@ -85,7 +85,7 @@
             </div></a>
           <a href="masthulele/"><h5 class="woo-title">Masthulele</h5></a>
           <h5 class="woo-description">Kruger National Park, South Africa</h5>
-          <h5 class="woo-tag"><em>Last of the Big Tuskers</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
+          <h5 class="woo-tag"><i>Last of the Big Tuskers</i><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
         </li> -->
 
         <!-- <li class="post-1508 has-post-thumbnail">
@@ -95,7 +95,7 @@
             </div></a>
           <a href="one-ton/"><h5 class="woo-title">One Ton</h5></a>
           <h5 class="woo-description">Chyulu Hills National Park, Kenya</h5>
-          <h5 class="woo-tag"><em>Last of the Big Tuskers</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
+          <h5 class="woo-tag"><i>Last of the Big Tuskers</i><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
         </li> -->
 
         <li class="post-1506 has-post-thumbnail">
@@ -109,7 +109,7 @@
 
           <a href="satao/"><h5 class="woo-title">Satao</h5></a>
           <h5 class="woo-description">Tsavo East National Park, Kenya</h5>
-          <h5 class="woo-tag"><em>Last of the Big Tuskers</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
+          <h5 class="woo-tag"><i>Last of the Big Tuskers</i><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
 
         </li>
 
@@ -129,7 +129,7 @@
 
           <a href="tim-and-craig/"><h5 class="woo-title">Tim &amp; Craig</h5></a>
           <h5 class="woo-description">Amboseli National Park, Kenya</h5>
-          <h5 class="woo-tag"><em>Last of the Big Tuskers</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
+          <h5 class="woo-tag"><i>Last of the Big Tuskers</i><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
 
         </li>
 
@@ -144,7 +144,7 @@
 
           <a href="craig/"><h5 class="woo-title">Craig</h5></a>
           <h5 class="woo-description">Amboseli National Park, Kenya</h5>
-          <h5 class="woo-tag"><em>Last of the Big Tuskers</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
+          <h5 class="woo-tag"><i>Last of the Big Tuskers</i><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
 
         </li> -->
 
@@ -156,7 +156,7 @@
 
   <footer class="single">
     <div class="quote">
-      <p class="small"><sup>1</sup> <em>Last of the Big Tuskers</em> (2018)&mdash;art of the film collection is a limited edition run of one hundred (100) numbered gicl&eacute;e prints.<font class="fr">&nbsp;&#92;&nbsp;La collection d'art du film est une s&eacute;rie en &eacute;dition limit&eacute;e d'une centaine de tirages gicl&eacute;es.</font></p>
+      <p class="small"><sup>1</sup> <i>Last of the Big Tuskers</i> (2018)&mdash;art of the film collection is a limited edition run of one hundred (100) numbered gicl&eacute;e prints.<font class="fr">&nbsp;&#92;&nbsp;La collection d'art du film est une s&eacute;rie en &eacute;dition limit&eacute;e d'une centaine de tirages gicl&eacute;es.</font></p>
 
       <!-- Fine art print, printed on acid-free archival paper with unprinted / white borders around the edge for safe handling and to allow for framing options after delivery to you. -->
 
