--- a/boutique/medium/giclee/satao/index.html
+++ b/boutique/medium/giclee/satao/index.html
@@ -27,7 +27,7 @@
       <li class="crumb dark logo"><a href="../../../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb dark"><a href="../../../" title="Animat Habitat boutique.">Boutique</a></li>
       <li class="crumb dark"><a href="../" title="Animat Habitat boutique. Gicl&eacute;e prints. &ndash;&nbsp;Gicl&eacute;es.">Gicl&eacute;e</a></li>
-      <li class="crumb active dark"><a><em>Satao</em></a></li>
+      <li class="crumb active dark"><a><i>Satao</i></a></li>
       <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
       <li class="right thin dark"><a class="title" onclick="toggle_currency();">
         <font class="paypal-ca"><b class="overscore">CA</b>&nbsp;&#92;&nbsp;US</font>
@@ -63,7 +63,7 @@
       <div class="clear-bottom">
         <a onclick="toggle_preview();">
           <img alt="Last of the Big Tuskers (2018) &ndash; Satao [thumbnail]" class="matte matte-fold" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.satao.c.300-180.jpg" />
-          <p class="gutter-side text-right"><em>Satao</em> &ndash; Tsavo East National Park, Kenya (digital paint, 2018) &copy;&nbsp;Dane&nbsp;Aleksander</p>
+          <p class="gutter-side text-right"><i>Satao</i> &ndash; Tsavo East National Park, Kenya (digital paint, 2018) &copy;&nbsp;Dane&nbsp;Aleksander</p>
 
         </a>
       </div>
@@ -77,13 +77,13 @@
       <div>
         <h5 class="color tag"><a class="overscore" onclick="toggle_meta();">Digital Painting</a><font class="fr">&nbsp;&#92;&nbsp;Peinture num&egrave;rique</font></h5>
         <div class="clear" id="p-meta">
-          <p class="small">Art of<font class="fr">&nbsp;&#92;&nbsp;de</font> <em>Last of the Big Tuskers</em> (2018).</p>
+          <p class="small">Art of<font class="fr">&nbsp;&#92;&nbsp;de</font> <i>Last of the Big Tuskers</i> (2018).</p>
 
         </div>
         <h5 class="author">Art by<font class="fr">&nbsp;&#92;&nbsp;par</font> Dane Aleksander.</h5>
         <p>Printed in Canada with archival pigment on acid-free archival paper.<font class="fr">&nbsp;&#92;&nbsp;Tirage pigmentaire d'archivage sur papier d'archivage sans acide imprim&eacute; au Canada.</font></p>
 
-        <p class="linebreak">&ldquo;Satao&rdquo; is one of a collection of digital paintings painted in the making of <em>Last of the Big Tuskers</em> (documentary film, 2018). This collection of digital paintings is printed in limited edition as archival pigment printson acid-free archival paper, and printed with a half-inch unprinted matte to allow for framing options and safe handling. The archival pigment prints are available in two sizes.<font class="fr">&nbsp;&#92;&nbsp;&laquo;&nbsp;Satao&nbsp;&raquo; fait partie d'une collection de peintures num&eacute;riques peintes lors de la r&eacute;alisation du film documentaire <em>Last of the Big Tuskers</em>. Cette peinture num&eacute;rique est imprim&eacute; en &eacute;dition limit&eacute;e en tant que tirages pigmentaires d'archives sur papier d'archivage sans acide, et c'est imprim&eacute; avec une mate de demi-pouce non imprim&eacute;e pour permettre une manipulation en toute s&eacute;curit&eacute; ainsi que des options de cadrage. Les tirages pigmentaires d'archives sont disponibles en deux tailles.</font></p>
+        <p class="linebreak">&ldquo;Satao&rdquo; is one of a collection of digital paintings painted in the making of <i>Last of the Big Tuskers</i> (documentary film, 2018). This collection of digital paintings is printed in limited edition as archival pigment printson acid-free archival paper, and printed with a half-inch unprinted matte to allow for framing options and safe handling. The archival pigment prints are available in two sizes.<font class="fr">&nbsp;&#92;&nbsp;&laquo;&nbsp;Satao&nbsp;&raquo; fait partie d'une collection de peintures num&eacute;riques peintes lors de la r&eacute;alisation du film documentaire <i>Last of the Big Tuskers</i>. Cette peinture num&eacute;rique est imprim&eacute; en &eacute;dition limit&eacute;e en tant que tirages pigmentaires d'archives sur papier d'archivage sans acide, et c'est imprim&eacute; avec une mate de demi-pouce non imprim&eacute;e pour permettre une manipulation en toute s&eacute;curit&eacute; ainsi que des options de cadrage. Les tirages pigmentaires d'archives sont disponibles en deux tailles.</font></p>
 
       </div>
 
