--- a/c/index.html
+++ b/c/index.html
@@ -31,17 +31,17 @@
   <nav>
     <ul class="page">
       <li class="crumb dark logo"><a href="../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
-      <li class="crumb active dark"><a><em>Terms</em></a></li>
+      <li class="crumb active dark"><a><i>Terms</i></a></li>
     </ul>
   </nav>
 
   <section>
     <article>
       <div>
-        <h4 class="letterhead"><em>v1.2&mdash;2018.09</em></h4>
-        <p><em>In terms hereunder any article, graphic, motion graphic, picture, motion picture, image, video, audio, related project resource or digital representation of the material, with reference to each individual asset as well as to the project as a whole, (<font class="color">&ldquo;</font>Art<font class="color">&rdquo;</font>) produced by an original author (<font class="color">&ldquo;</font>Artist<font class="color">&rdquo;</font>) and showcased on a domain namespace managed at Animat Habitat (<font class="color">&ldquo;</font>Animat Webitat<font class="color">&rdquo;</font>), which include the official website(s) of the organization [<a href="//animathabitat.ca" target="_blank" title="Animat Habitat societ&amacr;s.">animathabitat.ca</a>, <a href="//animathabitat.com" target="_blank" title="Animat Habitat boutique.">animathabitat.com</a> and <a href="//animathabitat.org" target="_blank" title="Animat Habitat">animathabitat.org</a>] as well as the portfolio and project website(s) represented by founder of the organization, Dane Aleksander [<a href="//bigtuskers.com" target="_blank" title="Last of the Big Tuskers / A film by James Currie.">bigtuskers.com</a>, <s>danealeksander.ca</s>, <s>lifeasplay.ca</s>, <a href="//periwinkle.blue" target="_blank" title="&hellip;terribly patial to the periwinkle blue.">periwinkle.blue</a>]; and, the individual who, or organization on whose behalf, has browsed Animat Webitat, or who has received express permission from Artist to exercise use of copyrighted material (<font class="color">&ldquo;</font>You<font class="color">&rdquo;</font>).</em></p>
+        <h4 class="letterhead"><i>v1.2&mdash;2018.09</i></h4>
+        <p><i>In terms hereunder any article, graphic, motion graphic, picture, motion picture, image, video, audio, related project resource or digital representation of the material, with reference to each individual asset as well as to the project as a whole, (<font class="color">&ldquo;</font>Art<font class="color">&rdquo;</font>) produced by an original author (<font class="color">&ldquo;</font>Artist<font class="color">&rdquo;</font>) and showcased on a domain namespace managed at Animat Habitat (<font class="color">&ldquo;</font>Animat Webitat<font class="color">&rdquo;</font>), which include the official website(s) of the organization [<a href="//animathabitat.ca" target="_blank" title="Animat Habitat societ&amacr;s.">animathabitat.ca</a>, <a href="//animathabitat.com" target="_blank" title="Animat Habitat boutique.">animathabitat.com</a> and <a href="//animathabitat.org" target="_blank" title="Animat Habitat">animathabitat.org</a>] as well as the portfolio and project website(s) represented by founder of the organization, Dane Aleksander [<a href="//bigtuskers.com" target="_blank" title="Last of the Big Tuskers / A film by James Currie.">bigtuskers.com</a>, <s>danealeksander.ca</s>, <s>lifeasplay.ca</s>, <a href="//periwinkle.blue" target="_blank" title="&hellip;terribly patial to the periwinkle blue.">periwinkle.blue</a>]; and, the individual who, or organization on whose behalf, has browsed Animat Webitat, or who has received express permission from Artist to exercise use of copyrighted material (<font class="color">&ldquo;</font>You<font class="color">&rdquo;</font>).</i></p>
 
-        <p class="linebreak lineend"><em>In the interpretation of these terms and conditions, words in the singular may include the plural and vice-versa.</em></p>
+        <p class="linebreak lineend"><i>In the interpretation of these terms and conditions, words in the singular may include the plural and vice-versa.</i></p>
 
         <pre class="thin"></pre>
 
@@ -89,9 +89,9 @@
 
         <pre class="thin"></pre>
 
-        <!-- <p class="linebreak"><em>Updated: September 2018. View the <a href="2015-09/" title="Animat Habitat terms of access. 1.1">previous version</a>.</em></p> -->
+        <!-- <p class="linebreak"><i>Updated: September 2018. View the <a href="2015-09/" title="Animat Habitat terms of access. 1.1">previous version</a>.</i></p> -->
 
-        <p class="linebreak"><em>Terms may be updated without notice at the discretion of Animat Habitat. Access to Animat Webitat is permitted on a temporary basis; access to part or all of Animat Webitat may for any reason at any time or for any period be protected, restricted or revoked.</em></p>
+        <p class="linebreak"><i>Terms may be updated without notice at the discretion of Animat Habitat. Access to Animat Webitat is permitted on a temporary basis; access to part or all of Animat Webitat may for any reason at any time or for any period be protected, restricted or revoked.</i></p>
       </div>
 
     </article><br class="clear">
