--- a/c/privacy-policy/index.html
+++ b/c/privacy-policy/index.html
@@ -25,17 +25,17 @@
     <ul class="page">
       <li class="crumb dark logo"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb dark"><a href="../" title="Animat Habitat terms of access.">Terms</a></li>
-      <li class="crumb active dark"><a><em>Privacy Policy</em></a></li>
+      <li class="crumb active dark"><a><i>Privacy Policy</i></a></li>
     </ul>
   </nav>
 
   <section>
     <article>
       <div>
-        <h4 class="letterhead"><em>v1.0&mdash;2018.09</em></h4>
-        <p><em>In terms hereunder any reference to &ldquo;Animat Webitat&rdquo; and &ldquo;You&rdquo; shall be as defined in <a href="../" title="Animat Habitat terms of access.">Terms of Access</a>.</em></p>
-        <p class="linebreak"><em>The one reference to &ldquo;Animat Boutique&rdquo; shall be as defined in <a href="../terms-of-purchase/" title="Animat Habitat terms of purchase.">Terms of Purchase</a>.</em></p>
-        <p class="linebreak lineend"><em>Animat Boutique is subject to added terms of use: <a href="../terms-of-use/" title="Animat Habitat terms of use.">Terms of Use</a>.</em></p>
+        <h4 class="letterhead"><i>v1.0&mdash;2018.09</i></h4>
+        <p><i>In terms hereunder any reference to &ldquo;Animat Webitat&rdquo; and &ldquo;You&rdquo; shall be as defined in <a href="../" title="Animat Habitat terms of access.">Terms of Access</a>.</i></p>
+        <p class="linebreak"><i>The one reference to &ldquo;Animat Boutique&rdquo; shall be as defined in <a href="../terms-of-purchase/" title="Animat Habitat terms of purchase.">Terms of Purchase</a>.</i></p>
+        <p class="linebreak lineend"><i>Animat Boutique is subject to added terms of use: <a href="../terms-of-use/" title="Animat Habitat terms of use.">Terms of Use</a>.</i></p>
 
         <pre class="thin"></pre>
 
@@ -75,7 +75,7 @@
 
         <pre class="thin"></pre>
 
-        <p class="linebreak"><em>Terms may be updated without notice at the discretion of Animat Habitat.</em></p>
+        <p class="linebreak"><i>Terms may be updated without notice at the discretion of Animat Habitat.</i></p>
       </div>
 
     </article><br class="clear">
