--- a/c/terms-of-purchase/index.html
+++ b/c/terms-of-purchase/index.html
@@ -27,17 +27,17 @@
         <a href="../../" title="Animat Habitat">
           <img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb dark"><a href="../" title="Animat Habitat terms of access.">Terms</a></li>
-      <li class="crumb active dark"><a><em>Terms of Purchase</em></a></li>
+      <li class="crumb active dark"><a><i>Terms of Purchase</i></a></li>
     </ul>
   </nav>
 
   <section>
     <article>
       <div>
-        <h4 class="letterhead"><em>v1.0&mdash;2018.09</em></h4>
-        <p><em>In terms hereunder any reference to &ldquo;Art&rdquo;, &ldquo;Artist&rdquo;, &ldquo;Animat Webitat&rdquo; and &ldquo;You&rdquo; shall be as defined in <a href="../" title="Animat Habitat terms of access.">Terms of Access</a>. Terms of Purchase are subject to Terms of Access, which together with terms hereunder apply on an indefinite basis, and are affected only if explicitly addressed in the receipt of purchase. These terms constitute the purchase agreement (<font class="color">&ldquo;</font>Agreement<font class="color">&rdquo;</font>) for the sale of Art (<font class="color">&ldquo;</font>Order<font class="color">&rdquo;</font>) as between the purchaser ("Purchaser") and the gift shop at Animat Habitat (<font class="color">&ldquo;</font>Animat Boutique<font class="color">&rdquo;</font>), which is the subdomain: &ldquo;shop&rdquo;, of the official website(s) of the organization [<a href="//animathabitat.com" target="_blank" title="Animat Habitat">animathabitat.com</a> and <a href="//animathabitat.org" target="_blank" title="Animat Habitat">animathabitat.org</a>].</em></p>
+        <h4 class="letterhead"><i>v1.0&mdash;2018.09</i></h4>
+        <p><i>In terms hereunder any reference to &ldquo;Art&rdquo;, &ldquo;Artist&rdquo;, &ldquo;Animat Webitat&rdquo; and &ldquo;You&rdquo; shall be as defined in <a href="../" title="Animat Habitat terms of access.">Terms of Access</a>. Terms of Purchase are subject to Terms of Access, which together with terms hereunder apply on an indefinite basis, and are affected only if explicitly addressed in the receipt of purchase. These terms constitute the purchase agreement (<font class="color">&ldquo;</font>Agreement<font class="color">&rdquo;</font>) for the sale of Art (<font class="color">&ldquo;</font>Order<font class="color">&rdquo;</font>) as between the purchaser ("Purchaser") and the gift shop at Animat Habitat (<font class="color">&ldquo;</font>Animat Boutique<font class="color">&rdquo;</font>), which is the subdomain: &ldquo;shop&rdquo;, of the official website(s) of the organization [<a href="//animathabitat.com" target="_blank" title="Animat Habitat">animathabitat.com</a> and <a href="//animathabitat.org" target="_blank" title="Animat Habitat">animathabitat.org</a>].</i></p>
 
-        <p class="linebreak"><em>In the interpretation of these terms and conditions, words in the singular may include the plural and vice-versa.</em></p>
+        <p class="linebreak"><i>In the interpretation of these terms and conditions, words in the singular may include the plural and vice-versa.</i></p>
 
         <div>
           <h5 class="linebreak">Index;</h5>
@@ -141,7 +141,7 @@
 
         <pre class="thin"></pre>
 
-        <p class="linebreak"><em>Terms may be updated without notice; use of the version validated at the time of Order may continue to apply to past purchase(s).</em></p>
+        <p class="linebreak"><i>Terms may be updated without notice; use of the version validated at the time of Order may continue to apply to past purchase(s).</i></p>
 
         <h5 class="linebreak">Thanks for supporting wildlife art with your Order from Animat Habitat boutique.</h5>
       </div>
