--- a/c/terms-of-use/index.html
+++ b/c/terms-of-use/index.html
@@ -25,20 +25,20 @@
     <ul class="page">
       <li class="crumb dark logo"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.light.svg" /></a></li>
       <li class="crumb dark"><a href="../" title="Animat Habitat terms of access.">Terms</a></li>
-      <li class="crumb active dark"><a><em>Terms of Use</em></a></li>
+      <li class="crumb active dark"><a><i>Terms of Use</i></a></li>
     </ul>
   </nav>
 
   <section>
     <article>
       <div>
-        <h4 class="letterhead"><em>v1.0&mdash;2018.09</em></h4>
-        <p class="lineend"><em>In terms hereunder any reference to &ldquo;Animat Webitat&rdquo;, &ldquo;Animat Boutique&rdquo;, &ldquo;Order&rdquo;, &ldquo;Purchaser&rdquo; and &ldquo;You&rdquo; shall be as defined in <a href="../terms-of-purchase/" title="Animat Habitat terms of purchase.">Terms of Purchase</a>.</em></p>
+        <h4 class="letterhead"><i>v1.0&mdash;2018.09</i></h4>
+        <p class="lineend"><i>In terms hereunder any reference to &ldquo;Animat Webitat&rdquo;, &ldquo;Animat Boutique&rdquo;, &ldquo;Order&rdquo;, &ldquo;Purchaser&rdquo; and &ldquo;You&rdquo; shall be as defined in <a href="../terms-of-purchase/" title="Animat Habitat terms of purchase.">Terms of Purchase</a>.</i></p>
 
         <pre class="thin"></pre>
 
         <h3 class="linebreak">Privacy Policy</h3>
-        <p><em>Terms hereunder extend the Cookie Policy [4.2] and Data Policy [4.4] of Animat Webitat <a href="../privacy-policy/" title="Animat Habitat terms of use.">Terms of Use</a>.</em></p>
+        <p><i>Terms hereunder extend the Cookie Policy [4.2] and Data Policy [4.4] of Animat Webitat <a href="../privacy-policy/" title="Animat Habitat terms of use.">Terms of Use</a>.</i></p>
 
         <h5 class="linebreak title" id="membership-cookies"><b>4.2.1</b> Membership Cookies</h5>
         <p>If You have an account at Animat Webitat and You log in to Animat Boutique, Animat Boutique will set a temporary cookie to determine if the browser accepts cookies. This cookie contains no personal data and is discarded once You close the browser. If You log in, and if the browser accepts cookies, Animat Boutique will also set up several cookies to save account login information and screen display choices. Login cookies last for two (2) days, and screen options cookies last for two (2) weeks. If You select &ldquo;Remember Me&rdquo;, account login will persist for two (2) weeks. If You log out of an Animat Webitat account, the login cookies will be removed.</p>
@@ -84,7 +84,7 @@
 
         <pre class="thin"></pre>
 
-        <p class="linebreak"><em>Terms may be updated without notice at the discretion of Animat Habitat.</em></p>
+        <p class="linebreak"><i>Terms may be updated without notice at the discretion of Animat Habitat.</i></p>
       </div>
 
     </article><br class="clear">
