--- a/conservation/africa-afrique/index.html
+++ b/conservation/africa-afrique/index.html
@@ -25,8 +25,8 @@
   <nav>
     <ul class="page">
       <li class="crumb dark logo"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
-      <li class="crumb dark"><a href="../" title="Animat Habitat conservation.">Conservation</em></a></li>
-      <li class="crumb active dark"><a><em>Africa</em></a></li>
+      <li class="crumb dark"><a href="../" title="Animat Habitat conservation.">Conservation</a></li>
+      <li class="crumb active dark"><a><i>Africa</i></a></li>
       <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
     </ul>
   </nav>
@@ -37,7 +37,7 @@
       <div>
         <h4 class="letterhead title thin">Africa<font class="fr">&nbsp;&#92;&nbsp;Afrique</font></h4>
         <h2>Crossroads<font class="fr">&nbsp;&#92;&nbsp;Crois&eacute;e</font></h2>
-        <p><em>Africa is at a crossroads, on the brink of possibilities. Therein &ndash; in the nature conservancies, in the national parks and in the corridors in-between &ndash; is hope for African wildlife. There is still time to make a difference. Animat Habitat has recognized select wildlife conservation foundations and funds making a difference in Africa.</em><font class="fr">&nbsp;&#92;&nbsp;<em>L'Afrique est &agrave; la crois&eacute;e des chemins, au bord des possibilit&eacute;s. L&agrave; &ndash; dans les r&eacute;serves naturelles, dans les parcs nationaux et dans les couloirs interm&eacute;diaires &ndash; il y a de l'espoir pour la faune africaine. C'est encore possible de faire une diff&eacute;rence. Animat Habitat a reconnu les fondations et les fiducies de conservation de la nature qui font une diff&eacute;rence en Afrique.</em></font></p>
+        <p><i>Africa is at a crossroads, on the brink of possibilities. Therein &ndash; in the nature conservancies, in the national parks and in the corridors in-between &ndash; is hope for African wildlife. There is still time to make a difference. Animat Habitat has recognized select wildlife conservation foundations and funds making a difference in Africa.</i><font class="fr">&nbsp;&#92;&nbsp;<i>L'Afrique est &agrave; la crois&eacute;e des chemins, au bord des possibilit&eacute;s. L&agrave; &ndash; dans les r&eacute;serves naturelles, dans les parcs nationaux et dans les couloirs interm&eacute;diaires &ndash; il y a de l'espoir pour la faune africaine. C'est encore possible de faire une diff&eacute;rence. Animat Habitat a reconnu les fondations et les fiducies de conservation de la nature qui font une diff&eacute;rence en Afrique.</i></font></p>
 
       </div>
 
@@ -47,13 +47,13 @@
           <div>
             <h5><font class="overscore">Conservation in Eastern Africa</font><font class="fr">&nbsp;&#92;&nbsp;en Afrique de l'est</font></h5>
             <ul>
-              <li><a href="../../url/-org/elephanttrust/" title="Amboseli Trust for Elephants" target="_blank" rel="noopener">Amboseli Trust for Elephants</a>, <em>Kenya</em></li>
-              <li><a href="../../url/-org/biglife/" title="Big Life Foundation" target="_blank" rel="noopener">Big Life Foundation</a>, <em>Kenya</em></li>
-              <li><a href="../../url/-org/lewa/" title="LEWA" target="_blank" rel="noopener">Lewa Wildlife Conservancy</a>, <em>Kenya</em></li>
-              <li><a href="../../url/-org/mountkenyatrust/" title="Mount Kenya Trust" target="_blank" rel="noopener">Mount Kenya Trust</a>, <em>Kenya</em></li>
-              <li><a href="../../url/-org/reteti/" title="Reteti Elephant Sanctuary" target="_blank" rel="noopener">Reteti Elephant Sanctuary</a>, <em>Kenya</em></li>
-              <li><a href="../../url/-org/sheldrickwildlifetrust/" title="SWT" target="_blank" rel="noopener">Sheldrick Wildlife Trust</a>, <em>Kenya</em></li>
-              <li><a href="../../url/-org/tsavotrust/" title="Tsavo Trust" target="_blank" rel="noopener">Tsavo Trust</a>, <em>Kenya</em></li>
+              <li><a href="../../url/-org/elephanttrust/" title="Amboseli Trust for Elephants" target="_blank" rel="noopener">Amboseli Trust for Elephants</a>, <i>Kenya</i></li>
+              <li><a href="../../url/-org/biglife/" title="Big Life Foundation" target="_blank" rel="noopener">Big Life Foundation</a>, <i>Kenya</i></li>
+              <li><a href="../../url/-org/lewa/" title="LEWA" target="_blank" rel="noopener">Lewa Wildlife Conservancy</a>, <i>Kenya</i></li>
+              <li><a href="../../url/-org/mountkenyatrust/" title="Mount Kenya Trust" target="_blank" rel="noopener">Mount Kenya Trust</a>, <i>Kenya</i></li>
+              <li><a href="../../url/-org/reteti/" title="Reteti Elephant Sanctuary" target="_blank" rel="noopener">Reteti Elephant Sanctuary</a>, <i>Kenya</i></li>
+              <li><a href="../../url/-org/sheldrickwildlifetrust/" title="SWT" target="_blank" rel="noopener">Sheldrick Wildlife Trust</a>, <i>Kenya</i></li>
+              <li><a href="../../url/-org/tsavotrust/" title="Tsavo Trust" target="_blank" rel="noopener">Tsavo Trust</a>, <i>Kenya</i></li>
 
             </ul>
 
@@ -62,10 +62,10 @@
           <!-- <div class="quote">
             <h5><font class="overscore">Research in Eastern Africa</font><font class="fr">&nbsp;&#92;&nbsp;Recherche en Afrique de l'est</font></h5>
             <ul>
-              <li><a href="../../url/elephantsandbees-com/" title="Save the Elephants / The Elephants and Bees Project" target="_blank" rel="noopener">The Elephants and Bees Project</a>, <em>Kenya</em></li>
-              <li><a href="../../url/-org/elephantvoices/" title="Elephant Voices" target="_blank" rel="noopener">Elephant Voices</a>, <em>Kenya</em></li>
-              <li><a href="../../url/-org/maraelephantproject/" title="Save the Elephants / The Mara Elephant Project" target="_blank" rel="noopener">Mara Elephant Project</a>, <em>Kenya</em></li>
-              <li><a href="../../url/-org/wildnatureinstitute/" title="WNI" target="_blank" rel="noopener">Wild Nature Institute</a>, <em>Tanzania</em></li>
+              <li><a href="../../url/elephantsandbees-com/" title="Save the Elephants / The Elephants and Bees Project" target="_blank" rel="noopener">The Elephants and Bees Project</a>, <i>Kenya</i></li>
+              <li><a href="../../url/-org/elephantvoices/" title="Elephant Voices" target="_blank" rel="noopener">Elephant Voices</a>, <i>Kenya</i></li>
+              <li><a href="../../url/-org/maraelephantproject/" title="Save the Elephants / The Mara Elephant Project" target="_blank" rel="noopener">Mara Elephant Project</a>, <i>Kenya</i></li>
+              <li><a href="../../url/-org/wildnatureinstitute/" title="WNI" target="_blank" rel="noopener">Wild Nature Institute</a>, <i>Tanzania</i></li>
             </ul>
 
           </div> -->
@@ -73,10 +73,10 @@
           <div>
             <h5><font class="overscore">Conservation in Southern Africa</font><font class="fr">&nbsp;&#92;&nbsp;en Afrique du sud</font></h5>
             <ul>
-              <li><a href="../../url/-org/ehranamibia/" title="EHRA" target="_blank" rel="noopener">Elephant-Human Relations Aid</a>, <em>Namibia</em></li>
-              <li><a href="../../url/-org/elephantswithoutborders/" title="EWB" target="_blank" rel="noopener">Elephants Without Borders</a>, <em>Botswana</em></li>
-              <li><a href="../../url/-org/nationalgeographic-okavango/" title="NGOWP" target="_blank" rel="noopener">Okavango Wilderness Project</a>, <em>Angola</em>, <em>Botswana</em></li>
-              <li><a href="../../url/-org/zamsoc/" title="The Zambezi Society" target="_blank" rel="noopener">The Zambezi Society</a>, <em>Zimbabwe</em></li>
+              <li><a href="../../url/-org/ehranamibia/" title="EHRA" target="_blank" rel="noopener">Elephant-Human Relations Aid</a>, <i>Namibia</i></li>
+              <li><a href="../../url/-org/elephantswithoutborders/" title="EWB" target="_blank" rel="noopener">Elephants Without Borders</a>, <i>Botswana</i></li>
+              <li><a href="../../url/-org/nationalgeographic-okavango/" title="NGOWP" target="_blank" rel="noopener">Okavango Wilderness Project</a>, <i>Angola</i>, <i>Botswana</i></li>
+              <li><a href="../../url/-org/zamsoc/" title="The Zambezi Society" target="_blank" rel="noopener">The Zambezi Society</a>, <i>Zimbabwe</i></li>
 
             </ul>
 
@@ -104,15 +104,15 @@
 
             <h5><font class="overscore">Eastern Africa</font><font class="fr">&nbsp;&#92;&nbsp;Afrique de l'Est</font></h5>
             <ul>
-              <li><a href="../../url/whc/1060/" title="UNESCO #1060" target="_blank" rel="noopener">Kenya Lake System in the Great Rift Valley</a>, <em>Kenya</em></li>
-              <li><a href="../../url/whc/403/" title="UNESCO #403" target="_blank" rel="noopener">Kilimanjaro National Park</a>, <em>Tanzania</em></li>
-              <li><a href="../../url/whc/289/" title="UNESCO #289" target="_blank" rel="noopener">Lake Malawi National Park</a>, <em>Malawi</em></li>
-              <li><a href="../../url/whc/801/" title="UNESCO #801" target="_blank" rel="noopener">Lake Turkana National Parks</a>, <em>Kenya</em></li>
-              <li><a href="../../url/whc/800/" title="UNESCO #800" target="_blank" rel="noopener">Mount Kenya National Park and Natural Forest</a>, <em>Kenya</em></li>
-              <li><a href="../../url/whc/39/" title="UNESCO #39" target="_blank" rel="noopener">Ngorongoro Conservation Area</a>, <em>Tanzania</em></li>
-              <li><a href="../../url/whc/199/" title="UNESCO #199" target="_blank" rel="noopener">Selous Game Reserve</a><sup>&nbsp;[<a class="button" onclick="fn();" title="Game Reserve">1</a>]</sup>, <em>Tanzania</em></li>
-              <li><a href="../../url/whc/156/" title="UNESCO #156" target="_blank" rel="noopener">Serengeti National Park</a>, <em>Tanzania</em></li>
-              <li><a href="../../url/whc/5515/" title="UNESCO #5515" target="_blank" rel="noopener">Tsavo National Parks and Chyulu Hills Complex</a>, <em>Kenya</em></li>
+              <li><a href="../../url/whc/1060/" title="UNESCO #1060" target="_blank" rel="noopener">Kenya Lake System in the Great Rift Valley</a>, <i>Kenya</i></li>
+              <li><a href="../../url/whc/403/" title="UNESCO #403" target="_blank" rel="noopener">Kilimanjaro National Park</a>, <i>Tanzania</i></li>
+              <li><a href="../../url/whc/289/" title="UNESCO #289" target="_blank" rel="noopener">Lake Malawi National Park</a>, <i>Malawi</i></li>
+              <li><a href="../../url/whc/801/" title="UNESCO #801" target="_blank" rel="noopener">Lake Turkana National Parks</a>, <i>Kenya</i></li>
+              <li><a href="../../url/whc/800/" title="UNESCO #800" target="_blank" rel="noopener">Mount Kenya National Park and Natural Forest</a>, <i>Kenya</i></li>
+              <li><a href="../../url/whc/39/" title="UNESCO #39" target="_blank" rel="noopener">Ngorongoro Conservation Area</a>, <i>Tanzania</i></li>
+              <li><a href="../../url/whc/199/" title="UNESCO #199" target="_blank" rel="noopener">Selous Game Reserve</a><sup>&nbsp;[<a class="button" onclick="fn();" title="Game Reserve">1</a>]</sup>, <i>Tanzania</i></li>
+              <li><a href="../../url/whc/156/" title="UNESCO #156" target="_blank" rel="noopener">Serengeti National Park</a>, <i>Tanzania</i></li>
+              <li><a href="../../url/whc/5515/" title="UNESCO #5515" target="_blank" rel="noopener">Tsavo National Parks and Chyulu Hills Complex</a>, <i>Kenya</i></li>
             </ul>
 
             <p class="linebreak small">More habitats protected by <a href="../../url/-go-ke/kws/" title="Kenya Wildlife Service" target="_blank" rel="noopener">Kenya Wildlife Service</a>, Kenya.<font class="fr">&nbsp;&#92;&nbsp;Plus d'habitats prot&eacute;g&eacute;es au Kenya.</font></p>
@@ -214,15 +214,15 @@
           <div>
             <h5><font class="overscore">Southern Africa</font><font class="fr">&nbsp;&#92;&nbsp;Afrique du sud</font></h5>
             <ul>
-              <li><a href="../../url/whc/914/" title="UNESCO #914" target="_blank" rel="noopener">iSimangaliso Wetland Park</a>, <em>South Africa</em></li>
-              <li><a href="../../url/whc/985/" title="UNESCO #985" target="_blank" rel="noopener">Maloti-Drakensberg Park</a>, <em>Lesotho</em>, <em>South Africa</em></li>
-              <li><a href="../../url/whc/302/" title="UNESCO #302" target="_blank" rel="noopener">Mana Pools National Park</a>, <em>Zimbabwe</em></li>
-              <li><a href="../../url/whc/1099/" title="UNESCO #1099" target="_blank" rel="noopener">Mapungubwe Cultural Landscape</a>, <em>South Africa</em></li>
-              <li><a href="../../url/whc/509/" title="UNESCO #509" target="_blank" rel="noopener">Mosi-oa-Tunya &ndash; Victoria Falls</a>, <em>Zambia</em>, <em>Zimbabwe</em></li>
-              <li><a href="../../url/whc/1432/" title="UNESCO #1432" target="_blank" rel="noopener">Okavango Delta</a>, <em>Angola</em>, <em>Botswana</em>, <em>Namibia</em></li>
-              <li>Torra Conservancy near <a href="../../url/whc/1255/" title="UNESCO #1255" target="_blank" rel="noopener">Twyfelfontein</a>, <em>Namibia</em></li>
+              <li><a href="../../url/whc/914/" title="UNESCO #914" target="_blank" rel="noopener">iSimangaliso Wetland Park</a>, <i>South Africa</i></li>
+              <li><a href="../../url/whc/985/" title="UNESCO #985" target="_blank" rel="noopener">Maloti-Drakensberg Park</a>, <i>Lesotho</i>, <i>South Africa</i></li>
+              <li><a href="../../url/whc/302/" title="UNESCO #302" target="_blank" rel="noopener">Mana Pools National Park</a>, <i>Zimbabwe</i></li>
+              <li><a href="../../url/whc/1099/" title="UNESCO #1099" target="_blank" rel="noopener">Mapungubwe Cultural Landscape</a>, <i>South Africa</i></li>
+              <li><a href="../../url/whc/509/" title="UNESCO #509" target="_blank" rel="noopener">Mosi-oa-Tunya &ndash; Victoria Falls</a>, <i>Zambia</i>, <i>Zimbabwe</i></li>
+              <li><a href="../../url/whc/1432/" title="UNESCO #1432" target="_blank" rel="noopener">Okavango Delta</a>, <i>Angola</i>, <i>Botswana</i>, <i>Namibia</i></li>
+              <li>Torra Conservancy near <a href="../../url/whc/1255/" title="UNESCO #1255" target="_blank" rel="noopener">Twyfelfontein</a>, <i>Namibia</i></li>
 
-              <!-- <li><a href="../../url/whc/306/" title="UNESCO #306" target="_blank" rel="noopener">Matobo Hills</a>, <em>Zimbabwe</em></li> -->
+              <!-- <li><a href="../../url/whc/306/" title="UNESCO #306" target="_blank" rel="noopener">Matobo Hills</a>, <i>Zimbabwe</i></li> -->
 
             </ul>
 
@@ -376,7 +376,7 @@
 
       <p class="small">This list was updated September 2019.<font class="fr">&nbsp;&#92;&nbsp;Cette liste a &eacute;t&eacute; mise &agrave; jour en septembre 2019.</font></p>
 
-      <p class="linebreak small"><sup>1</sup> A &ldquo;game reserve&rdquo; is a protected area where animals are seen on safari as well as are hunted for <em>sport</em>. In a game reserve, animal populations are controlled in their natural habitat. And so their ecosystems are conserved. A reserve that prohibits hunting may be considered a &ldquo;nature reserve&rdquo;.<font class="fr">&nbsp;&#92;&nbsp;Une &laquo;&nbsp;r&eacute;serve de chasse&nbsp;&raquo; est une zone prot&eacute;g&eacute;e o&ugrave; les animaux sont vus en safari ainsi que chass&eacute;s pour le <em>sport</em>. Dans une r&eacute;serve de chasse, les populations animales sont contr&ocirc;l&eacute;es dans leur habitat naturel. Et ainsi leurs &eacute;cosyst&egrave;mes sont conserv&eacute;s. Une r&eacute;serve qui interdit la chasse peut &ecirc;tre consid&eacute;r&eacute;e comme une &laquo;&nbsp;r&eacute;serve naturelle&nbsp;&raquo;&nbsp;.</font></p>
+      <p class="linebreak small"><sup>1</sup> A &ldquo;game reserve&rdquo; is a protected area where animals are seen on safari as well as are hunted for <i>sport</i>. In a game reserve, animal populations are controlled in their natural habitat. And so their ecosystems are conserved. A reserve that prohibits hunting may be considered a &ldquo;nature reserve&rdquo;.<font class="fr">&nbsp;&#92;&nbsp;Une &laquo;&nbsp;r&eacute;serve de chasse&nbsp;&raquo; est une zone prot&eacute;g&eacute;e o&ugrave; les animaux sont vus en safari ainsi que chass&eacute;s pour le <i>sport</i>. Dans une r&eacute;serve de chasse, les populations animales sont contr&ocirc;l&eacute;es dans leur habitat naturel. Et ainsi leurs &eacute;cosyst&egrave;mes sont conserv&eacute;s. Une r&eacute;serve qui interdit la chasse peut &ecirc;tre consid&eacute;r&eacute;e comme une &laquo;&nbsp;r&eacute;serve naturelle&nbsp;&raquo;&nbsp;.</font></p>
       <p class="small"><sup>2</sup> Kavango-Zambezi Transfrontier Conservation Area (KAZA TFCA) is an agreement signed by Angola, Botswana, Namibia, Zambia and Zimbabwe, binding these countries to create a transfrontier park straddling their national borders.<font class="fr">&nbsp;&#92;&nbsp;KAZA TFCA s'agit d'un accord sign&eacute; par l'Angola, le Botswana, la Namibie, la Zambie et le Zimbabwe, liant ces pays &agrave; la cr&eacute;ation d'un parc transfrontalier &agrave; cheval sur leurs fronti&egrave;res nationales.</font></p>
       <p class="small"><sup>3</sup> The Union of Comoros and republics of Madagascar, Mauritius, Seychelles are part of SADC but the islands are unique habitats and unlisted here. The United Republic of Tanzania and republics of Malawi, Mozambique are part of SADC and are listed here in East Africa. The republics of Gabon, Congo, Uganda are part of SADC and are (to be) listed here in Central Africa.<font class="fr">&nbsp;&#92;&nbsp;L'Union des Comores et les r&eacute;publiques de Madagascar, Maurice, Seychelles font partie de SADC, mais ces &icirc;les sont des habitats uniques et non r&eacute;pertori&eacute;s ici. La R&eacute;publique-Unie de Tanzanie et les r&eacute;publiques du Malawi et du Mozambique font partie de SADC et sont r&eacute;pertori&eacute;es ici en Afrique de l'Est. Les r&eacute;publiques du Gabon, du Congo et de l'Ouganda font partie de SADC et sont r&eacute;pertori&eacute;es ici en Afrique centrale.</font></p>
 
