--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   <div class="clear color">
     <section class="single">
       <div class="quote text-center">
-        <h4>Animat<font class="thin">&mdash;<em>verb</em> in 3sg., indicative present, from the Latin</font> anim&amacr;re <font class="text-quote">&ldquo;</font><font class="thin">to&nbsp;animate</font><font class="text-quote">&rdquo;</font><font class="thin">,</font> <font class="text-quote">&ldquo;</font><font class="thin">to&nbsp;give&nbsp;life&nbsp;to</font><font class="text-quote">&rdquo;</font><font class="thin">.</font><font class="fr"><font class="thin">&nbsp;&#92;&nbsp;<em>verbe</em> en 3&nbsp;sg., pr&egrave;sent de l'indicatif, du Latin</font> anim&amacr;re &laquo;&nbsp;<font class="thin">animer</font>&nbsp;&raquo;&nbsp;<font class="thin">,</font> &laquo;&nbsp;<font class="thin">donner la vie</font>&nbsp;&raquo;&nbsp;<font class="thin">.</font></font></h4>
+        <h4>Animat<font class="thin">&mdash;<i>verb</i> in 3sg., indicative present, from the Latin</font> anim&amacr;re <font class="text-quote">&ldquo;</font><font class="thin">to&nbsp;animate</font><font class="text-quote">&rdquo;</font><font class="thin">,</font> <font class="text-quote">&ldquo;</font><font class="thin">to&nbsp;give&nbsp;life&nbsp;to</font><font class="text-quote">&rdquo;</font><font class="thin">.</font><font class="fr"><font class="thin">&nbsp;&#92;&nbsp;<i>verbe</i> en 3&nbsp;sg., pr&egrave;sent de l'indicatif, du Latin</font> anim&amacr;re &laquo;&nbsp;<font class="thin">animer</font>&nbsp;&raquo;&nbsp;<font class="thin">,</font> &laquo;&nbsp;<font class="thin">donner la vie</font>&nbsp;&raquo;&nbsp;<font class="thin">.</font></font></h4>
 
         <!-- anim&otilde; -->
 
@@ -156,7 +156,7 @@
 
         <pre class="thin"></pre>
 
-        <p class="linebreak small">Animat Habitat official website designed and developed by <a href="url/git/danealeksander/" title="Dane Aleksander, graphic artist.">Dane Aleksander</a> with the open-source WordPress and Automattic WooCommerce information architecture, with Google Fonts: <em>Oswald</em> [Extra-Light, Medium], and then archived with GitHub pages.<font class="fr">&nbsp;&#92;&nbsp;Animat Habitat site officiel con&ccedil;u et d&eacute;velopp&eacute; par Dane Aleksander avec l'architecture d'information WordPress et WooCommerce, avec Google Fonts, et puis archiv&eacute; avec les pages GitHub.</font></p>
+        <p class="linebreak small">Animat Habitat official website designed and developed by <a href="url/git/danealeksander/" title="Dane Aleksander, graphic artist.">Dane Aleksander</a> with the open-source WordPress and Automattic WooCommerce information architecture, with Google Fonts: <i>Oswald</i> [Extra-Light, Medium], and then archived with GitHub pages.<font class="fr">&nbsp;&#92;&nbsp;Animat Habitat site officiel con&ccedil;u et d&eacute;velopp&eacute; par Dane Aleksander avec l'architecture d'information WordPress et WooCommerce, avec Google Fonts, et puis archiv&eacute; avec les pages GitHub.</font></p>
 
         <!-- The protected areas of this website not served on GitHub are hosted in Canada powered by one-hundred percent renewable energy. <a href="//whc.ca/green-hosting/" title="WHC / Green Web Hosting in Canada" target="_blank" rel="noopener">Green web hosting in Canada</a>. -->
 
