--- a/patron/index.html
+++ b/patron/index.html
@@ -30,7 +30,7 @@
   <nav>
     <ul class="page">
       <li class="crumb dark logo"><a href="../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
-      <li class="crumb active dark"><a><em>Patron</em></a></li>
+      <li class="crumb active dark"><a><i>Patron</i></a></li>
       <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
       <!-- <li class="right thin dark"><a class="title" onclick="toggle_currency();">
         <font class="paypal-ca"><b class="overscore">CA</b>&nbsp;&#92;&nbsp;US</font>
@@ -56,7 +56,7 @@
 
         <div class="clear-top">
           <a href="https://www.paypal.com/donate/?hosted_button_id=D9WFX6HM23ZYC" title="PayPal / En / Animat Habitat" rel="noopener"><button>Donate<font class="fr">&#92;&nbsp;Don</font> <font class="small">CA$<sup>&nbsp;[1]</sup></font></button></a>
-          <p class="linebreak lineend">Support independent art at Animat Habitat with any amount you can <em>with no strings attached</em>.<font class="fr">&nbsp;&#92;&nbsp;Soutenez l'art ind&eacute;pendant chez Animat Habitat avec tout montant que vous le pouvez sans aucune condition.</font></p>
+          <p class="linebreak lineend">Support independent art at Animat Habitat with any amount you can <i>with no strings attached</i>.<font class="fr">&nbsp;&#92;&nbsp;Soutenez l'art ind&eacute;pendant chez Animat Habitat avec tout montant que vous le pouvez sans aucune condition.</font></p>
 
           <pre class="thin"></pre>
 
@@ -97,7 +97,7 @@
 
         <div>
           <h5 class="scene-one">Scene One Selections<font class="fr">&nbsp;&#92;&nbsp;S&eacute;lections de sc&egrave;ne un</font></h5>
-          <p class="lineend">Through sales of <em>White Elephant</em> and the art of <em>White Elephant</em>, this first scene at Animat Habitat has directed more than CA$3,000 to 5 conservation projects across 3 countries&mdash;to date.<font class="fr">&nbsp;&#92;&nbsp;Gr&acirc;ce aux ventes de <em>&Eacute;l&eacute;phant blanc</em> et de l'art de <em>&Eacute;l&eacute;phant blanc</em>, cette premier sc&egrave;ne chez Animat Habitat &agrave; pu diriger de plus de 3 000 $ CA &agrave; 5 projets dans 3 pays &mdash; &agrave; ce jour.</font></p>
+          <p class="lineend">Through sales of <i>White Elephant</i> and the art of <i>White Elephant</i>, this first scene at Animat Habitat has directed more than CA$3,000 to 5 conservation projects across 3 countries&mdash;to date.<font class="fr">&nbsp;&#92;&nbsp;Gr&acirc;ce aux ventes de <i>&Eacute;l&eacute;phant blanc</i> et de l'art de <i>&Eacute;l&eacute;phant blanc</i>, cette premier sc&egrave;ne chez Animat Habitat &agrave; pu diriger de plus de 3 000 $ CA &agrave; 5 projets dans 3 pays &mdash; &agrave; ce jour.</font></p>
 
         </div>
 
