--- a/scene/one/book-of-ella-3/index.html
+++ b/scene/one/book-of-ella-3/index.html
@@ -32,7 +32,7 @@
     <ul class="page">
       <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
       <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><em>Book of Ella Ch&nbsp;3</em></a></li>
+      <li class="crumb scene scene-one"><a><i>Book of Ella Ch&nbsp;3</i></a></li>
     </ul>
   </nav>
 
@@ -43,15 +43,15 @@
         <h2 class="scene-one">Book of Ella Ch&nbsp;3: Comic Panel</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, art director at Animat Habitat.</h5>
 
-        <p class="linebreak"><em>This article is continued from Book of Ella Ch&nbsp;2: <a href="../book-of-ella-2/">Comics</a>. That second chapter was an introduction to the elements of comics inherent to the visual storytelling medium, which have transcended the history of the art form. This next chapter shares a closer look at two core elements in the art of comics: the frame and the letter.</em></p>
+        <p class="linebreak"><i>This article is continued from Book of Ella Ch&nbsp;2: <a href="../book-of-ella-2/">Comics</a>. That second chapter was an introduction to the elements of comics inherent to the visual storytelling medium, which have transcended the history of the art form. This next chapter shares a closer look at two core elements in the art of comics: the frame and the letter.</i></p>
 
         <h3 class="linebreak">The Window</h3>
-        <p>The panel in a comic book functions as a stage for the artist to direct the point of view in each moment. The border of a panel acts as a peripheral field of view of the reader, and the shape of a panel outlined by the border &ndash; or the absence of a border &ndash; is an opportunity to establish perspective for each scene. A narrow panel may evoke the feeling of limitation or confinement, whereas a wide panel may evoke the feeling of open space or escape. The shape of the panel in combination with perspective may be used to promote these primitive feelings because we are responsive to our environment. This directionality enables the artist to clarify action in the story, to orient the reader in place and time, and to evoke an emotional response and so on. There is an entire chapter about the frame in <em>Comics and Sequential Art: Principles and Practices from the Legendary Cartoonist</em>, in which Will Eisner shares a perspective of the comic panel in a literal context:</p>
+        <p>The panel in a comic book functions as a stage for the artist to direct the point of view in each moment. The border of a panel acts as a peripheral field of view of the reader, and the shape of a panel outlined by the border &ndash; or the absence of a border &ndash; is an opportunity to establish perspective for each scene. A narrow panel may evoke the feeling of limitation or confinement, whereas a wide panel may evoke the feeling of open space or escape. The shape of the panel in combination with perspective may be used to promote these primitive feelings because we are responsive to our environment. This directionality enables the artist to clarify action in the story, to orient the reader in place and time, and to evoke an emotional response and so on. There is an entire chapter about the frame in <i>Comics and Sequential Art: Principles and Practices from the Legendary Cartoonist</i>, in which Will Eisner shares a perspective of the comic panel in a literal context:</p>
 
         <div>
           <p><b class="color">&ldquo;</b>In comics, there are actually two frames: the total page (or screen, in digital comics), on which there are any number of panels, and the panel itself, within which the narrative action unfolds. They are the controlling devices in sequential art.<b class="color">&rdquo;</b></p>
 
-          <!-- &mdash;&nbsp;Eisner, 2008, <em>Comics and Sequential Art</em>, p&nbsp;41 -->
+          <!-- &mdash;&nbsp;Eisner, 2008, <i>Comics and Sequential Art</i>, p&nbsp;41 -->
 
         </div>
       </div>
@@ -73,7 +73,7 @@
         </div>
 
       </div>
-      <p class="gutter-side text-right"><em>Daytripper</em> (2010) Ch&nbsp;1-3 &copy; Fabio Moon, Gabriel Ba</p>
+      <p class="gutter-side text-right"><i>Daytripper</i> (2010) Ch&nbsp;1-3 &copy; Fabio Moon, Gabriel Ba</p>
 
       <div>
         <p> ypically rectangular, historically rigid and repeated as a natural extension of the comic strip format of the newspapers wherein the medium arrived. The most basic panel layout, in which both the shape and size of the panel stay the same, acts to contain the view of the reader, nothing more. The added framing of a single, consistent perspective in a sequence of similar panels is a way to make clear the change in the scene within the panel.</p>
@@ -92,7 +92,7 @@
         </div>
 
       </div>
-      <p class="gutter-side text-right"><em>Daytripper</em> p&nbsp;83-84 (2010) &copy; Fabio Moon, Gabriel Ba</p>
+      <p class="gutter-side text-right"><i>Daytripper</i> p&nbsp;83-84 (2010) &copy; Fabio Moon, Gabriel Ba</p>
 
       <div>
         <p>Alternatively, the comic book &ndash; and the digital comic &ndash; has a capacity to apply panels with angled borders and cut-out shapes that may suggest a context, an inflection or a movement in a sequence of a story. Eisner also looked at the comic panel in a figurative context:</p>
@@ -100,7 +100,7 @@
         <div>
           <p><b class="color">&ldquo;</b>[The shape of a frame] can be used to convey something of the dimension of sound and emotional climate in which the action occurs, as well as contributing to the atmosphere of the page as a whole.<b class="color">&rdquo;</b></p>
 
-          <!-- &mdash;&nbsp;Eisner, 2008, <em>Comics and Sequential Art</em>, p&nbsp;45-->
+          <!-- &mdash;&nbsp;Eisner, 2008, <i>Comics and Sequential Art</i>, p&nbsp;45-->
 
         </div>
       </div>
@@ -122,7 +122,7 @@
         </div>
 
       </div>
-      <p class="gutter-side text-right"><em>Daytripper</em> (2010) Ch&nbsp;4, 6, 8 &copy; Fabio Moon, Gabriel Ba</p>
+      <p class="gutter-side text-right"><i>Daytripper</i> (2010) Ch&nbsp;4, 6, 8 &copy; Fabio Moon, Gabriel Ba</p>
 
       <div>
         <p>The use of cut-out shapes in panel borders may extend the function of a simple container-panel to take on the quality of a narrative symbol. The shape of a panel may represent a character, an idea or a setting in the story. A panel border may also function as a structural element in the scene within, or without, the panel itself. Examples include architectural frames such as archways, doorways, tunnels, windows or foreground silhouettes such as mountains, rocks, trees and waterways that may contribute to the shape of a comic book panel, and that are also a structure in the setting of the story.</p>
@@ -135,12 +135,12 @@
       </div>
 
       <img alt="Buz Sawyer &ndash; (January 16, 1978) &copy; Roy Crane" src="https://animathabitat.com/inc/img/~01/comic/~roy-crane/buz-sawyer.1978.01.16.jpg" />
-      <p class="gutter-side text-right"><em>Buz Sawyer</em> (January 16, 1978) &copy; Roy Crane</p>
+      <p class="gutter-side text-right"><i>Buz Sawyer</i> (January 16, 1978) &copy; Roy Crane</p>
 
       <div>
-        <p>Roy Crane, the creator of <em>Captain Easy</em> (comic strip, July 1933 - October 1988) and <em>Buz Sawyer</em> (comic strip, November 1943 - October 1989), is credited as a pioneer of the use of onomatopoeic sound effects in comics, adding &ldquo;bam&rdquo; and &ldquo;pow&rdquo; and so on to what had previously been an almost entirely written word.</p>
+        <p>Roy Crane, the creator of <i>Captain Easy</i> (comic strip, July 1933 - October 1988) and <i>Buz Sawyer</i> (comic strip, November 1943 - October 1989), is credited as a pioneer of the use of onomatopoeic sound effects in comics, adding &ldquo;bam&rdquo; and &ldquo;pow&rdquo; and so on to what had previously been an almost entirely written word.</p>
 
-        <p class="linebreak">The onomatopoeia has developed as a special effect in comics, in particular as a result of the picture-like immediacy of short bold words. Lettering and a handwritten script has a capacity to evoke sound with variation in letterforms, as well as a capacity to arrange letters to simulate sounds with words not found in the dictionary. Furthermore, art in comics has a capacity to appropriate the pictorial quality of letters and words. Scott McCloud wrote about the power of the word in comics in his book about making comics, <em>Making Comics: Storytelling Secrets of Comics, Manga and Graphic Novels</em> (2006). McCloud wrote:</p>
+        <p class="linebreak">The onomatopoeia has developed as a special effect in comics, in particular as a result of the picture-like immediacy of short bold words. Lettering and a handwritten script has a capacity to evoke sound with variation in letterforms, as well as a capacity to arrange letters to simulate sounds with words not found in the dictionary. Furthermore, art in comics has a capacity to appropriate the pictorial quality of letters and words. Scott McCloud wrote about the power of the word in comics in his book about making comics, <i>Making Comics: Storytelling Secrets of Comics, Manga and Graphic Novels</i> (2006). McCloud wrote:</p>
 
         <div>
           <p><b class="color">&ldquo;</b>Words evoke feelings, sensations and abstract concepts[.] They are comics' only traditional link with the warmth and nuance of human life. They offer comics creators the opportunity to compress and expand time, and when words and pictures work interdependently, they can create new ideas and sensations beyond the sum of their parts.<b class="color">&rdquo;</b></p>
@@ -156,12 +156,12 @@
 
         <p>McCloud then looked to &ldquo;language&rdquo; down that logical line, and explained that the written word is, &ldquo;abstracting even further from resemblance but still maintaining meaning.&rdquo;</p>
 
-        <p class="linebreak">Scott McCloud: <em>The Visual Magic of Comics</em> (talk, 2005) and <em>Making Comics</em> (book, 2006) by Scott McCloud are just two articles in a career crammed with contribution to the advancement of the craft of making comics. A final example, here, another celebrated cartoon and cartoonist: <em>Garfield</em> (comic strip, 1978 - present) was created by Jim Davis. The comic strip is one of the most widely syndicated in the world. Finally, where is there space for elephants? <em>White Elephant</em> is designed as a single issue comic book, and as part of a limited series of scenes in wildlife art. The limited series is developed with a companion app to move the art and story into a widely shared marketplace: the App Store, and the art and story is directed to maintain a connection with the history of comics.</p>
+        <p class="linebreak">Scott McCloud: <i>The Visual Magic of Comics</i> (talk, 2005) and <i>Making Comics</i> (book, 2006) by Scott McCloud are just two articles in a career crammed with contribution to the advancement of the craft of making comics. A final example, here, another celebrated cartoon and cartoonist: <i>Garfield</i> (comic strip, 1978 - present) was created by Jim Davis. The comic strip is one of the most widely syndicated in the world. Finally, where is there space for elephants? <i>White Elephant</i> is designed as a single issue comic book, and as part of a limited series of scenes in wildlife art. The limited series is developed with a companion app to move the art and story into a widely shared marketplace: the App Store, and the art and story is directed to maintain a connection with the history of comics.</p>
 
       </div>
 
       <img alt="Garfield &ndash; (February 19, 2009) &copy; Jim Davis" src="https://animathabitat.com/inc/img/~01/comic/~jim-davis/garfield.2009.02.19.gif" />
-      <p class="gutter-side text-right lineend"><em>Garfield</em> (February 19, 2009) &copy; Jim Davis [<a href="../../../url/www/garfield/" rel="noopener" target="_blank" title="Jim Davis / Garfield">garfield.com</a>]</p>
+      <p class="gutter-side text-right lineend"><i>Garfield</i> (February 19, 2009) &copy; Jim Davis [<a href="../../../url/www/garfield/" rel="noopener" target="_blank" title="Jim Davis / Garfield">garfield.com</a>]</p>
 
       <div class="clear">
         <div id="register-toggle">
@@ -172,7 +172,7 @@
         <div class="clear toggle-off" id="register" spellcheck="false">
           <div>
             <h3><a onclick="toggle_register();">&minus;</a></h3><h3>Behind-the-scenes&hellip;</h3>
-            <p>Register your name and address to get behind-the-scenes of <em>White Elephant</em>.</p>
+            <p>Register your name and address to get behind-the-scenes of <i>White Elephant</i>.</p>
 
           </div>
 
