--- a/scene/one/book-of-ella/index.html
+++ b/scene/one/book-of-ella/index.html
@@ -30,14 +30,14 @@
     <ul class="page">
       <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
       <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><em>Book of Ella Ch&nbsp;1</em></a></li>
+      <li class="crumb scene scene-one"><a><i>Book of Ella Ch&nbsp;1</i></a></li>
     </ul>
   </nav>
 
   <section>
     <article>
       <img alt="White Elephant graphic: change. (2013) &copy; Animat Habitat" src="../../../inc/img/01/we.cover.banner.jpg" />
-      <p class="text-right gutter-side"><em>White Elephant</em> cover art: CHANGE (2015)</p>
+      <p class="text-right gutter-side"><i>White Elephant</i> cover art: CHANGE (2015)</p>
 
       <div>
         <h4 class="letterhead thin">March 2015</h4>
@@ -46,68 +46,68 @@
       </div>
 
       <div>
-        <p><em>A story communicates an idea. A story relates another perspective. A story makes life easier to comprehend. Stories help us to learn context, to unearth hidden meanings, and to see patterns in our lives. Stories remind us of where we started and of how we are all connected. Stories can travel through centuries in time, and for a group of people, they exist as a common point of reference. We use stories to examine problems in our community and to exercise constraints of our technology. We are inspired by stories. We change behavior based on stories. Telling stories is the most important thing that we do to communicate with ourselves. Storytelling is what makes us human. We want to hear a story, and we want to be known in a story. We tell a story everyday with our lives.</em></p>
+        <p><i>A story communicates an idea. A story relates another perspective. A story makes life easier to comprehend. Stories help us to learn context, to unearth hidden meanings, and to see patterns in our lives. Stories remind us of where we started and of how we are all connected. Stories can travel through centuries in time, and for a group of people, they exist as a common point of reference. We use stories to examine problems in our community and to exercise constraints of our technology. We are inspired by stories. We change behavior based on stories. Telling stories is the most important thing that we do to communicate with ourselves. Storytelling is what makes us human. We want to hear a story, and we want to be known in a story. We tell a story everyday with our lives.</i></p>
 
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>Story is all around us. It's everywhere. It's your life. Whatever happens to you throughout the day, throughout the week, that's part of it&mdash;that's part of story. How you live &ndash; and who you are &ndash; is part of the process.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Rick del Carmen. (2016) <em>The Bancroft Brothers Animation Podcast</em>, e/64: &lsquo;The Bancroft Bros. talk with the Del Carmen Bros: Animation in the Family.&rsquo; Creative Talent Network (CTN) Burbank, California</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>Story is all around us. It's everywhere. It's your life. Whatever happens to you throughout the day, throughout the week, that's part of it&mdash;that's part of story. How you live &ndash; and who you are &ndash; is part of the process.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Rick del Carmen. (2016) <i>The Bancroft Brothers Animation Podcast</i>, e/64: &lsquo;The Bancroft Bros. talk with the Del Carmen Bros: Animation in the Family.&rsquo; Creative Talent Network (CTN) Burbank, California</font></h4>
 
       </div>
 
       <div>
-        <p><em>Story can also be entertainment. Story can be an escape: happily forever after. A story exists in its medium, and nonetheless the medium manifests a window back into our world. The story of <a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un."><em>White Elephant</em></a> is, likewise, a reflection of the way our world once was &ndash; and in part still is &ndash; wild.</em></p>
+        <p><i>Story can also be entertainment. Story can be an escape: happily forever after. A story exists in its medium, and nonetheless the medium manifests a window back into our world. The story of <a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un."><i>White Elephant</i></a> is, likewise, a reflection of the way our world once was &ndash; and in part still is &ndash; wild.</i></p>
 
         <h3 class="linebreak">Cover Story</h3>
         <p>Story at Animat Habitat is written in the context of challenges that people must take on today and in future&mdash;in a moment in human history when we have clear cause-and-effect on the state of the natural world. We the people enact our story together. Action!</p>
 
-        <p class="linebreak">This is a story we all must want to be a part of&mdash;a story to save the wild places and the animals that live in them. This is the story Animat Habitat is established to tell. The <em>White Elephant</em> comic book and companion app invites people to change the way we look at elephants.</p>
+        <p class="linebreak">This is a story we all must want to be a part of&mdash;a story to save the wild places and the animals that live in them. This is the story Animat Habitat is established to tell. The <i>White Elephant</i> comic book and companion app invites people to change the way we look at elephants.</p>
 
         <h3 class="linebreak">Cover Art</h3>
         <p>Elephants are a keystone species in Africa. They are a symbol of the continent. Elephants are also a universal symbol of strength and wisdom. This may be why they appear in the logos of so many corporations, and why projects uniquely focused on such an iconic animal must establish an alternate graphic style in order to stand out from the crowd.</p>
 
-        <p class="linebreak">The cover art for the <em>White Elephant</em> companion app is designed, in part, to distance itself from the clarity that comes with the line-art and vector graphics that saturate the world of icons and logos and so on. The visual development of the cover art is drawn instead from the texture that appears in the pages of the <em>White Elephant</em> comic book. The image of a sand-covered and partially dissolved silhouette of an elephant distances itself from a corporate interpretation, and moves closer to a graphic abstraction of the plight of elephants in the wild. This cover image better represents the strength and wisdom that is faded, year after year, lost with the tens of thousands of elephants killed for their tusks.</p>
+        <p class="linebreak">The cover art for the <i>White Elephant</i> companion app is designed, in part, to distance itself from the clarity that comes with the line-art and vector graphics that saturate the world of icons and logos and so on. The visual development of the cover art is drawn instead from the texture that appears in the pages of the <i>White Elephant</i> comic book. The image of a sand-covered and partially dissolved silhouette of an elephant distances itself from a corporate interpretation, and moves closer to a graphic abstraction of the plight of elephants in the wild. This cover image better represents the strength and wisdom that is faded, year after year, lost with the tens of thousands of elephants killed for their tusks.</p>
 
-        <p class="linebreak">In a book of photographs of the life cycle of elephants: <em>Remembering Elephants</em> (2016) by Margot Raggett, in the foreword written by Virginia McKenna OBE, co-founder of Born Free Foundation, the tragedy of the ivory trade is put simply: &ldquo;The life of all elephants simply must have more significance than a small sad fragment of carved tusk on someone's mantelpiece.&rdquo;</p>
+        <p class="linebreak">In a book of photographs of the life cycle of elephants: <i>Remembering Elephants</i> (2016) by Margot Raggett, in the foreword written by Virginia McKenna OBE, co-founder of Born Free Foundation, the tragedy of the ivory trade is put simply: &ldquo;The life of all elephants simply must have more significance than a small sad fragment of carved tusk on someone's mantelpiece.&rdquo;</p>
 
-        <p class="linebreak">The goal of the app and the art of <em>White Elephant</em> is simply to share this message: <em>No one in the world needs an elephant tusk other than an elephant.</em></p>
+        <p class="linebreak">The goal of the app and the art of <i>White Elephant</i> is simply to share this message: <i>No one in the world needs an elephant tusk other than an elephant.</i></p>
 
-        <p class="linebreak"><em>Please pass the message along.</em></p>
+        <p class="linebreak"><i>Please pass the message along.</i></p>
 
       </div>
 
       <img alt="White Elephant app cover art (2014) &copy; Animat Habitat" src="../../../inc/img/01/we.app.art.jpg" />
-      <p class="text-right gutter-side"><em>White Elephant</em> cover art (2015)</p>
+      <p class="text-right gutter-side"><i>White Elephant</i> cover art (2015)</p>
 
       <div>
-        <p><em>And one more thing&hellip;</em></p>
+        <p><i>And one more thing&hellip;</i></p>
 
         <h3 class="linebreak">Cover Art Cards</h3>
-        <p>An edition of the cover art was designed especially to send as personalized thank-you cards to those who have supported the art, code and music behind <em>White Elephant</em>. When the companion app for <em>White Elephant</em> is in the app store, both the digital and the printed version of the cover art will be an image tracker for an augmented reality experience. <a href="../companion-app-augmented-reality/" title="What is Augmented Reality?">What is Augmented Reality?</a> <em>There is an article about that.</em></p>
+        <p>An edition of the cover art was designed especially to send as personalized thank-you cards to those who have supported the art, code and music behind <i>White Elephant</i>. When the companion app for <i>White Elephant</i> is in the app store, both the digital and the printed version of the cover art will be an image tracker for an augmented reality experience. <a href="../companion-app-augmented-reality/" title="What is Augmented Reality?">What is Augmented Reality?</a> <i>There is an article about that.</i></p>
 
       </div>
 
       <!-- <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>There’s no cause for alarm. I chopped just one tree. I am doing no harm. I’m being quite useful.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Dr Seuss: The Once-ler, <em>The Lorax</em> (1971)</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>There’s no cause for alarm. I chopped just one tree. I am doing no harm. I’m being quite useful.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Dr Seuss: The Once-ler, <i>The Lorax</i> (1971)</font></h4>
 
       </div> -->
 
       <img alt="White Elephant Thank you cards. (2014) &copy; Animat Habitat" src="../../../inc/img/01/we.cover.card.banner.jpg" />
-      <p class="text-right gutter-side"><em>White Elephant</em> cover art cards (2015)</p>
+      <p class="text-right gutter-side"><i>White Elephant</i> cover art cards (2015)</p>
 
       <div>
         <p>It matters that the things we make are meaningful to see, to hear, to touch and so on. Also, it matters that the things we make are responsibly sourced with regard to the use of materials. In the case of a simple card, the type of ink on the type of paper are design choices that manifest in the tactile quality of an art reproduction in print. And so for this first print campaign at Animat Habitat, the studio has made the conservative and more traditional selection of one hundred per cent recycled, uncoated white paper. This selection prioritized all eco-friendly practices over any aesthetic properties. The brown base color of kraft paper was of particular interest, however, printing on white card-stock offered more dynamic range to more accurately represent the digital artwork in print. The dynamic range is important for creating a high contrast image, and points of high contrast are important for image tracking in augmented reality. The uncoated card-stock is another design choice with a bias to an augmented reality experience &ndash; namely to the lens of a camera in an iPhone &ndash; as the matte finish of the card-stock helps to reduce glare on the surface of the image.</p>
 
-        <p class="linebreak">The limited edition <em>White Elephant</em> cover art card was printed in Canada on recycled paper with non-toxic, vegetable-based inks. This direction is based on a history of the impact of the pulp and paper industry, &ldquo;the third largest industrial polluter to air, water and land in both Canada and the United States.&rdquo; And so that is why the design office at Animat Habitat has carefully considered the card-stock and printing solution to be sent as thank-you cards for your support.<sup>&nbsp;[<a class="button" onclick="fn();" title="Green Printer">1</a>]</sup></p>
+        <p class="linebreak">The limited edition <i>White Elephant</i> cover art card was printed in Canada on recycled paper with non-toxic, vegetable-based inks. This direction is based on a history of the impact of the pulp and paper industry, &ldquo;the third largest industrial polluter to air, water and land in both Canada and the United States.&rdquo; And so that is why the design office at Animat Habitat has carefully considered the card-stock and printing solution to be sent as thank-you cards for your support.<sup>&nbsp;[<a class="button" onclick="fn();" title="Green Printer">1</a>]</sup></p>
 
-        <p class="linebreak"><em>Thank you for joining the journey here at the start of the story.</em></p>
+        <p class="linebreak"><i>Thank you for joining the journey here at the start of the story.</i></p>
 
-        <p class="linebreak"><em>The cards have been printed in limited edition for journeyers who get behind the scenes in wildlife art. This invitation extends to everyone who shares our love for wildlife and for a world with elephants. <em>White Elephant</em> cover art cards are available while limited editions last. Register for membership: <a onclick="to_register();">Behind the Scenes</a>.</em></p>
+        <p class="linebreak"><i>The cards have been printed in limited edition for journeyers who get behind the scenes in wildlife art. This invitation extends to everyone who shares our love for wildlife and for a world with elephants. <i>White Elephant</i> cover art cards are available while limited editions last. Register for membership: <a onclick="to_register();">Behind the Scenes</a>.</i></p>
 
       </div>
 
       <!-- <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>I speak for the trees, for the trees have no tongues.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Dr Seuss: The Lorax, <em>The Lorax</em> (1971)</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>I speak for the trees, for the trees have no tongues.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Dr Seuss: The Lorax, <i>The Lorax</i> (1971)</font></h4>
 
       </div> -->
 
@@ -128,7 +128,7 @@
         <div class="clear toggle-off" id="register" spellcheck="false">
           <div>
             <h3><a onclick="toggle_register();">&minus;</a></h3><h3>Behind-the-scenes&hellip;</h3>
-            <p>Register your name and address to get behind-the-scenes of <em>White Elephant</em>.</p>
+            <p>Register your name and address to get behind-the-scenes of <i>White Elephant</i>.</p>
 
           </div>
 
