--- a/scene/one/elephant-conservation-africa/index.html
+++ b/scene/one/elephant-conservation-africa/index.html
@@ -32,7 +32,7 @@
     <ul class="page">
       <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
       <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><em>Elephant Conservation in Africa</em></a></li>
+      <li class="crumb scene scene-one"><a><i>Elephant Conservation in Africa</i></a></li>
     </ul>
   </nav>
 
@@ -43,9 +43,9 @@
         <h2 class="scene-one">Elephant Conservation in Africa</h2>
         <h5 class="author">Press secretary at Animat Habitat.</h5>
 
-        <p class="linebreak"><em>On June 15th, wildlife filmmaker Mark Deeble submitted a final chapter for the story of <a title="Mark Deeble / Satao &ndash; A Legend" href="../../../url/wp/markdeeble-satao-a-legend-2/" target="_blank" rel="noopener">Satao&mdash;a legend</a>. Thanks to Mark for sharing his account of the life and death of this magnificent bull elephant. Let the story of Satao be a chapter we learn from, and change the way we look at wildlife.</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Mark Deeble">1</a>]</sup></p>
+        <p class="linebreak"><i>On June 15th, wildlife filmmaker Mark Deeble submitted a final chapter for the story of <a title="Mark Deeble / Satao &ndash; A Legend" href="../../../url/wp/markdeeble-satao-a-legend-2/" target="_blank" rel="noopener">Satao&mdash;a legend</a>. Thanks to Mark for sharing his account of the life and death of this magnificent bull elephant. Let the story of Satao be a chapter we learn from, and change the way we look at wildlife.</i><sup>&nbsp;[<a class="button" onclick="fn();" title="Mark Deeble">1</a>]</sup></p>
 
-        <p class="linebreak"><em>Looking at Satao from a distance&mdash;from Canada, North America, it is unfair to place a value on such a loss for Kenya, and on such widespread biodiversity loss across Africa, without also addressing the impact of pollutants emitted and resources wasted by the rest of the world. This article points to Satao, as an ambassador for the crisis facing elephant conservation in Africa, and also to the ways the world can help create change from home.</em></p>
+        <p class="linebreak"><i>Looking at Satao from a distance&mdash;from Canada, North America, it is unfair to place a value on such a loss for Kenya, and on such widespread biodiversity loss across Africa, without also addressing the impact of pollutants emitted and resources wasted by the rest of the world. This article points to Satao, as an ambassador for the crisis facing elephant conservation in Africa, and also to the ways the world can help create change from home.</i></p>
       </div>
 
       <img alt="" src="https://animathabitat.com/inc/img/~01/photo/~mark-deeble/deeble.2014.satao.bull-drinking.png" />
@@ -69,12 +69,12 @@
       <div>
         <p>The Tsavo bull was killed for his ivory in late May 2014.</p>
 
-        <p class="linebreak"><em>Species loss is forever.</em> Still, research in remaining natural strongholds in particular in East Africa suggests actionable and collective solutions are possible. We can come together in support of conservationists working with and within local African communities to sustain and protect vital habitats and migratory routes. <a title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un." href="../"><em>White Elephant</em></a>&mdash;a comic book and a companion app in part aims to promote the work of select wildlife foundations, funds, organizations and trusts that create positive change in Africa for this iconic animal.</p>
+        <p class="linebreak"><i>Species loss is forever.</i> Still, research in remaining natural strongholds in particular in East Africa suggests actionable and collective solutions are possible. We can come together in support of conservationists working with and within local African communities to sustain and protect vital habitats and migratory routes. <a title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un." href="../"><i>White Elephant</i></a>&mdash;a comic book and a companion app in part aims to promote the work of select wildlife foundations, funds, organizations and trusts that create positive change in Africa for this iconic animal.</p>
 
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>Nature is beautiful, and artists who paint and photograph nature celebrate its gorgeous wonders. Nature, however, has its dark side: suffering and dying are part of reality for all living things. But the rate and degree of this in nature have been augmented by man’s actions, causing an alarming depletion of ecosystems and endangering the survival of entire species.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Robert Bateman. (2010) <em>New Works</em>, Artist's Statement p&nbsp;22. Greystone Books.</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>Nature is beautiful, and artists who paint and photograph nature celebrate its gorgeous wonders. Nature, however, has its dark side: suffering and dying are part of reality for all living things. But the rate and degree of this in nature have been augmented by man’s actions, causing an alarming depletion of ecosystems and endangering the survival of entire species.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Robert Bateman. (2010) <i>New Works</i>, Artist's Statement p&nbsp;22. Greystone Books.</font></h4>
       </div>
 
       <div class="clear">
@@ -87,7 +87,7 @@
 
       <div class="clear-top">
         <h3 class="linebreak">Change at Home</h3>
-        <p><em>Change starts at home.</em> It is in our power to encourage eco-friendly practices in our own communities, to help mitigate the collective human impact on the environment on a local scale, and to live more resourcefully on an individual basis. As we focus on making the best, and not simply the most, of the land we hold now, we can take the next steps together to make life sustainable for the generations to come.</p>
+        <p><i>Change starts at home.</i> It is in our power to encourage eco-friendly practices in our own communities, to help mitigate the collective human impact on the environment on a local scale, and to live more resourcefully on an individual basis. As we focus on making the best, and not simply the most, of the land we hold now, we can take the next steps together to make life sustainable for the generations to come.</p>
 
         <p class="linebreak">We can help by not continuing to uphold a system that chooses short-term, clear-cut-and-run profits over sustainable harvests. We can help by recognizing the damage caused by excessive and wasteful consumption. We can help by leaving some habitats as wilderness. We need to help by saving space for forests and jungles and waterways. Earth needs to have ecosystems that exist apart from people and away from the cities that have been raised on the natural resources that surround them.</p>
 
@@ -99,9 +99,9 @@
         <p class="linebreak">It is in this balance that our wild places can sustain human life with clean air and fresh water. The more we are aware of what we have &ndash; and of the value of what we have &ndash; both in terms of community and economy, the more we are going to be aware of what these wild places need and the better we can take care of what we have already taken. The actions we take today can positively change the future for our world with elephants.</p>
 
         <h3 class="linebreak">Change the Way We Look at Elephants</h3>
-        <p><em>Lust for ivory must end.</em> We can help by simply reconsidering what holds value in our lives. No example is more poignant than the seemingly archaic market for ivory trinkets. The poachers who kill more than thirty-thousand elephants each year forego long-term ecological and communal benefits in exchange for short-term gain to the benefit of a small group of criminals. Instead of such unworthy artifacts as ivory trinkets, we can help by upholding beauty in nature: a wonderful world with elephants.</p>
+        <p><i>Lust for ivory must end.</i> We can help by simply reconsidering what holds value in our lives. No example is more poignant than the seemingly archaic market for ivory trinkets. The poachers who kill more than thirty-thousand elephants each year forego long-term ecological and communal benefits in exchange for short-term gain to the benefit of a small group of criminals. Instead of such unworthy artifacts as ivory trinkets, we can help by upholding beauty in nature: a wonderful world with elephants.</p>
 
-        <p class="linebreak">In the lead up to the release of <em>White Elephant</em>, Animat Habitat aims to partner with conservation efforts on the ground in Africa, and to maintain a more complete listing of wildlife conservation parks and projects in a section of the website dedicated to information and resources. Here are short summaries of a small sample of forward-thinking foundations that have taken positive action for elephants, with an admitted bias to those that have provided further information on the Internet.</p>
+        <p class="linebreak">In the lead up to the release of <i>White Elephant</i>, Animat Habitat aims to partner with conservation efforts on the ground in Africa, and to maintain a more complete listing of wildlife conservation parks and projects in a section of the website dedicated to information and resources. Here are short summaries of a small sample of forward-thinking foundations that have taken positive action for elephants, with an admitted bias to those that have provided further information on the Internet.</p>
 
       </div>
 
@@ -143,7 +143,7 @@
         <div class="clear toggle-off" id="register" spellcheck="false">
           <div>
             <h3><a onclick="toggle_register();">&minus;</a></h3><h3>Behind-the-scenes&hellip;</h3>
-            <p>Register your name and address to get behind-the-scenes of <em>White Elephant</em>.</p>
+            <p>Register your name and address to get behind-the-scenes of <i>White Elephant</i>.</p>
 
           </div>
 
