--- a/scene/one/elephant-conservation-amboseli/index.html
+++ b/scene/one/elephant-conservation-amboseli/index.html
@@ -32,7 +32,7 @@
     <ul class="page">
       <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
       <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><em>Elephant Conservation in Amboseli</em></a></li>
+      <li class="crumb scene scene-one"><a><i>Elephant Conservation in Amboseli</i></a></li>
     </ul>
   </nav>
 
@@ -46,9 +46,9 @@
         <h2 class="scene-one">On this Earth</h2>
         <h5 class="author">Press secretary at Animat Habitat.</h5>
 
-        <p class="linebreak"><em>The making of <em>White Elephant</em> all began in summer of 2010</em>&mdash;<em>this was an animation class term project at the time, with a loose connection to Amboseli National Park. The Greater Amboseli ecosystem is a two million-acre area basking in the shadow of Mount Kilimanjaro, bordering southern Kenya and northern Tanzania. Amboseli is one of the richest wildlife areas that remain in Africa. The only connection to this animation project was a photograph. This is that photograph: this portrait of an elephant was applied as the front orthographic image plane in the making of a three-dimensional computer-generated model elephant, for example, for an animated short.</em></p>
+        <p class="linebreak"><i>The making of <i>White Elephant</i> all began in summer of 2010</i>&mdash;<i>this was an animation class term project at the time, with a loose connection to Amboseli National Park. The Greater Amboseli ecosystem is a two million-acre area basking in the shadow of Mount Kilimanjaro, bordering southern Kenya and northern Tanzania. Amboseli is one of the richest wildlife areas that remain in Africa. The only connection to this animation project was a photograph. This is that photograph: this portrait of an elephant was applied as the front orthographic image plane in the making of a three-dimensional computer-generated model elephant, for example, for an animated short.</i></p>
 
-        <p class="linebreak"><em>This project had not yet begun in July 2010 when, coincidentally, wildlife photographer Nick Brandt had returned to Amboseli. For much of the previous decade, Brandt had spent many months following the elephants there and, as a result, had the opportunity to come to know some of them intimately. This was one of those elephants: the image is simply striking. So much so that this image was used as reference for Ella, the model elephant, and was immediately recognized when a story of a pioneering conservation group &ndash; co-founded by a photographer inspired by wildlife in East Africa &ndash; featured photography of a similarly striking style. The name of this elephant was Igor. He lived largely in Amboseli. This photograph was taken in 2007 and indeed the photographer was the very same</em>&mdash;<em>the one and only Nick Brandt, now co-founder of Big Life Foundation. (This iconic image of Igor is a big part of the visual identity of Big Life Foundation.) The one and only Igor was killed by poachers for his ivory in 2009, two years after this photograph was taken. He was 49 years of age.</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Brandt, 2018">1</a>]</sup></p>
+        <p class="linebreak"><i>This project had not yet begun in July 2010 when, coincidentally, wildlife photographer Nick Brandt had returned to Amboseli. For much of the previous decade, Brandt had spent many months following the elephants there and, as a result, had the opportunity to come to know some of them intimately. This was one of those elephants: the image is simply striking. So much so that this image was used as reference for Ella, the model elephant, and was immediately recognized when a story of a pioneering conservation group &ndash; co-founded by a photographer inspired by wildlife in East Africa &ndash; featured photography of a similarly striking style. The name of this elephant was Igor. He lived largely in Amboseli. This photograph was taken in 2007 and indeed the photographer was the very same</i>&mdash;<i>the one and only Nick Brandt, now co-founder of Big Life Foundation. (This iconic image of Igor is a big part of the visual identity of Big Life Foundation.) The one and only Igor was killed by poachers for his ivory in 2009, two years after this photograph was taken. He was 49 years of age.</i><sup>&nbsp;[<a class="button" onclick="fn();" title="Brandt, 2018">1</a>]</sup></p>
 
       </div>
 
@@ -60,7 +60,7 @@
 
       <div class="clear-top">
         <h3 class="linebreak">Big Life in Kenya</h3>
-        <p>The way in which the photography of Nick Brandt has inspired the art of <em>White Elephant</em> is a microcosm of the way in which the wilderness in East Africa has inspired the work of Big Life Foundation (known as Big Life). Co-founded in 2010 by photographer Nick Brandt, conservationist Richard Bonham, and entrepreneur Tom Hill&mdash;Big Life is on the ground in East Africa, partnering with local communities to protect nature for the benefit of all. For almost a decade, Big Life has collaborated with local communities, partner NGOs, national parks and government agencies to protect over 1.6 million acres of wild lands from deforestation and overgrazing and so on, to sustain the rich wildlife in the Greater Amboseli ecosystem, including one of the last great populations of savanna elephants in Africa.</p>
+        <p>The way in which the photography of Nick Brandt has inspired the art of <i>White Elephant</i> is a microcosm of the way in which the wilderness in East Africa has inspired the work of Big Life Foundation (known as Big Life). Co-founded in 2010 by photographer Nick Brandt, conservationist Richard Bonham, and entrepreneur Tom Hill&mdash;Big Life is on the ground in East Africa, partnering with local communities to protect nature for the benefit of all. For almost a decade, Big Life has collaborated with local communities, partner NGOs, national parks and government agencies to protect over 1.6 million acres of wild lands from deforestation and overgrazing and so on, to sustain the rich wildlife in the Greater Amboseli ecosystem, including one of the last great populations of savanna elephants in Africa.</p>
 
         <p class="linebreak">In order to protect these elephants, Big Life has become the first organization to establish coordinated anti-poaching operations on both sides of the Kenya-Tanzania border. This has laid groundwork for a two-part land management plan, securing the remaining wild habitat areas in the Amboseli ecosystem and working with local communities to protect that land. The first part negotiates annual leases to hundreds of owners of 60-acre parcels of land located in the Kimana Corridor. These lease payments are intended to limit destructive development of the land, other than that which is compatible with conservation and pastoralism. The second involves working with local communities to protect strategically important wildlife corridors as well as valuable grazing lands to the local livestock economy. This protection can be achieved through the establishment of conservancies, with income-generating opportunities such as tourism. This partnership has pioneered the dangerous game of wildlife protection at Big Life.<sup>&nbsp;[<a class="button" onclick="fn();" title="Big Life, 2019">2</a>]</sup></p>
 
@@ -68,7 +68,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>We believe that if conservation supports the people, then people will support conservation.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Big Life Foundation. Vision statement. [<a class="color" href="../../../url/-org/biglife/" target="_blank" title="Big Life Foundation">biglife.org</a>]</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>We believe that if conservation supports the people, then people will support conservation.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Big Life Foundation. Vision statement. [<a class="color" href="../../../url/-org/biglife/" target="_blank" title="Big Life Foundation">biglife.org</a>]</font></h4>
 
       </div>
 
@@ -85,7 +85,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>All across the African continent, there are entire populations of elephants and other animals now being wiped out. The list is long: animal populations in Chad, Central African Republic, Mozambique, Congo, large parts of Tanzania, and on and on. Tragically for many of the ecosystems in these places, any conservation group would face an overwhelming struggle to be effective&mdash;for lack of government support or community collaboration, for lack of money, for lack of firepower against the rebel militia groups that sweep in to murder en masse, financing weapons purchases with their bloody bounties of ivory.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Nick Brandt, <em>Across the Ravaged Land</em> (monograph, 2013), 10. Big Life Foundation</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>All across the African continent, there are entire populations of elephants and other animals now being wiped out. The list is long: animal populations in Chad, Central African Republic, Mozambique, Congo, large parts of Tanzania, and on and on. Tragically for many of the ecosystems in these places, any conservation group would face an overwhelming struggle to be effective&mdash;for lack of government support or community collaboration, for lack of money, for lack of firepower against the rebel militia groups that sweep in to murder en masse, financing weapons purchases with their bloody bounties of ivory.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Nick Brandt, <i>Across the Ravaged Land</i> (monograph, 2013), 10. Big Life Foundation</font></h4>
 
       </div>
 
@@ -125,7 +125,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>Amboseli owes its panoply of wildlife to a tapestry of habitats, from glaciers to alpine meadows forests, woodlands, arid bush, grasslands, swamps, seasonal lakes, lava flows and windswept barren flats flanked by high mountains. To the south the 19,600 feet Kilimanjaro towers over the lowland plains of Amboseli. To the east the young volcanic range of the Chyulus reaches into Tsavo West National Park. To the north rise a series of ever darker and more distant hills stretching to the Kenya highlands.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Dr David (Jonah) Western, founder of the African Conservation Center</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>Amboseli owes its panoply of wildlife to a tapestry of habitats, from glaciers to alpine meadows forests, woodlands, arid bush, grasslands, swamps, seasonal lakes, lava flows and windswept barren flats flanked by high mountains. To the south the 19,600 feet Kilimanjaro towers over the lowland plains of Amboseli. To the east the young volcanic range of the Chyulus reaches into Tsavo West National Park. To the north rise a series of ever darker and more distant hills stretching to the Kenya highlands.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Dr David (Jonah) Western, founder of the African Conservation Center</font></h4>
 
       </div>
 
@@ -141,7 +141,7 @@
 
       <div>
         <h3 class="linebreak">Across The Ravaged Land</h3>
-        <p>The photography of Nick Brandt from his time in Amboseli speaks for itself, with each portrait speaking of a character in a story with an ending that gave life to Big Life Foundation. These photographs are collected in a trilogy of books documenting the disappearing animals of East Africa, altogether titled: <em>On This Earth, A Shadow Falls Across The Ravaged Land</em>. In the third and final volume, Nick returned to Amboseli for the first time in two years. This time, when he approached, Nick wrote in an essay on conservation, &ldquo;what had once been some of the most relaxed of elephant herds [&hellip;] they would run in terrified panic.&rdquo; This essay introduced the final volume of his trilogy: <em>Across The Ravaged Land</em>, and his words speak to the foundation of Big Life:</p>
+        <p>The photography of Nick Brandt from his time in Amboseli speaks for itself, with each portrait speaking of a character in a story with an ending that gave life to Big Life Foundation. These photographs are collected in a trilogy of books documenting the disappearing animals of East Africa, altogether titled: <i>On This Earth, A Shadow Falls Across The Ravaged Land</i>. In the third and final volume, Nick returned to Amboseli for the first time in two years. This time, when he approached, Nick wrote in an essay on conservation, &ldquo;what had once been some of the most relaxed of elephant herds [&hellip;] they would run in terrified panic.&rdquo; This essay introduced the final volume of his trilogy: <i>Across The Ravaged Land</i>, and his words speak to the foundation of Big Life:</p>
 
         <div class="clear-bottom">
           <p><b class="color">&ldquo;</b>Day by day, we tried to approach what had once been some of the most relaxed of elephant herds, elephants that in the past had quietly made their daily journey to the swamps, moving past and around our vehicle without a care in the world. But this time, when we approached to within half a mile, they would run in terrified panic. Meanwhile, gunshots were being reported from the direction that the elephants came, near the Tanzanian border.<b class="color">&rdquo;</b></p>
@@ -162,7 +162,7 @@
       <div>
         <p>Since its foundation in 2010, Big Life has pioneered wildlife conservation on the ground and in publication. Big Life in Kenya (and Tanzania) has a network of community rangers, mostly Maasai &ndash; the heart of conservation in this region is a partnership with the Maasai, who are traditionally a pastoralist society &ndash; Big Life community rangers actively protect the land by fighting against habitat destruction such as illegal logging or charcoaling, and are expertly trained to tackle a variety of wildlife crimes. Big Life in Canada, in the US and in the UK (and around the world) has campaigned in support of wildlife in East Africa with a story of success based on the strength of partnerships with local communities and embodied in the striking photography of co-founder Nick Brandt.</p>
 
-        <p class="linebreak">Animat Habitat has recognized the partnership of Big Life Foundation with local communities in East Africa as a leading example for elephant conservation at a time when elephant conservation across the continent has appeared most bleak. <font class="color"><a class="color" href="../../../url/-org/biglife/" target="_blank" title="Big Life Foundation">Big Life Foundation</a> has been named as an official selection to receive a percentage of revenue from the first production at Animat Habitat&mdash;scene one: <em>White Elephant</em>.</font> This is part of our mission to support wildlife conservation projects on the ground in Africa.</p>
+        <p class="linebreak">Animat Habitat has recognized the partnership of Big Life Foundation with local communities in East Africa as a leading example for elephant conservation at a time when elephant conservation across the continent has appeared most bleak. <font class="color"><a class="color" href="../../../url/-org/biglife/" target="_blank" title="Big Life Foundation">Big Life Foundation</a> has been named as an official selection to receive a percentage of revenue from the first production at Animat Habitat&mdash;scene one: <i>White Elephant</i>.</font> This is part of our mission to support wildlife conservation projects on the ground in Africa.</p>
 
         <p class="linebreak">See more ways to support <a href="../../../url/-org/biglife.org-donate/" target="_blank" title="Big Life Foundation / Donate">Big Life Foundation</a> featuring <a href="../../../url/-org/biglife-nickbrandt/" target="_blank" title="Big Life Foundation / Nick Brandt">Nick Brandt prints for Big Life</a>.</p>
 
@@ -172,7 +172,7 @@
       <div class="clear">
 
         <div class="quote" id="footnotes-5">
-          <p class="small"><sup>6</sup> Brandt, N. <em>Across The Ravaged Land</em> &lsquo;Across The Ravaged Land.&rsquo; 2013. <a href="../../../url/-com/nickbrandt-essays-across-the-ravaged-land/" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>6</sup> Brandt, N. <i>Across The Ravaged Land</i> &lsquo;Across The Ravaged Land.&rsquo; 2013. <a href="../../../url/-com/nickbrandt-essays-across-the-ravaged-land/" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
         </div>
       </div>
@@ -186,7 +186,7 @@
         <div class="clear toggle-off" id="register" spellcheck="false">
           <div>
             <h3><a onclick="toggle_register();">&minus;</a></h3><h3>Behind-the-scenes&hellip;</h3>
-            <p>Register your name and address to get behind-the-scenes of <em>White Elephant</em>.</p>
+            <p>Register your name and address to get behind-the-scenes of <i>White Elephant</i>.</p>
 
           </div>
 
