--- a/scene/one/elephant-conservation-kavango/index.html
+++ b/scene/one/elephant-conservation-kavango/index.html
@@ -30,7 +30,7 @@
     <ul class="page">
       <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
       <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><em>Reconnaissance in Kavango</em></a></li>
+      <li class="crumb scene scene-one"><a><i>Reconnaissance in Kavango</i></a></li>
     </ul>
   </nav>
 
@@ -43,7 +43,7 @@
 
       </div>
 
-        <!-- <p class="linebreak"><em>This article takes up ideas from earlier in the broadcast: Elephant Conservation in Botswana, Elephant Conservation in Namibia.</em></p> -->
+        <!-- <p class="linebreak"><i>This article takes up ideas from earlier in the broadcast: Elephant Conservation in Botswana, Elephant Conservation in Namibia.</i></p> -->
 
       <div>
         <h3>Reconnaissance Africa</h3>
