--- a/scene/one/elephant-conservation-kenya/index.html
+++ b/scene/one/elephant-conservation-kenya/index.html
@@ -32,7 +32,7 @@
     <ul class="page">
       <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
       <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><em>Elephant Conservation in Kenya</em></a></li>
+      <li class="crumb scene scene-one"><a><i>Elephant Conservation in Kenya</i></a></li>
     </ul>
   </nav>
 
@@ -51,7 +51,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>A time has come when we must take a stand and the stand is clear. [&hellip;] Kenya is making a statement that for us ivory is worthless unless it is on our elephants. This will send an absolutely clear message that the trade in ivory must come to an end and our elephants must be protected. I trust that the world will join us to end the horrible suffering of our herds and save our elephants for future generations.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;President Uhuru Kenyatta (2016) Presidential address, Nairobi, Kenya</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>A time has come when we must take a stand and the stand is clear. [&hellip;] Kenya is making a statement that for us ivory is worthless unless it is on our elephants. This will send an absolutely clear message that the trade in ivory must come to an end and our elephants must be protected. I trust that the world will join us to end the horrible suffering of our herds and save our elephants for future generations.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;President Uhuru Kenyatta (2016) Presidential address, Nairobi, Kenya</font></h4>
 
       </div>
 
@@ -75,7 +75,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>Recognizing that wild fauna and flora in their many beautiful and varied forms are an irreplaceable part of the natural systems of the earth which must be protected for this and the generations to come.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Convention on International Trade in Endangered Species of Wild Fauna and Flora (CITES), Preamble, March 1973</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>Recognizing that wild fauna and flora in their many beautiful and varied forms are an irreplaceable part of the natural systems of the earth which must be protected for this and the generations to come.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Convention on International Trade in Endangered Species of Wild Fauna and Flora (CITES), Preamble, March 1973</font></h4>
       </div>
 
       <div>
@@ -95,7 +95,7 @@
         <p class="linebreak lineend" id="nairobi-1989-toggle">History: <a class="color overscore" onclick="toggle_nairobi_1989();">1989 Ivory Burn, Nairobi</a><sup>&nbsp;[<a class="button" onclick="fn();" title="Footnotes">3,4</a>]</sup></p>
 
         <div class="clear indent-left-line" id="nairobi-1989">
-          <p class="linebreak"><font class="color"><em>Poaching elephants for their ivory tusks turned rampant across Africa in the 1970s and only abated as African elephants were uplisted to Appendix I of the Convention on International Trade in Endangered Species (CITES), following the headlines of an ivory burn in Nairobi National Park in 1989.</em></font> <em>At that ivory burn, then President of Kenya&mdash;Daniel arap Moi was ahead of his time when he delivered this message to a global audience: &ldquo;To stop the poacher, the trader must also be stopped. And to stop the trader, the final buyer must be convinced not to buy ivory. I appeal to people all over the world to stop buying ivory.&rdquo;</em></p>
+          <p class="linebreak"><font class="color"><i>Poaching elephants for their ivory tusks turned rampant across Africa in the 1970s and only abated as African elephants were uplisted to Appendix I of the Convention on International Trade in Endangered Species (CITES), following the headlines of an ivory burn in Nairobi National Park in 1989.</i></font> <i>At that ivory burn, then President of Kenya&mdash;Daniel arap Moi was ahead of his time when he delivered this message to a global audience: &ldquo;To stop the poacher, the trader must also be stopped. And to stop the trader, the final buyer must be convinced not to buy ivory. I appeal to people all over the world to stop buying ivory.&rdquo;</i></p>
 
           <div>
             <p>The elephant population in Kenya was estimated at nearly three-hundred thousand at the beginning of the 1970s. Then came the crisis. Herds across Africa were systematically slaughtered to supply international ivory markets. By the end of the 1980s, there were less than twenty thousand elephants in Kenya.</p>
@@ -130,18 +130,18 @@
       <div class="clear">
 
         <div class="quote" id="footnotes">
-          <p class="small"><sup>1</sup> Nuwer, R. <em>Wildlife Watch</em>, &lsquo;Kenya Sets Ablaze 105 Tons of Ivory&rsquo;, 30 April 2016. National Geographic. <a href="../../../url/www/nationalgeographic-kenya-record-breaking-ivory-burn/" title="National Geographic / Kenya Sets Ablaze 105 Tons of Ivory" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>2</sup> <em>Africa</em>, &lsquo;Kenyan ivory burnt by President Uhuru Kenyatta&rsquo;, 3 March 2015. BBC News. <a href="../../../url/www/bbc-world-africa-kenyan-ivory-burnt/" title="BBC News / Kenyan ivory burnt by President Uhuru Kenyata" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>1</sup> Nuwer, R. <i>Wildlife Watch</i>, &lsquo;Kenya Sets Ablaze 105 Tons of Ivory&rsquo;, 30 April 2016. National Geographic. <a href="../../../url/www/nationalgeographic-kenya-record-breaking-ivory-burn/" title="National Geographic / Kenya Sets Ablaze 105 Tons of Ivory" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>2</sup> <i>Africa</i>, &lsquo;Kenyan ivory burnt by President Uhuru Kenyatta&rsquo;, 3 March 2015. BBC News. <a href="../../../url/www/bbc-world-africa-kenyan-ivory-burnt/" title="BBC News / Kenyan ivory burnt by President Uhuru Kenyata" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
           <p class="small"><sup>3</sup> Perlez, J. &lsquo;Can he save the elephants?&rsquo;, 7 January 1990. New York Times. <a href="../../../url/www/nytimes-can-he-save-the-elephants/" title="New York Times / Magazine / Can he save the elephants?" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>4</sup> Lander, J. <em>Paula Kahumbu: Out of Africa</em>, &lsquo;Saving Africa’s elephants from poachers is the driving passion for a daughter of Kenya.&rsquo;, 12 November 2014. Princeton Alumni Weekly. <a href="../../../url/-edu/princeton-paw-paula-kahumbu-out-of-africa/" title="Princeton Alumni Weekly / Paula Kahumbu: Out of Africa" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>4</sup> Lander, J. <i>Paula Kahumbu: Out of Africa</i>, &lsquo;Saving Africa’s elephants from poachers is the driving passion for a daughter of Kenya.&rsquo;, 12 November 2014. Princeton Alumni Weekly. <a href="../../../url/-edu/princeton-paw-paula-kahumbu-out-of-africa/" title="Princeton Alumni Weekly / Paula Kahumbu: Out of Africa" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
-          <!-- <p class="small"><sup>1</sup> Zane, D. <em>Africa</em>, &lsquo;Kenya's ivory inferno: Does burning elephant tusks destroy them?&rsquo;, 29 April 2016. BBC News. <a href="../../../url/www/bbc-world-africa-kenyas-ivory-inferno/" title="BBC News / Kenya's ivory inferno" target="_blank" rel="noopener">Website&nbsp;Link</a></p> -->
+          <!-- <p class="small"><sup>1</sup> Zane, D. <i>Africa</i>, &lsquo;Kenya's ivory inferno: Does burning elephant tusks destroy them?&rsquo;, 29 April 2016. BBC News. <a href="../../../url/www/bbc-world-africa-kenyas-ivory-inferno/" title="BBC News / Kenya's ivory inferno" target="_blank" rel="noopener">Website&nbsp;Link</a></p> -->
 
         </div>
       </div>
 
       <div class="clear-bottom" id="video-toggle">
-        <h5>&plus; <a class="color overscore" onclick="toggle_video();">VICE News <em>Elephant Poachers in Kenya</em></a> (2013)</h5>
+        <h5>&plus; <a class="color overscore" onclick="toggle_video();">VICE News <i>Elephant Poachers in Kenya</i></a> (2013)</h5>
       </div>
 
       <div class="clear" id="video">
@@ -149,7 +149,7 @@
         <div>
           <p><font class="color title">Warning</font>: the video includes graphic images.</p>
 
-          <h5 class="linebreak">&minus; Close: <a class="color overscore" onclick="toggle_video();">VICE News <em>Elephant Poachers in Kenya</em></a> (2013)</h5>
+          <h5 class="linebreak">&minus; Close: <a class="color overscore" onclick="toggle_video();">VICE News <i>Elephant Poachers in Kenya</i></a> (2013)</h5>
 
         </div>
 
@@ -159,7 +159,7 @@
 
       <div class="clear-top">
         <h3 class="linebreak">A Direct Response</h3>
-        <p>The campaign <em>Hands Off Our Elephants</em> was launched in July 2013 by Paula Kahumbu with her wildlife conservation organization <a href="../../../url/-org/wildlifedirect/" rel="noopener" target="_blank" title="Wildlife Direct">Wildlife Direct</a>. The campaign partnered with civil society, corporations, government agencies and other conservation organizations to unify a nation against its poaching crisis. Margaret Kenyatta, the First Lady of the Republic of Kenya, had become a public patron of the campaign. Dr Paula Kahumbu and <em>Hands Off Our Elephants</em> had generated unprecedented awareness and support for wildlife conservation in Kenya. This ivory burn was a political response to that popular support.</p>
+        <p>The campaign <i>Hands Off Our Elephants</i> was launched in July 2013 by Paula Kahumbu with her wildlife conservation organization <a href="../../../url/-org/wildlifedirect/" rel="noopener" target="_blank" title="Wildlife Direct">Wildlife Direct</a>. The campaign partnered with civil society, corporations, government agencies and other conservation organizations to unify a nation against its poaching crisis. Margaret Kenyatta, the First Lady of the Republic of Kenya, had become a public patron of the campaign. Dr Paula Kahumbu and <i>Hands Off Our Elephants</i> had generated unprecedented awareness and support for wildlife conservation in Kenya. This ivory burn was a political response to that popular support.</p>
 
         <!-- Eyes in the Courtroom -->
         <!-- monitored poaching cases in Kenyan courts -->
@@ -181,7 +181,7 @@
         <div class="clear toggle-off" id="register" spellcheck="false">
           <div>
             <h3><a onclick="toggle_register();">&minus;</a></h3><h3>Behind-the-scenes&hellip;</h3>
-            <p>Register your name and address to get behind-the-scenes of <em>White Elephant</em>.</p>
+            <p>Register your name and address to get behind-the-scenes of <i>White Elephant</i>.</p>
 
           </div>
 
