--- a/scene/one/elephant-conservation-nairobi/index.html
+++ b/scene/one/elephant-conservation-nairobi/index.html
@@ -32,7 +32,7 @@
     <ul class="page">
       <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
       <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><em>Elephant Conservation in Nairobi</em></a></li>
+      <li class="crumb scene scene-one"><a><i>Elephant Conservation in Nairobi</i></a></li>
     </ul>
   </nav>
 
@@ -46,16 +46,16 @@
         <h2 class="scene-one">Herd of Elephant Orphans</h2>
         <h5 class="author">Press secretary at Animat Habitat.</h5>
 
-        <p class="linebreak"><em>The David Sheldrick Wildlife Trust &ndash; known as Sheldrick Wildlife Trust (SWT) &ndash; is a registered charity in England and Wales, based in Kenya, headquartered on the border of Tsavo East National Park. The trust was founded in memory of the late David Sheldrick in 1977 by his wife Daphne Sheldrick. David Sheldrick is remembered to this day as one of the pioneering national park wardens in Africa.</em></p>
+        <p class="linebreak"><i>The David Sheldrick Wildlife Trust &ndash; known as Sheldrick Wildlife Trust (SWT) &ndash; is a registered charity in England and Wales, based in Kenya, headquartered on the border of Tsavo East National Park. The trust was founded in memory of the late David Sheldrick in 1977 by his wife Daphne Sheldrick. David Sheldrick is remembered to this day as one of the pioneering national park wardens in Africa.</i></p>
 
         <div>
-          <p>&rdquo;<em>With just one lorry, and a handful of labourers, he was given the task of transforming a huge chunk of inhospitable arid land, previously uncharted and known only as the Taru desert, into what today is Kenya's largest and most famous national park &ndash; Tsavo. The park was established [&hellip;] in 1948 and David Sheldrick was the first warden of the Eastern Sector, an area of just over 5,000 square miles, [&hellip;] a post he held until he was transferred to head the Planning Unit for all Kenya's Wildlife Areas at the end of 1976. David died 6 months later, but the legacy he left endures.</em>&ldquo;<sup>&nbsp;[<a class="button" onclick="fn();" title="SWT, Family, 2019">1</a>]</sup></p>
+          <p>&rdquo;<i>With just one lorry, and a handful of labourers, he was given the task of transforming a huge chunk of inhospitable arid land, previously uncharted and known only as the Taru desert, into what today is Kenya's largest and most famous national park &ndash; Tsavo. The park was established [&hellip;] in 1948 and David Sheldrick was the first warden of the Eastern Sector, an area of just over 5,000 square miles, [&hellip;] a post he held until he was transferred to head the Planning Unit for all Kenya's Wildlife Areas at the end of 1976. David died 6 months later, but the legacy he left endures.</i>&ldquo;<sup>&nbsp;[<a class="button" onclick="fn();" title="SWT, Family, 2019">1</a>]</sup></p>
 
           <!-- by Act of Parliament-->
 
         </div>
 
-        <p><em>For over 50 years, Dame Daphne Sheldrick &ndash; alongside her husband, David Sheldrick in the <em>early days</em> &ndash; reared orphan elephants back to a life in the wild. Daphne was the first person to find a suitable composition of milk fats to successfully hand raise a milk-dependent newborn elephant, and her formula pioneered rehabilitation programs for orphan elephants across the continent. These days, the SWT works alongside the Kenya Wildlife Service, the Kenya Forest Service and local communities on a multifaceted approach to wildlife conservation: anti-poaching, safeguarding the natural environment, enhancing community awareness, addressing animal welfare issues, providing veterinary assistance to animals in need, and rescuing and hand rearing elephant and rhino orphans, along with other species that can ultimately enjoy a quality of life in wild terms when grown.</em><sup>&nbsp;[<a class="button" onclick="fn();" title="SWT, Family, 2019">1</a>,&nbsp;<a class="button" onclick="fn();" title="SWT, Early Days, 2019">2</a>,&nbsp;<a class="button" onclick="fn();" title="Sheldrick, 2012">3</a>]</sup></p>
+        <p><i>For over 50 years, Dame Daphne Sheldrick &ndash; alongside her husband, David Sheldrick in the <i>early days</i> &ndash; reared orphan elephants back to a life in the wild. Daphne was the first person to find a suitable composition of milk fats to successfully hand raise a milk-dependent newborn elephant, and her formula pioneered rehabilitation programs for orphan elephants across the continent. These days, the SWT works alongside the Kenya Wildlife Service, the Kenya Forest Service and local communities on a multifaceted approach to wildlife conservation: anti-poaching, safeguarding the natural environment, enhancing community awareness, addressing animal welfare issues, providing veterinary assistance to animals in need, and rescuing and hand rearing elephant and rhino orphans, along with other species that can ultimately enjoy a quality of life in wild terms when grown.</i><sup>&nbsp;[<a class="button" onclick="fn();" title="SWT, Family, 2019">1</a>,&nbsp;<a class="button" onclick="fn();" title="SWT, Early Days, 2019">2</a>,&nbsp;<a class="button" onclick="fn();" title="Sheldrick, 2012">3</a>]</sup></p>
 
       </div>
 
@@ -70,7 +70,7 @@
       <div class="quote" id="footnotes">
         <p class="small"><sup>1</sup> Sheldrick Wildlife Trust. &lsquo;The Family Behind the Sheldrick Trust.&rsquo; 2019. <a href="../../../url/-org/sheldrickwildlifetrust-mission-history/" target="_blank" title="Sheldrick Wildlife Trust / History">Website&nbsp;Link</a></p>
         <p class="small"><sup>2</sup> Sheldrick Wildlife Trust. &lsquo;Early Days.&rsquo; 2019. <a href="../../../url/-org/sheldrickwildlifetrust-orphans-early-days/" target="_blank" title="Sheldrick Wildlife Trust / Early Days">Website&nbsp;Link</a></p>
-        <p class="small"><sup>3</sup> Sheldrick, DBE D. <em>An African Love Story &ndash; Love, Life and Elephants.</em> 2012. <a href="../../../url/-org/sheldrickwildlifetrust-an-african-love-story-love-life-and-elephants/" target="_blank" title="Sheldrick Wildlife Trust / An African Love Story">Website&nbsp;Link</a></p>
+        <p class="small"><sup>3</sup> Sheldrick, DBE D. <i>An African Love Story &ndash; Love, Life and Elephants.</i> 2012. <a href="../../../url/-org/sheldrickwildlifetrust-an-african-love-story-love-life-and-elephants/" target="_blank" title="Sheldrick Wildlife Trust / An African Love Story">Website&nbsp;Link</a></p>
 
       </div>
 
@@ -87,7 +87,7 @@
         <p class="linebreak">Animat Habitat has helped to foster a young baby elephant when she arrived at the nursery in late 2017. We have followed her rescue and rehabilitation, and have wanted to share her story to show how this project on the ground fits into the big picture of elephant conservation. Here, from the diaries of Sheldrick Wildlife Trust Keepers, the story of an elephant named Kiasa, the sassy tail biter.</p>
 
         <h3 class="linebreak">The Story of Kiasa</h3>
-        <p><em>This story begins with Neville Sheldrick on a routine patrol flight in one of the SWT planes, heading to the Southern sector of Tsavo East National Park from the SWT Kaluku headquarters. While en route, he noticed a tiny elephant calf escorted by two big bull elephants, then surveyed the area looking for evidence of elephant herds but sighted no other elephants. A few days earlier while on an aerial patrol Neville had reported the sighting of a dead female who had succumbed to the effects of drought not far from this very same location. Concerned that something was not quite right with this picture, he reported the matter to the Kenya Wildlife Service and also to the SWT Kaluku operations room. Neville continued on to complete his patrol in the south where the drought had really taken hold, with numerous elephants dying as a result of a lack of food due to failed rains.</em><sup>&nbsp;[<a class="button" onclick="fn_2();" title="SWT, Kiasa, 2017">4</a>]</sup></p>
+        <p><i>This story begins with Neville Sheldrick on a routine patrol flight in one of the SWT planes, heading to the Southern sector of Tsavo East National Park from the SWT Kaluku headquarters. While en route, he noticed a tiny elephant calf escorted by two big bull elephants, then surveyed the area looking for evidence of elephant herds but sighted no other elephants. A few days earlier while on an aerial patrol Neville had reported the sighting of a dead female who had succumbed to the effects of drought not far from this very same location. Concerned that something was not quite right with this picture, he reported the matter to the Kenya Wildlife Service and also to the SWT Kaluku operations room. Neville continued on to complete his patrol in the south where the drought had really taken hold, with numerous elephants dying as a result of a lack of food due to failed rains.</i><sup>&nbsp;[<a class="button" onclick="fn_2();" title="SWT, Kiasa, 2017">4</a>]</sup></p>
 
       </div>
 
@@ -98,11 +98,11 @@
       </div>
 
       <div>
-        <p><em>SWT confirmed there were two bull elephants with a tiny baby and no females or other elephants in the area. Neville coordinated to collect Kenya Wildlife Service Veterinary Officer Dr Jeremiah Poghon working with the SWT funded Mobile Veterinary Unit based in Tsavo, to fly to the closest airstrip where an SWT helicopter then flew them to the scene. A local SWT unit, which works together with the Kenya Wildlife Service, was also directed to the location, and waited for a signal from the air.</em></p>
+        <p><i>SWT confirmed there were two bull elephants with a tiny baby and no females or other elephants in the area. Neville coordinated to collect Kenya Wildlife Service Veterinary Officer Dr Jeremiah Poghon working with the SWT funded Mobile Veterinary Unit based in Tsavo, to fly to the closest airstrip where an SWT helicopter then flew them to the scene. A local SWT unit, which works together with the Kenya Wildlife Service, was also directed to the location, and waited for a signal from the air.</i></p>
 
-        <p class="linebreak"><em>The calf was an estimated age of five to eight months. Dr Poghon agreed that without a rescue this young baby would not survive, but first flew around to confirm once again that there were no other elephants in the area. The fact that so many elephants had succumbed to the effects of recent drought, and the location of the recently discovered carcass of a dead female, left little doubt that she was an orphan being cared for by these well-meaning gentle bulls. Sadly conditions remained desperately dry and while these two bulls offered comfort and much needed protection from predators, without milk this calf would most certainly die.</em></p>
+        <p class="linebreak"><i>The calf was an estimated age of five to eight months. Dr Poghon agreed that without a rescue this young baby would not survive, but first flew around to confirm once again that there were no other elephants in the area. The fact that so many elephants had succumbed to the effects of recent drought, and the location of the recently discovered carcass of a dead female, left little doubt that she was an orphan being cared for by these well-meaning gentle bulls. Sadly conditions remained desperately dry and while these two bulls offered comfort and much needed protection from predators, without milk this calf would most certainly die.</i></p>
 
-        <p class="linebreak"><em>Given the open terrain, the helicopter managed to separate the bulls from the baby so that the SWT unit on the ground could approach safely. She was still strong, but little time was wasted while the ground team prepared the stretcher and tied her legs so that the baby elephant could be safely loaded into the helicopter and flown directly to the Nairobi Nursery.</em><sup>&nbsp;[<a class="button" onclick="fn_2();" title="SWT, Kiasa, 2017">4</a>]</sup></p>
+        <p class="linebreak"><i>Given the open terrain, the helicopter managed to separate the bulls from the baby so that the SWT unit on the ground could approach safely. She was still strong, but little time was wasted while the ground team prepared the stretcher and tied her legs so that the baby elephant could be safely loaded into the helicopter and flown directly to the Nairobi Nursery.</i><sup>&nbsp;[<a class="button" onclick="fn_2();" title="SWT, Kiasa, 2017">4</a>]</sup></p>
 
       </div>
 
@@ -404,7 +404,7 @@
       <div>
         <p>For over 40 years, Sheldrick Wildlife Trust &ndash; originally the David Sheldrick Wildlife Trust &ndash; has been a leading conservation organization in East Africa. SWT in Kenya are tackling challenges ranging from poaching to habitat destruction, and the orphan elephant rescue and rehabilitation program remains at the heart of their conservation action. SWT in the United Kingdom and in the United States (and around the world) promotes educational outreach and public awareness to protect and preserve wildlife and habitats in Kenya for generations to come.</p>
 
-        <p class="linebreak">Animat Habitat has recognized the rescue and rehabilitation program operated by SWT as an important story for elephant conservation, with each orphan elephant connected to human-wildlife conflict, the ivory trade or an intense drought. <font class="color"><a class="color" href="../../../url/-org/sheldrickwildlifetrust/" target="_blank" title="Sheldrick Wildlife Trust">Sheldrick Wildlife Trust</a> (SWT) has been named as an official selection to receive a percentage of revenue from the first production at Animat Habitat&mdash;scene one: <em>White Elephant</em>.</font>. This is part of our mission to support wildlife conservation projects on the ground in Africa.</p>
+        <p class="linebreak">Animat Habitat has recognized the rescue and rehabilitation program operated by SWT as an important story for elephant conservation, with each orphan elephant connected to human-wildlife conflict, the ivory trade or an intense drought. <font class="color"><a class="color" href="../../../url/-org/sheldrickwildlifetrust/" target="_blank" title="Sheldrick Wildlife Trust">Sheldrick Wildlife Trust</a> (SWT) has been named as an official selection to receive a percentage of revenue from the first production at Animat Habitat&mdash;scene one: <i>White Elephant</i>.</font>. This is part of our mission to support wildlife conservation projects on the ground in Africa.</p>
 
         <p class="linebreak">See more ways to support <a href="../../../url/-org/sheldrickwildlifetrust-donate/" target="_blank" title="Sheldrick Wildlife Trust">Sheldrick Wildlife Trust</a> including <a href="../../../url/-org/sheldrickwildlifetrust-water-colours/" target="_blank" title="Sheldrick Wildlife Trust / Water Colours">Angela Sheldrick Water Colours</a>.</p>
 
@@ -421,7 +421,7 @@
         <div class="clear toggle-off" id="register" spellcheck="false">
           <div>
             <h3><a onclick="toggle_register();">&minus;</a></h3><h3>Behind-the-scenes&hellip;</h3>
-            <p>Register your name and address to get behind-the-scenes of <em>White Elephant</em>.</p>
+            <p>Register your name and address to get behind-the-scenes of <i>White Elephant</i>.</p>
 
           </div>
 
