--- a/scene/one/elephant-conservation-namibia/index.html
+++ b/scene/one/elephant-conservation-namibia/index.html
@@ -30,7 +30,7 @@
     <ul class="page">
       <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
       <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">1</a></li>
-      <li class="crumb scene scene-one"><a><em>Elephant Conservation in Namibia</em></a></li>
+      <li class="crumb scene scene-one"><a><i>Elephant Conservation in Namibia</i></a></li>
     </ul>
   </nav>
 
