--- a/scene/one/history-of-elephants-anatomy/index.html
+++ b/scene/one/history-of-elephants-anatomy/index.html
@@ -32,7 +32,7 @@
     <ul class="page">
       <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
       <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><em>A History of Elephants &ndash; Anatomy</em></a></li>
+      <li class="crumb scene scene-one"><a><i>A History of Elephants &ndash; Anatomy</i></a></li>
     </ul>
   </nav>
 
@@ -43,13 +43,13 @@
         <h2 class="scene-one">Anatomy of an Elephant</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, animator at Animat Habitat.</h5>
 
-        <p class="linebreak"><em>This article is continued from <a href="../history-of-elephants/" title="A History of Elephants (Preface)">A History of Elephants</a>.</em></p>
+        <p class="linebreak"><i>This article is continued from <a href="../history-of-elephants/" title="A History of Elephants (Preface)">A History of Elephants</a>.</i></p>
 
-        <p class="linebreak"><em>A parable of three blind men, or women, and an elephant. Three people are each touching a different part of an elephant without seeing the elephant. The first person touches the trunk of the elephant, and says, &ldquo;An elephant is like a snake.&rdquo; The second person touches a leg of the elephant, and says, &ldquo;No, an elephant is like a tree.&rdquo; The third person touches the side of the elephant, and says, &ldquo;Incorrect on both accounts, an elephant is like a wall.&rdquo; Each one of them thinks that the two other statements are incorrect, when in fact they are all describing different parts of the same elephant.</em></p>
+        <p class="linebreak"><i>A parable of three blind men, or women, and an elephant. Three people are each touching a different part of an elephant without seeing the elephant. The first person touches the trunk of the elephant, and says, &ldquo;An elephant is like a snake.&rdquo; The second person touches a leg of the elephant, and says, &ldquo;No, an elephant is like a tree.&rdquo; The third person touches the side of the elephant, and says, &ldquo;Incorrect on both accounts, an elephant is like a wall.&rdquo; Each one of them thinks that the two other statements are incorrect, when in fact they are all describing different parts of the same elephant.</i></p>
 
         <!-- an early Buddhist parable -->
 
-        <p class="linebreak"><em>Here we step back to look at the anatomy of an elephant, including notes taken in the making of Ella.</em></p>
+        <p class="linebreak"><i>Here we step back to look at the anatomy of an elephant, including notes taken in the making of Ella.</i></p>
 
       </div>
 
@@ -79,12 +79,12 @@
 
           They are classified as a ‘keystone species,’ which means they have a disproportionately high impact on the ecosystem relative to their population. One of the most interesting roles elephants play is that of water shaman. They have a unique ability to smell water deep beneath the ground, scouting drinking sources that are invisible to the naked eye. Using their tusks, trunks and feet, they unearth hidden springs that would otherwise be inaccessible to all manner of creatures. Their talent for finding water provides a lifeline to animals great and small, especially as droughts become more severe and rains increasingly unpredictable. -->
 
-        <p class="linebreak"><em>No one needs a tusk other than an elephant.</em></p>
+        <p class="linebreak"><i>No one needs a tusk other than an elephant.</i></p>
 
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>An elephant's appetite is prodigious. They eat roughly four percent of their body weight each day, so a five tonne elephant will eat some 200 kilograms of vegetation. A natural consequence of this is the production of copious quantities of dung &ndash; on average each elephant produces roughly one tonne of natural organic manure every week, packed with nutrients, that feeds countless insects and enriches the soil of their habitat. When they have been feeding on fruits or pods, their dung is also packed with seeds, all deposited miles from the parent plant and protected from weevils and other seed predators. in so doing, elephants effectively sow the next generation of trees, each seedling getting a good start in life growing in rich compost. Trees with small seeds can also have them dispersed by fruit-eating birds, primates and antelopes, but those species with big seeds need big seed-dispersal agents. Elephants disperse more seeds and more species, over longer distances, than any other animal. This is why ecologists have dubbed them the &lsquo;mega-gardeners of the forest&rsquo;.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Ian Redmond OBE, Ambassador for UNEP Convention on Migratory Species, Consultant for Born Free Foundation, <em>Remembering Elephants</em> (book, 2016), Envisage Books</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>An elephant's appetite is prodigious. They eat roughly four percent of their body weight each day, so a five tonne elephant will eat some 200 kilograms of vegetation. A natural consequence of this is the production of copious quantities of dung &ndash; on average each elephant produces roughly one tonne of natural organic manure every week, packed with nutrients, that feeds countless insects and enriches the soil of their habitat. When they have been feeding on fruits or pods, their dung is also packed with seeds, all deposited miles from the parent plant and protected from weevils and other seed predators. in so doing, elephants effectively sow the next generation of trees, each seedling getting a good start in life growing in rich compost. Trees with small seeds can also have them dispersed by fruit-eating birds, primates and antelopes, but those species with big seeds need big seed-dispersal agents. Elephants disperse more seeds and more species, over longer distances, than any other animal. This is why ecologists have dubbed them the &lsquo;mega-gardeners of the forest&rsquo;.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Ian Redmond OBE, Ambassador for UNEP Convention on Migratory Species, Consultant for Born Free Foundation, <i>Remembering Elephants</i> (book, 2016), Envisage Books</font></h4>
 
         <!-- cms.int -->
         <!-- bornfree.co.uk -->
@@ -95,7 +95,7 @@
 
         <div class="quote" id="footnotes">
           <p class="small"><sup>1</sup> Elephant Aid International, Elephant Facts. <a href="../../../url/-org/elephantaidinternational-facts/" title="Elephant Aid International / Elephant Facts" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>2</sup> Currie, J. <em>Last of the Big Tuskers</em>. Umboko Productions, 2018. <a href="../../../url/git/bigtuskers/" title="Last of the Big Tuskers&mdash;a film by James Currie." target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>2</sup> Currie, J. <i>Last of the Big Tuskers</i>. Umboko Productions, 2018. <a href="../../../url/git/bigtuskers/" title="Last of the Big Tuskers&mdash;a film by James Currie." target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
         </div>
       </div>
@@ -108,7 +108,7 @@
 
         <p class="linebreak">Elephants have six times as many facial nerve cells as humans, half of which control their complex trunk muscles. Elephants have more than forty <s>up to 150</s> thousand muscles in their trunk. An elephant trunk, or proboscis, for which the order of the elephantidae family genus &ndash; proboscidea &ndash; is named, contains sixteen larger muscles for major movements, such as raising the trunk. Thousands of smaller muscle fascicles, or bundles of muscle fibres, allow for finer movements of the trunk. African elephants have two finger-like projections at the tip of the trunk, which they can use to pick grass, leaves and fruit.<sup>&nbsp;[<a class="button" onclick="fn();" title="Elephant Aid International">1</a>]</sup></p>
 
-        <p class="linebreak">Elephants use their trunk to skim water holes for the clearer water settled at the surface. Elephants can contain about six to twelve litres &ndash; more than a gallon &ndash; of water in their trunk at a time, then spout the water into their mouths or otherwise. Elephants also reserve water in a pharyngeal pouch in their throat <em>for a sunny day</em>.<sup>&nbsp;[<a class="button" onclick="fn_2();" title="Poole and Granli, Elephant Voices">4</a>]</sup></p>
+        <p class="linebreak">Elephants use their trunk to skim water holes for the clearer water settled at the surface. Elephants can contain about six to twelve litres &ndash; more than a gallon &ndash; of water in their trunk at a time, then spout the water into their mouths or otherwise. Elephants also reserve water in a pharyngeal pouch in their throat <i>for a sunny day</i>.<sup>&nbsp;[<a class="button" onclick="fn_2();" title="Poole and Granli, Elephant Voices">4</a>]</sup></p>
 
         <p class="linebreak">Elephants use their trunk to shower themselves with dust and mud and so on. This provides an effective sun-block that protects from ultraviolet rays and from parasites.<sup>&nbsp;[<a class="button" onclick="fn_2();" title="Poole and Granli, Elephant Voices">4</a>]</sup></p>
 
@@ -117,7 +117,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>The trunk is a masterpiece, a complex fusion of hand, lip and nose with a multitude of functions. It can fell trees, lift heavy logs, blow torrents of water, trumpet loudly, or delicately pick up a single seed. A super-sensitive, telescopic antenna, it rises high into the air to smell for danger, and can also be used as an effective weapon. A trunk can reach seemingly impossible places, remove grit from the eye, and be used to caress and give comfort.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Steve Bloom, <em>Elephants</em>, &lsquo;Body and Mind&rsquo; (book, 2006), Chronicle Books LLC</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>The trunk is a masterpiece, a complex fusion of hand, lip and nose with a multitude of functions. It can fell trees, lift heavy logs, blow torrents of water, trumpet loudly, or delicately pick up a single seed. A super-sensitive, telescopic antenna, it rises high into the air to smell for danger, and can also be used as an effective weapon. A trunk can reach seemingly impossible places, remove grit from the eye, and be used to caress and give comfort.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Steve Bloom, <i>Elephants</i>, &lsquo;Body and Mind&rsquo; (book, 2006), Chronicle Books LLC</font></h4>
 
       </div>
 
@@ -163,7 +163,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>She gazed down at me. Her ears splayed open in the shape of Africa. Her eyes, kind and concerned.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Daphne Sheldrick, <em>Love, Life and Elephants: An African Love Story</em> (book, 2012), Farrar, Straus and Giroux</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>She gazed down at me. Her ears splayed open in the shape of Africa. Her eyes, kind and concerned.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Daphne Sheldrick, <i>Love, Life and Elephants: An African Love Story</i> (book, 2012), Farrar, Straus and Giroux</font></h4>
 
         <!-- Then, lifting one huge foot, she began to feel me gently, all over, barely touching me. Her great ears stood out at right angles to her huge head, as she contemplated me lying helpless merely inches from the tip of two long sharp tusks. I knew then, that she did not intend to kill me. -->
 
@@ -189,7 +189,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>Periodically adult male elephants enter a state of heightened aggression, brought about by a condition known as musth, the result of a massive hormone surge. Musth is easily recognized by the dark oily secretion that oozes from the temporal glands on the sides of the head. The glands swell to the size of footballs, and press hard against the back of the eyes, causing considerable pain. The elephants will force their tusks into the ground to relieve pressure, and can sometimes be driven into a frenzy from the pain [&hellip;]. Body temperatures rise, and they flap their ears frequently to keep cool. Ketones flood the brain, altering their states of mind, which results in repetitive behavior. Extra testosterone makes them more aggressive than usual, and limits their ability to function normally. They appear to want to dominate everything in sight [&hellip;]. In the wild, musth helps the elephant to maintain his dominant position and meet with females who are in season.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Steve Bloom, <em>Elephants</em>, &lsquo;Body and Mind&rsquo; (book, 2006), Chronicle Books LLC</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>Periodically adult male elephants enter a state of heightened aggression, brought about by a condition known as musth, the result of a massive hormone surge. Musth is easily recognized by the dark oily secretion that oozes from the temporal glands on the sides of the head. The glands swell to the size of footballs, and press hard against the back of the eyes, causing considerable pain. The elephants will force their tusks into the ground to relieve pressure, and can sometimes be driven into a frenzy from the pain [&hellip;]. Body temperatures rise, and they flap their ears frequently to keep cool. Ketones flood the brain, altering their states of mind, which results in repetitive behavior. Extra testosterone makes them more aggressive than usual, and limits their ability to function normally. They appear to want to dominate everything in sight [&hellip;]. In the wild, musth helps the elephant to maintain his dominant position and meet with females who are in season.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Steve Bloom, <i>Elephants</i>, &lsquo;Body and Mind&rsquo; (book, 2006), Chronicle Books LLC</font></h4>
 
         <!-- attacking randomly -->
         <!-- , including humans, and the danger of such a state should never be underestimated -->
@@ -203,7 +203,7 @@
       </div>
 
       <div>
-        <p>An elephant brain is about three times the size of a human brain, with three times the neurons, found mostly in the cerebellum. This relatively large part of the brain, one-fifth, allows for elephants to have advanced sensorimotor abilities. That elephantine cerebellum is attributed to complex facial abilities, in particular, the elephant musculatur multitool&mdash;the trunk. <em>Elephants are kind of like a big deal.</em><sup>&nbsp;[<a class="button" onclick="fn_2();" title="Poole and Granli, Elephant Voices">3</a>]</sup></p>
+        <p>An elephant brain is about three times the size of a human brain, with three times the neurons, found mostly in the cerebellum. This relatively large part of the brain, one-fifth, allows for elephants to have advanced sensorimotor abilities. That elephantine cerebellum is attributed to complex facial abilities, in particular, the elephant musculatur multitool&mdash;the trunk. <i>Elephants are kind of like a big deal.</i><sup>&nbsp;[<a class="button" onclick="fn_2();" title="Poole and Granli, Elephant Voices">3</a>]</sup></p>
 
       </div>
 
@@ -214,7 +214,7 @@
 
           <!-- Body and Mind, Steve Bloom -->
 
-          <p class="small"><sup>7</sup> Laursen, L. Bekoff, M. 1978. Loxodonta africana. <em>Mammalian Species</em> Vol.92: 1-8. <a href="../../../url/doi/10-2307-3503889/" title="Digital Object Identifier / Mammalian Species Vol.92: 1-8" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>7</sup> Laursen, L. Bekoff, M. 1978. Loxodonta africana. <i>Mammalian Species</i> Vol.92: 1-8. <a href="../../../url/doi/10-2307-3503889/" title="Digital Object Identifier / Mammalian Species Vol.92: 1-8" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
         </div>
       </div>
@@ -228,7 +228,7 @@
         <div class="clear toggle-off" id="register" spellcheck="false">
           <div>
             <h3><a onclick="toggle_register();">&minus;</a></h3><h3>Behind-the-scenes&hellip;</h3>
-            <p>Register your name and address to get behind-the-scenes of <em>White Elephant</em>.</p>
+            <p>Register your name and address to get behind-the-scenes of <i>White Elephant</i>.</p>
 
           </div>
 
