--- a/scene/one/history-of-elephants-charter/index.html
+++ b/scene/one/history-of-elephants-charter/index.html
@@ -30,7 +30,7 @@
     <ul class="page">
       <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
       <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><em>A History of Elephants &ndash; Charter</em></a></li>
+      <li class="crumb scene scene-one"><a><i>A History of Elephants &ndash; Charter</i></a></li>
     </ul>
   </nav>
 
@@ -41,9 +41,9 @@
         <h2 class="scene-one">Charter for Elephants</h2>
         <h5 class="author">Press secretary at Animat Habitat.</h5>
 
-        <p class="linebreak"><em>From <a href="../../../url/-info/theelephantcharter/" title="The Elephant Charter" target="_blank" rel="noopener">The Elephant Charter</a>&mdash;from Joyce Poole and Petter Granli of <a href="../../../url/-org/elephantvoices/" title="Elephant Voices" target="_blank" rel="noopener">Elephant Voices</a> partnered with key elephant social behavior experts, and from a growing conviction held by elephant biologists that elephants are deserving of some form of Bill of Rights. Authors Joyce Poole, Cynthia Moss, Raman Sukumar, Andrea Turkalo and Katy Payne, together with other scientists and researchers, have contributed their time, expertise and support to further development of the document.</em></p>
+        <p class="linebreak"><i>From <a href="../../../url/-info/theelephantcharter/" title="The Elephant Charter" target="_blank" rel="noopener">The Elephant Charter</a>&mdash;from Joyce Poole and Petter Granli of <a href="../../../url/-org/elephantvoices/" title="Elephant Voices" target="_blank" rel="noopener">Elephant Voices</a> partnered with key elephant social behavior experts, and from a growing conviction held by elephant biologists that elephants are deserving of some form of Bill of Rights. Authors Joyce Poole, Cynthia Moss, Raman Sukumar, Andrea Turkalo and Katy Payne, together with other scientists and researchers, have contributed their time, expertise and support to further development of the document.</i></p>
 
-        <p class="linebreak"><em>This article shares a collection of principles for elephant conservation. These principles are, in large part, taken verbatim from The Elephant Charter, including direct links to further principles from its official online publication. The official website makes The Elephant Charter available in many languages, including French and Afrikaans. So, here is a history of elephants presented with principles and evidence from elephant social behaviour experts, elephant biologists and other scientists and so on.</em></p>
+        <p class="linebreak"><i>This article shares a collection of principles for elephant conservation. These principles are, in large part, taken verbatim from The Elephant Charter, including direct links to further principles from its official online publication. The official website makes The Elephant Charter available in many languages, including French and Afrikaans. So, here is a history of elephants presented with principles and evidence from elephant social behaviour experts, elephant biologists and other scientists and so on.</i></p>
 
         <h3 class="linebreak" id="principle-1-header">I: Conservation of Elephants</h3>
         <p>The survival and well-being of elephants is threatened by escalating poaching for the commercial trade in ivory and meat, by the increasing loss and fragmentation of natural habitats, and by locally increasing conflict with humans over diminishing resources. These threats are fuelled by a growing market for ivory in Asia, by poverty and civil unrest, and exacerbated by misguided public policy.</p>
@@ -54,7 +54,7 @@
         <div id="principle-1">
           <ul class="lower-roman">
             <li>Since the origin of elephants on Earth, about 60 million years ago, the order Proboscidea has consisted of approximately 10 families, 45 genera and 185 species and subspecies, in an extraordinary array of forms. The African and Asian elephants existing today are the sole remnants of that spectacular extension.</li>
-            <li>Recent classification recognizes three contemporary elephant species: Asian elephants&mdash;<em>Elephas maximus</em>, African savannah elephants&mdash;<em>Loxodonta africana</em>, and African forest elephants&mdash;<em>Loxodonta cyclotis</em>, however not all scientists agree on this taxonomy.</li>
+            <li>Recent classification recognizes three contemporary elephant species: Asian elephants&mdash;<i>Elephas maximus</i>, African savannah elephants&mdash;<i>Loxodonta africana</i>, and African forest elephants&mdash;<i>Loxodonta cyclotis</i>, however not all scientists agree on this taxonomy.</li>
             <li>The remaining elephant populations represent a tiny fraction of their former numbers, inhabiting only a small portion of their previous range. Their distribution is highly fragmented. In many areas, particularly in Asia and in Central and West Africa, elephant populations have already gone extinct or are highly endangered.</li>
             <li>Fuelled by poverty, political instability, civil unrest and the demand for luxury consumption of ivory products, elephants in their natural habitats are threatened by poaching for the commercial ivory and game meat trade.</li>
             <li>Poaching has caused enormous losses to the species as well as suffering to individuals, fragmenting populations and destroying families. Among Asian elephants, where only a small percentage of males have tusks, even sub-adult and juvenile male tuskers are targeted causing trauma to elephant families. In African elephants, where the tusks of males average seven times the weight of female tusks, poaching is focused on males, though in heavily poached populations females and even sub-adults are killed for their tusks, disrupting families. Older elephants are prized for their heavier tusks. The removal of older males impacts sexual selection, while the removal of older females impoverishes social and ecological knowledge, thereby reducing individual reproductive success and survival.</li>
@@ -270,7 +270,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>We stand to lose the largest land mammal on Earth, an animal with great intelligence, prodigious memory, empathy for others and an ability to grieve. Females and calves live in tight-knit families with tremendous loyalty to one another. The death of any member is felt acutely. The death of a matriarch &ndash; the oldest female and probably the one with the largest tusks &ndash; is devastating, with repercussions for years to come. And among the big bulls there are life-long friendships torn apart when poachers kill one or more of them. The loss of those older males means the loss of the prime breeders with the genes for longevity and robustness that they should have passed on.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Cynthia Moss, Director of Amboseli Trust for Elephants, <em>Remembering Elephants</em> (book, 2016): &lsquo;An Ability to Grieve&rsquo;, Envisage Books</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>We stand to lose the largest land mammal on Earth, an animal with great intelligence, prodigious memory, empathy for others and an ability to grieve. Females and calves live in tight-knit families with tremendous loyalty to one another. The death of any member is felt acutely. The death of a matriarch &ndash; the oldest female and probably the one with the largest tusks &ndash; is devastating, with repercussions for years to come. And among the big bulls there are life-long friendships torn apart when poachers kill one or more of them. The loss of those older males means the loss of the prime breeders with the genes for longevity and robustness that they should have passed on.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Cynthia Moss, Director of Amboseli Trust for Elephants, <i>Remembering Elephants</i> (book, 2016): &lsquo;An Ability to Grieve&rsquo;, Envisage Books</font></h4>
 
       </div>
 
@@ -293,7 +293,7 @@
         <div class="clear toggle-off" id="register" spellcheck="false">
           <div>
             <h3><a onclick="toggle_register();">&minus;</a></h3><h3>Behind-the-scenes&hellip;</h3>
-            <p>Register your name and address to get behind-the-scenes of <em>White Elephant</em>.</p>
+            <p>Register your name and address to get behind-the-scenes of <i>White Elephant</i>.</p>
 
           </div>
 
