--- a/scene/one/history-of-elephants/index.html
+++ b/scene/one/history-of-elephants/index.html
@@ -32,7 +32,7 @@
     <ul class="page">
       <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
       <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><em>A History of Elephants &ndash; Preface</em></a></li>
+      <li class="crumb scene scene-one"><a><i>A History of Elephants &ndash; Preface</i></a></li>
     </ul>
   </nav>
 
@@ -43,7 +43,7 @@
         <h2 class="scene-one">A History of Elephants</h2>
         <h5 class="author">Press secretary at Animat Habitat.</h5>
 
-        <p class="linebreak"><em>This is a history of elephants&mdash;not simply a list of reasons why we must conserve elephants in the wild. Alone, a list of reasons to conserve elephants in the wild does not propose a resolution. We the people must resolve to conserve elephants and the wild places where they inhabit. Elephants are kind of like a big deal. Here is a history of elephants to tell your friends about.</em></p>
+        <p class="linebreak"><i>This is a history of elephants&mdash;not simply a list of reasons why we must conserve elephants in the wild. Alone, a list of reasons to conserve elephants in the wild does not propose a resolution. We the people must resolve to conserve elephants and the wild places where they inhabit. Elephants are kind of like a big deal. Here is a history of elephants to tell your friends about.</i></p>
 
         <h3 class="linebreak">African Savanna Elephants</h3>
         <p>The African bush (or savanna or savannah) elephant in particular is the largest living land animal on Earth.<sup>[<a class="button" onclick="fn();" title="Shoshani. pp. 90-91.">1</a>]</sup></p>
@@ -60,7 +60,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>Elephants have a special technique to get at fresh water in the dry season. No other animal has such power. Using their tusks, they pile drive into the floodplain until they reach water below the surface. In doing so, Elephants create a lifeline for others. A hyena and jackal wait their turn.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Domhnall Gleeson. (2016) <em>Earth's Greatest Spectacles</em>, e/3: Okavango. BBC Studios Natural History Unit</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>Elephants have a special technique to get at fresh water in the dry season. No other animal has such power. Using their tusks, they pile drive into the floodplain until they reach water below the surface. In doing so, Elephants create a lifeline for others. A hyena and jackal wait their turn.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Domhnall Gleeson. (2016) <i>Earth's Greatest Spectacles</i>, e/3: Okavango. BBC Studios Natural History Unit</font></h4>
 
         <!-- [bbc.co.uk] bbc.co.uk/programmes/b0717vkv -->
 
@@ -73,11 +73,11 @@
       <div class="clear">
 
         <div class="quote" id="footnotes">
-          <p class="small"><sup>1</sup> Shoshani, J. (2005) &ldquo;Order Proboscidea.&ldquo; In Wilson, D. E.; Reeder, D. M (eds.). <em>Mammal Species of the World: A Taxonomic and Geographic Reference</em>, Vol. 1 (3rd ed.). Johns Hopkins University Press. ISBN 9780801882210. <a href="../../../url/-org/worldcat-mammal-species-of-the-world/" title="Online Computer Library Center / 62265494" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>2</sup> Larramendi, A. (2016) &ldquo;Shoulder height, body mass and shape of proboscideans.&rdquo; <em>Acta Palaeontologica Polonica</em>. <a href="../../../url/-pl/pan-app-001362014/" title="Acta Palaeontologica Polonica / 00136.2014" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>3</sup> Campos-Arceiz, A.; Blake, S. (2011) &ldquo;Mega-gardeners of the forest &ndash; the role of elephants in seed dispersal.&rdquo; <em>Acta Oecologica</em>. Vol. 37, Issue 6. <a href="../../../url/www/sciencedirect-S1146609X11000154/" title="Acta Oecologica / 2011.01.014" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>4</sup> Sukumar, R. (2003). &ldquo;The Living Elephants: Evolutionary Ecology, Behaviour, and Conservation.&rdquo; <em>Oxford University Press</em>, USA. ISBN 9780195107784. <a href="../../../url/-org/worldcat-living-elephants/" title="Online Computer Library Center / 935260783" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>5</sup> Kingdon, J. et al. (2013) &ldquo;Mammals of Africa.&rdquo; <em>Bloomsbury</em>. ISBN 9781408189962. <a href="../../../url/re/mammals-of-africa-vol-i-vi/" title="Research Gate / Mammals of Africa, Volumes I-VI" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>1</sup> Shoshani, J. (2005) &ldquo;Order Proboscidea.&ldquo; In Wilson, D. E.; Reeder, D. M (eds.). <i>Mammal Species of the World: A Taxonomic and Geographic Reference</i>, Vol. 1 (3rd ed.). Johns Hopkins University Press. ISBN 9780801882210. <a href="../../../url/-org/worldcat-mammal-species-of-the-world/" title="Online Computer Library Center / 62265494" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>2</sup> Larramendi, A. (2016) &ldquo;Shoulder height, body mass and shape of proboscideans.&rdquo; <i>Acta Palaeontologica Polonica</i>. <a href="../../../url/-pl/pan-app-001362014/" title="Acta Palaeontologica Polonica / 00136.2014" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>3</sup> Campos-Arceiz, A.; Blake, S. (2011) &ldquo;Mega-gardeners of the forest &ndash; the role of elephants in seed dispersal.&rdquo; <i>Acta Oecologica</i>. Vol. 37, Issue 6. <a href="../../../url/www/sciencedirect-S1146609X11000154/" title="Acta Oecologica / 2011.01.014" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>4</sup> Sukumar, R. (2003). &ldquo;The Living Elephants: Evolutionary Ecology, Behaviour, and Conservation.&rdquo; <i>Oxford University Press</i>, USA. ISBN 9780195107784. <a href="../../../url/-org/worldcat-living-elephants/" title="Online Computer Library Center / 935260783" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>5</sup> Kingdon, J. et al. (2013) &ldquo;Mammals of Africa.&rdquo; <i>Bloomsbury</i>. ISBN 9781408189962. <a href="../../../url/re/mammals-of-africa-vol-i-vi/" title="Research Gate / Mammals of Africa, Volumes I-VI" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
         </div>
       </div>
@@ -86,7 +86,7 @@
         <h3 class="linebreak">A Zombie History of Elephants</h3>
         <p>Elephants become so big, however they are known to not be prone to cancer. (Cancer is a disease of cell growth.) Being so big, elephants have to grow a lot of cells in particular in comparison sion to its most closely related &ndash; and much smaller &ndash; species: hyraxes and manatees.<sup>[<a class="button" onclick="fn_2();" title="Kellogg et al, 2007">6</a>]</sup></p>
 
-        <p class="linebreak">Well, manatees are big but not <em>elephantine</em>.</p>
+        <p class="linebreak">Well, manatees are big but not <i>elephantine</i>.</p>
 
         <p class="linebreak">This apparent conflict in principle knowledge of growth and cancerous growth has led to an area of scientific research into elephants for an answer to cancer.</p>
 
@@ -100,8 +100,8 @@
       <div class="clear">
 
         <div class="quote" id="footnotes-2">
-          <p class="small"><sup>6</sup> Kellogg, M., Burkett, S., Dennis, T. R., Stone, G., Gray, B. A., McGuire, P. M., Zori, R. T., Stanyon, R. (2007) &ldquo;Chromosome painting in the manatee supports Afrotheria and Paenungulata.&rdquo; <em>Evolutionary Biology</em>. Vol. 7. PMC 1784077. PMID 17244368. <a href="../../../url/re/chromosome-painting-in-the-manatee-supports-afrotheria-and-paenungulata/" title="Research Gate / BMC Evolutionary Biology / 1471-2148-7-6" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>7</sup> Vazquez, J. M., Sulak, M., Chigurupati, S., Lynch, V. J. (2018) &ldquo;A Zombie LIF Gene in Elephants Is Upregulated by TP53 to Induce Apoptosis in Response to DNA Damage.</a>&rdquo; <em>Cell Reports</em>. Vol. 24, Issue 7. <a href="../../../url/doi/10-1016-j-celrep-2018-07-042/" title="Cell Reports / 2018.07.042" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>6</sup> Kellogg, M., Burkett, S., Dennis, T. R., Stone, G., Gray, B. A., McGuire, P. M., Zori, R. T., Stanyon, R. (2007) &ldquo;Chromosome painting in the manatee supports Afrotheria and Paenungulata.&rdquo; <i>Evolutionary Biology</i>. Vol. 7. PMC 1784077. PMID 17244368. <a href="../../../url/re/chromosome-painting-in-the-manatee-supports-afrotheria-and-paenungulata/" title="Research Gate / BMC Evolutionary Biology / 1471-2148-7-6" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>7</sup> Vazquez, J. M., Sulak, M., Chigurupati, S., Lynch, V. J. (2018) &ldquo;A Zombie LIF Gene in Elephants Is Upregulated by TP53 to Induce Apoptosis in Response to DNA Damage.</a>&rdquo; <i>Cell Reports</i>. Vol. 24, Issue 7. <a href="../../../url/doi/10-1016-j-celrep-2018-07-042/" title="Cell Reports / 2018.07.042" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
         </div>
       </div>
@@ -113,7 +113,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>We admire elephants in part because they demonstrate what we consider the finest human traits: empathy, self-awareness, and social intelligence. But the way we treat them puts on display the very worst of human behavior.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Graydon Carter. (2011) <em>Vanity Fair</em>, Editor's letter, &lsquo;In Plain Sight&rsquo;</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>We admire elephants in part because they demonstrate what we consider the finest human traits: empathy, self-awareness, and social intelligence. But the way we treat them puts on display the very worst of human behavior.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Graydon Carter. (2011) <i>Vanity Fair</i>, Editor's letter, &lsquo;In Plain Sight&rsquo;</font></h4>
 
         <!-- [vanityfair.com] vanityfair.com/magazine/2011/08/graydon-201108 -->
 
@@ -136,19 +136,19 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>After 146 years, Ringling Brothers has shut down. Sad news for circus fans, but great news for employers looking to snap up guys who know how to beat elephants with steel rods.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Norm MacDonald, 2017</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>After 146 years, Ringling Brothers has shut down. Sad news for circus fans, but great news for employers looking to snap up guys who know how to beat elephants with steel rods.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Norm MacDonald, 2017</font></h4>
       </div>
 
       <div class="clear">
         <img alt="" src="https://animathabitat.com/inc/img/~01/photo/~british-broadcasting-corporation/bbc.earths-greatest-spectacles.3.okavango.jpg" />
-        <p class="text-right gutter-side"><em>Earth's Greatest Spectacles</em> (2016), e/3: &ldquo;Okavango&rdquo; &copy BBC Studios Natural History Unit [<a title="BBC Studios Natural History Unit" href="../../../url/-com/bbcstudios-the-natural-history-unit/" target="_blank" rel="noopener">bbcstudios.com</a>]</p>
+        <p class="text-right gutter-side"><i>Earth's Greatest Spectacles</i> (2016), e/3: &ldquo;Okavango&rdquo; &copy BBC Studios Natural History Unit [<a title="BBC Studios Natural History Unit" href="../../../url/-com/bbcstudios-the-natural-history-unit/" target="_blank" rel="noopener">bbcstudios.com</a>]</p>
 
       </div>
 
       <div>
-        <p><em>The elephant &ndash; as a species &ndash; dates back to the Pliocene epoch, which means that the elephant has existed for more than ten times longer than the human temporal range. We have shared this world with elephants for as long as humans have existed. The wild elephant has a place in this world. Wild elephants must have space. We the people must preserve and protect the wild places and the animals that live in them.</em></p>
+        <p><i>The elephant &ndash; as a species &ndash; dates back to the Pliocene epoch, which means that the elephant has existed for more than ten times longer than the human temporal range. We have shared this world with elephants for as long as humans have existed. The wild elephant has a place in this world. Wild elephants must have space. We the people must preserve and protect the wild places and the animals that live in them.</i></p>
 
-        <p class="linebreak"><em>For a more complete history of humans and elephants, see: <a href="../history-of-elephants-ivory/" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un. A History of Elephant Conservation." target="_blank" rel="noopener">A History of Elephants &ndash; Ivory</a>, published at Animat Habitat for everyone who may learn and, once learned, who may be inspired to care for nature. It is the only thing that will cause people to care: knowing &ndash; and with knowing, and the caring that comes, there is cause for hope that people will find an enduring place for the natural world &ndash; the natural systems that keep all of us alive.</em></p>
+        <p class="linebreak"><i>For a more complete history of humans and elephants, see: <a href="../history-of-elephants-ivory/" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un. A History of Elephant Conservation." target="_blank" rel="noopener">A History of Elephants &ndash; Ivory</a>, published at Animat Habitat for everyone who may learn and, once learned, who may be inspired to care for nature. It is the only thing that will cause people to care: knowing &ndash; and with knowing, and the caring that comes, there is cause for hope that people will find an enduring place for the natural world &ndash; the natural systems that keep all of us alive.</i></p>
 
       </div>
 
@@ -157,8 +157,8 @@
         <div class="quote" id="footnotes-3">
           <p class="small"><sup>8</sup> Chambers, P. (2008) &ldquo;Jumbo: The Greatest Elephant in the World.&rdquo; (1st US ed.). Hanover, N.H.: Steerforth Press. p. PT14. ISBN 1586421530. <a href="../../../url/google-books/2WkXkdmLGNoC/" title="Google Books / Jumbo: This Being the True Story of the Greatest Elephant in the World (2008)" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
           <p class="small"><sup>9</sup> &ldquo;Jumbo&rdquo; (adj.). Online Etymology Dictionary. <a href="../../../url/etym/jumbo/" title="Online Etymology Dictionary / Jumbo" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>10</sup> Collins, G. (1993) &ldquo;Barnum's Jumbo Is Back In Museum's Center Ring.&rdquo; <em>New York Times</em>. <a href="../../../url/www/time-elephants-barnum-bailey-history/" title="New York Times / 3733595" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>11</sup> Ager, S. (2015) &ldquo;As Ringling Ends Circus, See Where Its Elephants Retired.</a>&rdquo; <em>National Geographic</em>. <a href="../../../url/www/nationalgeographic-ringling-circus-elephants-florida-center/" title="National Geographic / 2015.9.16" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>10</sup> Collins, G. (1993) &ldquo;Barnum's Jumbo Is Back In Museum's Center Ring.&rdquo; <i>New York Times</i>. <a href="../../../url/www/time-elephants-barnum-bailey-history/" title="New York Times / 3733595" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>11</sup> Ager, S. (2015) &ldquo;As Ringling Ends Circus, See Where Its Elephants Retired.</a>&rdquo; <i>National Geographic</i>. <a href="../../../url/www/nationalgeographic-ringling-circus-elephants-florida-center/" title="National Geographic / 2015.9.16" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
         </div>
       </div>
@@ -172,7 +172,7 @@
         <div class="clear toggle-off" id="register" spellcheck="false">
           <div>
             <h3><a onclick="toggle_register();">&minus;</a></h3><h3>Behind-the-scenes&hellip;</h3>
-            <p>Register your name and address to get behind-the-scenes of <em>White Elephant</em>.</p>
+            <p>Register your name and address to get behind-the-scenes of <i>White Elephant</i>.</p>
 
           </div>
 
