--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -31,7 +31,7 @@
   <nav>
     <ul class="page">
       <li class="crumb scene-one logo"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb scene scene-one"><a><em>White Elephant</em></a></li>
+      <li class="crumb scene scene-one"><a><i>White Elephant</i></a></li>
       <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
       <li class="right thin dark" id="currency"><a class="title" onclick="toggle_currency();" title="Animat Habitat in Canada, United States of America.">
         <font class="paypal-ca"><b class="overscore">CA</b>&nbsp;&#92;&nbsp;US</font>
@@ -55,7 +55,7 @@
       <section class="single">
         <div class="quote">
           <img alt="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un. White Elephant cover art. &ndash;art de couverture." class="trim" src="../../inc/img/boutique/01/white-elephant.2023.cover.preview.1280.jpg" />
-          <p class="text-right gutter-side "><em>White Elephant</em> &ndash; Kalahari basin<font class="fr">&nbsp;&#92;&nbsp;Bassin du Kalahari</font>, Angola&ndash;Botswana&ndash;Namibia<font class="fr">&nbsp;&#92;&nbsp;Namibie</font> (comic book<font class="fr">&nbsp;&#92;&nbsp;bande dessin&eacute;e</font>, 2024)</p>
+          <p class="text-right gutter-side "><i>White Elephant</i> &ndash; Kalahari basin<font class="fr">&nbsp;&#92;&nbsp;Bassin du Kalahari</font>, Angola&ndash;Botswana&ndash;Namibia<font class="fr">&nbsp;&#92;&nbsp;Namibie</font> (comic book<font class="fr">&nbsp;&#92;&nbsp;bande dessin&eacute;e</font>, 2024)</p>
 
         </div>
       </section>
@@ -88,7 +88,7 @@
         <p>Scheduled for December<font class="fr">&nbsp;&#92;&nbsp;Pr&eacute;vu pour d&eacute;cembre</font> 2024.</p>
         <!-- <p>28 pages.</p> -->
 
-        <p class="linebreak">Journey with an elephant across a sea of sand: <em>White Elephant</em> is an e-book and a limited edition print that comes to life with a companion app. This publication is first in a series of scenes in wildlife art at Animat Habitat. <em>White Elephant</em>&mdash;the comic book is available for pre-order as a first-edition paperback.<font class="fr">&nbsp;&#92;&nbsp;Voyage avec un &eacute;l&eacute;phant &agrave; travers une mer de sable&nbsp;: <em>&Eacute;l&eacute;phant blanc</em> est un publication num&eacute;rique et une &eacute;dition limit&eacute;e qui prend vie avec l'application compagnon. Cette publication est la premi&egrave;re d'une s&eacute;rie de projets chez Animat Habitat. La bande dessin&eacute;e est pr&ecirc;t &agrave; pr&eacute;commander en tant que premi&egrave;re &eacute;dition broch&eacute;.</font></p>
+        <p class="linebreak">Journey with an elephant across a sea of sand: <i>White Elephant</i> is an e-book and a limited edition print that comes to life with a companion app. This publication is first in a series of scenes in wildlife art at Animat Habitat. <i>White Elephant</i>&mdash;the comic book is available for pre-order as a first-edition paperback.<font class="fr">&nbsp;&#92;&nbsp;Voyage avec un &eacute;l&eacute;phant &agrave; travers une mer de sable&nbsp;: <i>&Eacute;l&eacute;phant blanc</i> est un publication num&eacute;rique et une &eacute;dition limit&eacute;e qui prend vie avec l'application compagnon. Cette publication est la premi&egrave;re d'une s&eacute;rie de projets chez Animat Habitat. La bande dessin&eacute;e est pr&ecirc;t &agrave; pr&eacute;commander en tant que premi&egrave;re &eacute;dition broch&eacute;.</font></p>
 
         <!-- <h5>UNESCO World Heritage Site:<font class="fr">&nbsp;&#92;&nbsp;Patrimoine mondial&nbsp;:</font> <a href="../../url/whc/1432/" rel="noopener" target="_blank" title="UNESCO World Heritage Site / Okavango Delta">Okavango Delta</a></h5> -->
 
@@ -218,94 +218,94 @@
     <article>
       <div class="project-broadcast quote">
 
-        <!-- <h3><a href="companion-app-beta/"><font class="scene-one">Companion App &ndash; Beta</font><font class="desktop"> &#47; <em>Technology</em></font></a></h3>
+        <!-- <h3><a href="companion-app-beta/"><font class="scene-one">Companion App &ndash; Beta</font><font class="desktop"> &#47; <i>Technology</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <!-- <h3><a href="companion-app-augmented-reality-kit/"><font class="scene-one">Augmented Reality Kit</font><font class="desktop"> &#47; <em>Technology</em></font></a></h3>
+        <!-- <h3><a href="companion-app-augmented-reality-kit/"><font class="scene-one">Augmented Reality Kit</font><font class="desktop"> &#47; <i>Technology</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <!-- <h3><a href="making-of-ella-4/"><font class="scene-one">Making of Ella Ch&nbsp;4: Visual Effects</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <!-- <h3><a href="making-of-ella-4/"><font class="scene-one">Making of Ella Ch&nbsp;4: Visual Effects</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <h3><a href="elephant-conservation-angola/"><font class="scene-one">Elephant Conservation in Angola</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="elephant-conservation-angola/"><font class="scene-one">Elephant Conservation in Angola</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <!-- <h3><a href="elephant-conservation-kavango/"><font class="scene-one">Reconnaissance in Kavango</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <!-- <h3><a href="elephant-conservation-kavango/"><font class="scene-one">Reconnaissance in Kavango</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <!-- <h3><a href="elephant-conservation-zambezi/"><font class="scene-one">Elephant Conservation in Zambezi</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <!-- <h3><a href="elephant-conservation-zambezi/"><font class="scene-one">Elephant Conservation in Zambezi</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <!-- <h3><a href="elephant-conservation-namibia/"><font class="scene-one">Elephant Conservation in Namibia</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <!-- <h3><a href="elephant-conservation-namibia/"><font class="scene-one">Elephant Conservation in Namibia</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <h3><a href="elephant-conservation-botswana/"><font class="scene-one">Elephant Conservation in Botswana</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="elephant-conservation-botswana/"><font class="scene-one">Elephant Conservation in Botswana</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="wildlife-documentary-2/"><font class="scene-one">Wildlife Documentary &ndash; Lights</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <h3><a href="wildlife-documentary-2/"><font class="scene-one">Wildlife Documentary &ndash; Lights</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="elephant-conservation-amboseli/"><font class="scene-one">Elephant Conservation in Amboseli</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="elephant-conservation-amboseli/"><font class="scene-one">Elephant Conservation in Amboseli</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="elephant-conservation-nairobi/"><font class="scene-one">Elephant Conservation in Nairobi</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="elephant-conservation-nairobi/"><font class="scene-one">Elephant Conservation in Nairobi</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="wildlife-documentary-big-tuskers/"><font class="scene-one">Big Tuskers Documentary</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="wildlife-documentary-big-tuskers/"><font class="scene-one">Big Tuskers Documentary</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="wildlife-documentary/"><font class="scene-one">Wildlife Documentary &ndash; Action</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="wildlife-documentary/"><font class="scene-one">Wildlife Documentary &ndash; Action</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="history-of-elephants-charter/"><font class="scene-one">A History of Elephants &ndash; Charter</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="history-of-elephants-charter/"><font class="scene-one">A History of Elephants &ndash; Charter</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="history-of-elephants-anatomy/"><font class="scene-one">A History of Elephants &ndash; Anatomy</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="history-of-elephants-anatomy/"><font class="scene-one">A History of Elephants &ndash; Anatomy</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="wildlife-documentary-lens/"><font class="scene-one">Wildlife Documentary &ndash; Cameras</font><font class="desktop"> &#47; <em>Technology</em></font></a></h3>
+        <h3><a href="wildlife-documentary-lens/"><font class="scene-one">Wildlife Documentary &ndash; Cameras</font><font class="desktop"> &#47; <i>Technology</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="history-of-elephants/"><font class="scene-one">A History of Elephants &ndash; Preface</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="history-of-elephants/"><font class="scene-one">A History of Elephants &ndash; Preface</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <!-- <h3><a href="making-of-ella-3/"><font class="scene-one">Making of Ella Ch&nbsp;3: Elephant</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <!-- <h3><a href="making-of-ella-3/"><font class="scene-one">Making of Ella Ch&nbsp;3: Elephant</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <h3><a href="book-of-ella-4/"><font class="scene-one">Book of Ella Ch&nbsp;4: Color</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <h3><a href="book-of-ella-4/"><font class="scene-one">Book of Ella Ch&nbsp;4: Color</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="elephant-conservation-kenya/"><font class="scene-one">Elephant Conservation in Kenya</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="elephant-conservation-kenya/"><font class="scene-one">Elephant Conservation in Kenya</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <!-- <h3><a href="making-of-ella-2/"><font class="scene-one">Making of Ella Ch&nbsp;2: Scene</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <!-- <h3><a href="making-of-ella-2/"><font class="scene-one">Making of Ella Ch&nbsp;2: Scene</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <h3><a href="history-of-elephants-ivory/"><font class="scene-one">A History of Elephants &ndash; Ivory</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="history-of-elephants-ivory/"><font class="scene-one">A History of Elephants &ndash; Ivory</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="book-of-ella-3/"><font class="scene-one">Book of Ella Ch&nbsp;3: Comic Panel</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <h3><a href="book-of-ella-3/"><font class="scene-one">Book of Ella Ch&nbsp;3: Comic Panel</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="book-of-ella-2/"><font class="scene-one">Book of Ella Ch&nbsp;2: Comics</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <h3><a href="book-of-ella-2/"><font class="scene-one">Book of Ella Ch&nbsp;2: Comics</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="book-of-ella/"><font class="scene-one">Book of Ella Ch&nbsp;1: Cover Story</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <h3><a href="book-of-ella/"><font class="scene-one">Book of Ella Ch&nbsp;1: Cover Story</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="reference-art-2/"><font class="scene-one">Reference Art &ndash; Imagery</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <h3><a href="reference-art-2/"><font class="scene-one">Reference Art &ndash; Imagery</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="reference-art/"><font class="scene-one">Reference Art &ndash; History</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="reference-art/"><font class="scene-one">Reference Art &ndash; History</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="elephant-conservation-africa/"><font class="scene-one">Elephant Conservation in Africa</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="elephant-conservation-africa/"><font class="scene-one">Elephant Conservation in Africa</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="companion-app-augmented-reality/"><font class="scene-one">Augmented Reality Application</font><font class="desktop"> &#47; <em>Technology</em></font></a></h3>
+        <h3><a href="companion-app-augmented-reality/"><font class="scene-one">Augmented Reality Application</font><font class="desktop"> &#47; <i>Technology</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="making-of-ella/"><font class="scene-one">Making of Ella Ch&nbsp;1: Source</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <h3><a href="making-of-ella/"><font class="scene-one">Making of Ella Ch&nbsp;1: Source</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
         <pre class="thin"></pre>
 
       </div>
@@ -315,7 +315,7 @@
   <div class="clear color">
     <section class="single">
       <div class="quote text-center">
-        <h4>White Elephant<font class="thin">&mdash;<em>noun</em>, from stories of the kingdom of Siam (Thailand), </font><font class="color text-quote">&ldquo;</font><font class="thin">a possession of value that's useless and bizarre, too.</font><font class="color text-quote">&rdquo;</font><font class="fr"><font class="thin">&nbsp;&#92;&nbsp;<em>expression</em>, des histoires du royaume de Siam,</font> &laquo;&nbsp;<font class="thin">Une possession de valeur, ainsi inutile et bizarre.</font>&nbsp;&raquo;</font></h4>
+        <h4>White Elephant<font class="thin">&mdash;<i>noun</i>, from stories of the kingdom of Siam (Thailand), </font><font class="color text-quote">&ldquo;</font><font class="thin">a possession of value that's useless and bizarre, too.</font><font class="color text-quote">&rdquo;</font><font class="fr"><font class="thin">&nbsp;&#92;&nbsp;<i>expression</i>, des histoires du royaume de Siam,</font> &laquo;&nbsp;<font class="thin">Une possession de valeur, ainsi inutile et bizarre.</font>&nbsp;&raquo;</font></h4>
 
       </div>
     </section>
@@ -326,10 +326,10 @@
       <p class="small">In Memoriam</p>
 
       <p class="linebreak small"><font class="title">Himba</font></p>
-      <p class="small"><font class="small"><em>Natural World: Elephant Nomads Of The Namib Desert</em> (BBC documentary, 2008)</font></p>
+      <p class="small"><font class="small"><i>Natural World: Elephant Nomads Of The Namib Desert</i> (BBC documentary, 2008)</font></p>
 
       <p class="linebreak small"><font class="title">Igor &middot;&nbsp;Qumquat</font></p>
-      <p class="small"><font class="small">Nick Brandt <em>On This Earth, A Shadow Falls</em> (book series, 2005, 2009)</font></p>
+      <p class="small"><font class="small">Nick Brandt <i>On This Earth, A Shadow Falls</i> (book series, 2005, 2009)</font></p>
       <!-- Igor (c - 2009) was killed by poachers for his ivory in Amboseli National Park, Kenya. -->
       <!-- Qumquat (1969 - 2012) slaughtered by poachers along with her two young daughters close to the border of Amboseli National Park, Kenya. -->
 
@@ -338,13 +338,13 @@
       <!-- Satao (c1964 - 2016) was killed by poachers for his ivory just outside Tsavo National Park, Kenya. -->
 
       <p class="linebreak small"><font class="title">Kamboyo &middot;&nbsp;Masthuele &middot;&nbsp;Isilo</font></p>
-      <p class="small"><font class="small">James Currie <em>Last of the Big Tuskers</em> (documentary, 2018)</font></p>
+      <p class="small"><font class="small">James Currie <i>Last of the Big Tuskers</i> (documentary, 2018)</font></p>
       <!-- Kamboyo (c - 2014) died of old age in Tsavo Conservation Area, Kenya. -->
       <!-- Masthuele (c - 2014) died … in Kruger National Park, South Africa. -->
       <!-- Isilo (c - 2017) died of old age in Tembe Elephant Park, South Africa. -->
 
       <p class="linebreak small"><font class="title">Mimi &middot;&nbsp;Athena</font></p>
-      <p class="small"><font class="small">Mark Deeble and Victoria Stone <em>The Elephant Queen</em> (Apple TV&plus; original, 2018)</font></p>
+      <p class="small"><font class="small">Mark Deeble and Victoria Stone <i>The Elephant Queen</i> (Apple TV&plus; original, 2018)</font></p>
       <!-- Athena (c - 2018) was not seen again … . -->
 
       <p class="linebreak small"><font class="title">Tim</font></p>
@@ -352,7 +352,7 @@
       <!-- Tim (c - 2020) died of natural causes in Amboseli National Park, Kenya. -->
 
       <p class="linebreak small"><font class="title">Gaia</font></p>
-      <p class="small"><font class="small">Elephants Without Borders &ndash;&nbsp;<em>Elephant</em> (Disney&plus; original, 2020)</font></p>
+      <p class="small"><font class="small">Elephants Without Borders &ndash;&nbsp;<i>Elephant</i> (Disney&plus; original, 2020)</font></p>
 
       <p class="linebreak small"><font class="title">Luggard &middot;&nbsp;Maisha</font></p>
       <p class="small"><font class="small">Sheldrick Wildlife Trust &ndash;&nbsp;Ithumba (c.2016-2021)</font></p>
