--- a/scene/one/making-of-ella-3/index.html
+++ b/scene/one/making-of-ella-3/index.html
@@ -30,7 +30,7 @@
     <ul class="page">
       <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
       <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><em>Making of Ella Ch&nbsp;3</em></a></li>
+      <li class="crumb scene scene-one"><a><i>Making of Ella Ch&nbsp;3</i></a></li>
     </ul>
   </nav>
 
@@ -41,7 +41,7 @@
         <h2 class="scene-one">Making of Ella Ch&nbsp;3: Elephant</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, animator at Animat Habitat.</h5>
 
-        <p class="linebreak"><em>Elephants are an umbrella species. They are ecosystem engineers. Biodiversity cascades from their presence. Elephants are a keystone species in Africa. The elephant is an iconic symbol of the continent. When we think of Africa, we most often think of elephants. They are a symbol of power and strength, memory and wisdom, good luck and so on. If we as a people are unable, or unwilling, to save the smartest, largest, greatest land-living mammal in the world &ndash; a species that has roamed the earth for millions of years &ndash; then it is unclear what hope remains for other animals. This is where our story begins.</em></p>
+        <p class="linebreak"><i>Elephants are an umbrella species. They are ecosystem engineers. Biodiversity cascades from their presence. Elephants are a keystone species in Africa. The elephant is an iconic symbol of the continent. When we think of Africa, we most often think of elephants. They are a symbol of power and strength, memory and wisdom, good luck and so on. If we as a people are unable, or unwilling, to save the smartest, largest, greatest land-living mammal in the world &ndash; a species that has roamed the earth for millions of years &ndash; then it is unclear what hope remains for other animals. This is where our story begins.</i></p>
 
         <h3 class="linebreak">Ella, African Savanna Elephant</h3>
         <p>Meet Ella, the elephant.</p>
@@ -49,7 +49,7 @@
       </div>
 
       <img alt="White Elephant character expression sheet. (2015) &copy; Animat Habitat" src="../../../inc/img/01/we.character.expression-s.1440.jpg" />
-      <p class="text-right gutter-side"><em>White Elephant</em> character expression sheet. (2015)</p>
+      <p class="text-right gutter-side"><i>White Elephant</i> character expression sheet. (2015)</p>
 
       <div>
         <p>This expression sheet is an excersize in character development, as well as a guide in part to facial animation.</p>
@@ -57,7 +57,7 @@
       </div>
 
       <img alt="White Elephant storyboard p&nbsp;8-9. (2015) &copy; Animat Habitat" src="../../../inc/img/01/we.story.board.8-9.jpg" />
-      <p class="text-right gutter-side"><em>White Elephant</em> storyboard p&nbsp;8-9. (2015)</p>
+      <p class="text-right gutter-side"><i>White Elephant</i> storyboard p&nbsp;8-9. (2015)</p>
 
       <div>
         <p>A lot of the character animation is able to reference documentary film and stock footage. A little sequence in the story steps outside of the reference material. The more complex and, in this case, less natural sequences of animation start as sketches in a storyboard. Here is Ella's dance in the clouds.</p>
@@ -65,7 +65,7 @@
       </div>
 
       <img alt="White Elephant storyboard p&nbsp;9-12. (2015) &copy; Animat Habitat" src="../../../inc/img/01/we.story.board.9-12.jpg" />
-      <p class="text-right gutter-side"><em>White Elephant</em> storyboard p&nbsp;9-12. (2015)</p>
+      <p class="text-right gutter-side"><i>White Elephant</i> storyboard p&nbsp;9-12. (2015)</p>
 
       <div>
         <p>Pencil and paper to start the visual development of a visual story. Here is a pencil drawing of Ella after the storm.</p>
@@ -84,7 +84,7 @@
       <p class="text-right gutter-side">&ldquo;Ella after the storm.&rdquo; (digital paint, 2015)</p>
 
       <!-- <div>
-        <p><em>One more thing.</em></p>
+        <p><i>One more thing.</i></p>
 
         <p class="linebreak">Here is a computer-generated render of Ella after the storm. Ella is created with Autodesk Maya and rendered with Mental Ray.</p>
 
@@ -103,7 +103,7 @@
         <div class="clear toggle-off" id="register" spellcheck="false">
           <div>
             <h3><a onclick="toggle_register();">&minus;</a></h3><h3>Behind-the-scenes&hellip;</h3>
-            <p>Register your name and address to get behind-the-scenes of <em>White Elephant</em>.</p>
+            <p>Register your name and address to get behind-the-scenes of <i>White Elephant</i>.</p>
 
           </div>
 
