--- a/scene/one/making-of-ella-4/index.html
+++ b/scene/one/making-of-ella-4/index.html
@@ -30,7 +30,7 @@
     <ul class="page">
       <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
       <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><em>Making of Ella Ch&nbsp;4</em></a></li>
+      <li class="crumb scene scene-one"><a><i>Making of Ella Ch&nbsp;4</i></a></li>
     </ul>
   </nav>
 
