--- a/scene/one/making-of-ella/index.html
+++ b/scene/one/making-of-ella/index.html
@@ -32,7 +32,7 @@
     <ul class="page">
       <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
       <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><em>Making of Ella Ch&nbsp;1</em></a></li>
+      <li class="crumb scene scene-one"><a><i>Making of Ella Ch&nbsp;1</i></a></li>
     </ul>
   </nav>
 
@@ -40,19 +40,19 @@
     <article>
 
       <img alt="Okavango Delta, Botswana [Landsat 8 Map] (2017) &copy; Descartes Labs" src="https://animathabitat.com/inc/img/~01/geo/africa-okavango.jpg" />
-      <p class="text-right gutter-side">Okavango Delta, Botswana. <em>Landsat 8 Map</em> &copy; Descartes Labs</p>
+      <p class="text-right gutter-side">Okavango Delta, Botswana. <i>Landsat 8 Map</i> &copy; Descartes Labs</p>
 
       <div>
         <h4 class="letterhead thin">March 2014</h4>
         <h2 class="scene-one">Making of Ella Ch&nbsp;1: Source</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, animator at Animat Habitat.</h5>
 
-        <p class="linebreak"><em>Each year, Southern Africa's Kalahari Desert hosts the largest collective land migration on Earth, as the Okavango river becomes a vast, inland delta. The freshly flooded swamps welcome an array of intercontinental species to Botswana. None travels farther than the elephant. The journey for many elephants of southern Africa is of epic proportions. Over hundreds of miles, spanning several weeks at the peak of dry season, the herds are on the move&mdash;on an urgent quest for water. The desert can be insatiable. Dust swirling across the barren landscape can shield stragglers from the herd. More than ever, the young and the fatigued are in severe risk of becoming dehydrated and being separated from the matriarch elephants, who have journeyed across the great plains in dry seasons before.</em></p>
+        <p class="linebreak"><i>Each year, Southern Africa's Kalahari Desert hosts the largest collective land migration on Earth, as the Okavango river becomes a vast, inland delta. The freshly flooded swamps welcome an array of intercontinental species to Botswana. None travels farther than the elephant. The journey for many elephants of southern Africa is of epic proportions. Over hundreds of miles, spanning several weeks at the peak of dry season, the herds are on the move&mdash;on an urgent quest for water. The desert can be insatiable. Dust swirling across the barren landscape can shield stragglers from the herd. More than ever, the young and the fatigued are in severe risk of becoming dehydrated and being separated from the matriarch elephants, who have journeyed across the great plains in dry seasons before.</i></p>
 
         <h3 class="linebreak">The Beginning</h3>
-        <p><em>This is not Pokemon.</em> This is a picture of the pond. Before it was drained and replaced by an arcade that Satoshi Tajiri then visited in its stead, there was a fishing pond where once upon a time…Tajiri had prowled for insects. This is not another imaginary world of creatures as a consolation prize for a paved country-side. This is a portrait of the country-side before the city blossomed. This is art to promote appreciation for &ndash; and awareness of &ndash; the wild animals who have no voice to speak of their wilderness. And this is art to thank people like you for joining the journey here at the beginning.</p>
+        <p><i>This is not Pokemon.</i> This is a picture of the pond. Before it was drained and replaced by an arcade that Satoshi Tajiri then visited in its stead, there was a fishing pond where once upon a time…Tajiri had prowled for insects. This is not another imaginary world of creatures as a consolation prize for a paved country-side. This is a portrait of the country-side before the city blossomed. This is art to promote appreciation for &ndash; and awareness of &ndash; the wild animals who have no voice to speak of their wilderness. And this is art to thank people like you for joining the journey here at the beginning.</p>
 
-        <p class="linebreak"><em>This is where we begin.</em> In 2007, I was completing an International Baccalaureate (IB) degree with a focus on fine-arts. At our show, I presented a series of wildlife studies. In 2010, my wildlife art reappeared in an animated short film that I had created as part of an Information Technology (IT) bachelor program at Carleton University. That animation was originally titled “White Elephants” and was produced from concept to composite in the span of the single university term. In short: it was a rough animation. I had, however, managed my way through the many technical challenges of the animation pipeline for games and cinematics. In so doing, I gained an appreciation for the power of computer animation to design and tell stories.</p>
+        <p class="linebreak"><i>This is where we begin.</i> In 2007, I was completing an International Baccalaureate (IB) degree with a focus on fine-arts. At our show, I presented a series of wildlife studies. In 2010, my wildlife art reappeared in an animated short film that I had created as part of an Information Technology (IT) bachelor program at Carleton University. That animation was originally titled “White Elephants” and was produced from concept to composite in the span of the single university term. In short: it was a rough animation. I had, however, managed my way through the many technical challenges of the animation pipeline for games and cinematics. In so doing, I gained an appreciation for the power of computer animation to design and tell stories.</p>
 
         <p class="linebreak">My post-secondary education in interactive multimedia and design and my early work on augmented reality applications kept me busy for a few years thereafter. I was working by day in an augmented reality advertising company, and by night, I was rewriting and redesigning the animated short script to apply the interactive capacity of augmented reality in visual storytelling. By the mid-2010s, I had turned all of my attention to using these tools for stories about conservation.</p>
 
@@ -61,10 +61,10 @@
       </div>
 
       <img alt="[Archives] (2010) &copy; Dane Aleksander" src="../../../inc/img/01/2010.we.jpg" />
-      <p class="text-right gutter-side"><em>Art of White Elephant</em> (2010) &copy; Dane Aleksander</p>
+      <p class="text-right gutter-side"><i>Art of White Elephant</i> (2010) &copy; Dane Aleksander</p>
 
       <div>
-        <p><em>The journey begins with an African elephant: every year she followed in the footsteps of her herd along the long migration routes to water, until one dry season when all the footprints had faded away, and she had to find her own way across a sea of sand.</em></p>
+        <p><i>The journey begins with an African elephant: every year she followed in the footsteps of her herd along the long migration routes to water, until one dry season when all the footprints had faded away, and she had to find her own way across a sea of sand.</i></p>
 
         <h3 class="linebreak">An Indie Project</h3>
         <p>My first few years working at a small ad company helped me to fund a computer art suite. Moreover, the small studio experience gave me an added benefit of some perspective when my time came to found a computer art studio. I enjoyed being part of a small animation team, forerunning an in-house design team, and bouncing ideas around with the developers and the executives, however I often regretted that the ad work fell short of showing the uniquely interactive capacity of the technology at play.</p>
@@ -89,7 +89,7 @@
         </div>
 
       </div>
-      <p class="text-right gutter-side"><em>Art of White Elephant</em> (2010) &copy; Dane Aleksander</p>
+      <p class="text-right gutter-side"><i>Art of White Elephant</i> (2010) &copy; Dane Aleksander</p>
 
       <div>
         <p>My vision for this project has grown from an animated short film to an animated and augmented interactive short story of a moment in the life of an African elephant. I hope this interactivity within the story will extend a sense of responsibility for the fate of the animal in the wild. Elephants have existed for tens of millions of years. (Humans have existed for two million years.) This truly magnificent animal exists in the wild today. That may not be true for much longer.</p>
@@ -107,7 +107,7 @@
         <div class="clear toggle-off" id="register" spellcheck="false">
           <div>
             <h3><a onclick="toggle_register();">&minus;</a></h3><h3>Behind-the-scenes&hellip;</h3>
-            <p>Register your name and address to get behind-the-scenes of <em>White Elephant</em>.</p>
+            <p>Register your name and address to get behind-the-scenes of <i>White Elephant</i>.</p>
 
           </div>
 
