--- a/scene/one/reference-art-2/index.html
+++ b/scene/one/reference-art-2/index.html
@@ -32,7 +32,7 @@
     <ul class="page">
       <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
       <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><em>Reference Art &ndash; Imagery</em></a></li>
+      <li class="crumb scene scene-one"><a><i>Reference Art &ndash; Imagery</i></a></li>
     </ul>
   </nav>
 
@@ -43,24 +43,24 @@
         <h2 class="scene-one">Reference Art (cont'd)</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, animator at Animat Habitat.</h5>
 
-        <p class="linebreak"><em>This article is continued from Reference Art &ndash; <a href="../reference-art/" title="Reference for White Elephant">History</a>. This second part looks at some of the voices and pictures that helped inspire the comic book, companion app and invitation to change the way we look at wildlife&mdash;<a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">White Elephant</a>.</em></p>
+        <p class="linebreak"><i>This article is continued from Reference Art &ndash; <a href="../reference-art/" title="Reference for White Elephant">History</a>. This second part looks at some of the voices and pictures that helped inspire the comic book, companion app and invitation to change the way we look at wildlife&mdash;<a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">White Elephant</a>.</i></p>
 
         <h3 class="linebreak">Art Daydreams</h3>
         <p>It was 2011 and I was sitting at the Games for Change conference in New York City. Polaroid-like graphics swiped across the screen, but instead of a bunch of still images, each photo launched a short video clip. The idea for an animated wildlife comic book was born.<sup>&nbsp;[<a class="button" onclick="fn();" title="Games for Change">1</a>]</sup></p>
 
         <p class="linebreak">I wondered how this type of mixed medium could showcase the best of art and story. I took down a note in my journal: &ldquo;animated scenes within [a] comic book.&rdquo; And then I promptly forgot about it while I went back to my 9 to 5 job at a local app development studio.</p>
 
-        <p class="linebreak">Since then, the work of several artists and storytellers were influential in keeping my vision for this project moving forward. Two early sources were <a href="../../../url/www/chrisoatley-podcasts/" rel="noopener" target="_blank" title="Chris Oatley / Artcast"><em>Artcast</em></a> by Chris Oatley and <a href="../../../url/www/leanintoart/" target="_blank" title="Jerzy Drozd and Rob Stenzinger / Lean Into Art"><em>Lean Into Art</em></a> co-hosted by Jerzy Drozd and Rob Stenzinger. I appreciated the dedication to sharing and teaching critical thinking about visual storytelling that both of these podcasts had to offer.</p>
+        <p class="linebreak">Since then, the work of several artists and storytellers were influential in keeping my vision for this project moving forward. Two early sources were <a href="../../../url/www/chrisoatley-podcasts/" rel="noopener" target="_blank" title="Chris Oatley / Artcast"><i>Artcast</i></a> by Chris Oatley and <a href="../../../url/www/leanintoart/" target="_blank" title="Jerzy Drozd and Rob Stenzinger / Lean Into Art"><i>Lean Into Art</i></a> co-hosted by Jerzy Drozd and Rob Stenzinger. I appreciated the dedication to sharing and teaching critical thinking about visual storytelling that both of these podcasts had to offer.</p>
 
       </div>
 
       <div class="clear">
         <img alt="" src="https://animathabitat.com/inc/img/~01/art/oatley.artcast.jpg" />
-        <p class="text-right gutter-side"><em>Artcast</em> (2008) &copy; Visual Voice [<a href="../../../url/www/chrisoatley-podcasts/" rel="noopener" target="_blank" title="Chris Oatley / Artcast">chrisoatley.com</a>]</p>
+        <p class="text-right gutter-side"><i>Artcast</i> (2008) &copy; Visual Voice [<a href="../../../url/www/chrisoatley-podcasts/" rel="noopener" target="_blank" title="Chris Oatley / Artcast">chrisoatley.com</a>]</p>
       </div>
 
       <div>
-        <p>Inspiring audio archives like these are invaluable resources for artists seeking their creative voice. In terms of specific breakthroughs on <em>White Elephant</em>, the <em>Artcast</em> podcast episode 49: &lsquo;<a href="../../../url/www/chrisoatley-ep49finefinish/" rel="noopener" target="_blank" title="Chris Oatley / Artcast e/ 49">Projects that Pitch and the Fine Art of Finishing</a>&rsquo; featured Jerzy Drozd, whose conversation with Chris Oatley encapsulated an ever-growing passion for storytelling in comics&mdash;a theme that transcends the Artcast as well as Drozd’s many podcasts and professions (cartoonist and teacher and so on). Any lack of personal history reading comics is quickly overcome by their passion for comic books. They easily convinced me that comics might be an approachable medium for an artist looking to communicate a personal and art directed story.</p>
+        <p>Inspiring audio archives like these are invaluable resources for artists seeking their creative voice. In terms of specific breakthroughs on <i>White Elephant</i>, the <i>Artcast</i> podcast episode 49: &lsquo;<a href="../../../url/www/chrisoatley-ep49finefinish/" rel="noopener" target="_blank" title="Chris Oatley / Artcast e/ 49">Projects that Pitch and the Fine Art of Finishing</a>&rsquo; featured Jerzy Drozd, whose conversation with Chris Oatley encapsulated an ever-growing passion for storytelling in comics&mdash;a theme that transcends the Artcast as well as Drozd’s many podcasts and professions (cartoonist and teacher and so on). Any lack of personal history reading comics is quickly overcome by their passion for comic books. They easily convinced me that comics might be an approachable medium for an artist looking to communicate a personal and art directed story.</p>
 
       </div>
 
@@ -68,10 +68,10 @@
 
         <div class="quote" id="footnotes">
           <p class="small"><sup>1</sup> Games For Change (G4C), Festival, New York City. <a href="../../../url/www/gamesforchange/" title="Games For Change" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>2</sup> <em>Artcast</em>, Chris Oatley. <a href="../../../url/www/chrisoatley-podcasts/" title="Chris Oatley / Artcast" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>3</sup> <em>Lean Into Art</em>, Jerzy Drozd and Rob Stenzinger. <a href="../../../url/www/leanintoart/" title="Jerzy Drozd and Rob Stenzinger / Lean Into Art" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>2</sup> <i>Artcast</i>, Chris Oatley. <a href="../../../url/www/chrisoatley-podcasts/" title="Chris Oatley / Artcast" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>3</sup> <i>Lean Into Art</i>, Jerzy Drozd and Rob Stenzinger. <a href="../../../url/www/leanintoart/" title="Jerzy Drozd and Rob Stenzinger / Lean Into Art" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
-          ></a> by  and <a href="../../../url/www/leanintoart/" target="_blank" title="Jerzy Drozd and Rob Stenzinger / Lean Into Art"><em>Lean Into Art</em></a>
+          ></a> by  and <a href="../../../url/www/leanintoart/" target="_blank" title="Jerzy Drozd and Rob Stenzinger / Lean Into Art"><i>Lean Into Art</i></a>
 
         </div>
       </div>
@@ -84,29 +84,29 @@
 
       <div class="clear">
         <img alt="" src="https://animathabitat.com/inc/img/~01/art/woodward.bottom-of-the-ninth.png" /></a>
-        <p class="text-right gutter-side"><em>Bottom of the Ninth</em> (2012) &copy; Ryan Woodward [<a title="Ryan Woodward / Bottom of the Ninth" href="../../../url/www/ryanwoodwardart-bottom-of-the-ninth/" target="_blank" rel="noopener">ryanwoodwardart.com</a>]</p>
+        <p class="text-right gutter-side"><i>Bottom of the Ninth</i> (2012) &copy; Ryan Woodward [<a title="Ryan Woodward / Bottom of the Ninth" href="../../../url/www/ryanwoodwardart-bottom-of-the-ninth/" target="_blank" rel="noopener">ryanwoodwardart.com</a>]</p>
       </div>
 
       <div>
-        <p>Another teaching artist and storyteller, Ryan Woodward, was at CTN-X showing his recently released an app and animated graphic novel titled <em>Bottom of the Ninth</em>. Ryan Woodward has a uniquely expressive style of animation that is delightful in and of itself. This style is particularly present in one of his most personal works, and one of my personal favorite animated short films: <em>Thought of You</em> (2010). His artwork and videos describing the journey that lead to the creation of <em>Thought of You</em> in 2010 and then <em>Bottom of the Ninth</em> in 2012 have inspired and trail-blazed my passion for my project <em>White Elephant</em>.<sup>&nbsp;[<a class="button" onclick="fn();" title="Woodward">4</a>]</sup></p>
+        <p>Another teaching artist and storyteller, Ryan Woodward, was at CTN-X showing his recently released an app and animated graphic novel titled <i>Bottom of the Ninth</i>. Ryan Woodward has a uniquely expressive style of animation that is delightful in and of itself. This style is particularly present in one of his most personal works, and one of my personal favorite animated short films: <i>Thought of You</i> (2010). His artwork and videos describing the journey that lead to the creation of <i>Thought of You</i> in 2010 and then <i>Bottom of the Ninth</i> in 2012 have inspired and trail-blazed my passion for my project <i>White Elephant</i>.<sup>&nbsp;[<a class="button" onclick="fn();" title="Woodward">4</a>]</sup></p>
 
-        <p class="linebreak">At CTN-X, Woodward called attention to the patterns in artistic struggle and ecstasy: <a title="YouTube / Sesame Street / Don Music, Kermit the Frog" href="../../../url/yt/RrJnzBFzEEY/" target="_blank" rel="noopener">Sesame Street: Don Music, Kermit the Frog</a>. This has served me as a playful reminder to enjoy the experience of doing what I love to do. And ya, <em>I draw because I like to.</em></p>
+        <p class="linebreak">At CTN-X, Woodward called attention to the patterns in artistic struggle and ecstasy: <a title="YouTube / Sesame Street / Don Music, Kermit the Frog" href="../../../url/yt/RrJnzBFzEEY/" target="_blank" rel="noopener">Sesame Street: Don Music, Kermit the Frog</a>. This has served me as a playful reminder to enjoy the experience of doing what I love to do. And ya, <i>I draw because I like to.</i></p>
 
       </div>
 
       <img alt="" src="https://animathabitat.com/inc/img/~01/art/~disney-animation/disney.the-lion-king.open.jpg" />
-      <p class="text-right gutter-side"><em>The Lion King</em> (1994) &copy; Disney</p>
+      <p class="text-right gutter-side"><i>The Lion King</i> (1994) &copy; Disney</p>
 
       <div>
-        <p>Disney animation has inspired, at least indirectly, most of the world of animation. <em>White Elephant</em> is no exception. I use frames that reference sequences from <em>The Lion King</em> (1994).</p>
+        <p>Disney animation has inspired, at least indirectly, most of the world of animation. <i>White Elephant</i> is no exception. I use frames that reference sequences from <i>The Lion King</i> (1994).</p>
 
-        <p class="linebreak">Classic Disney films were famous for their use of live-action as source material in drawing animals, with footage nearly always available for any animal because of the studio’s film series: <em>True-Life Adventures</em>. The first two feature films in this series, <em>The Living Desert</em> (1953) and <em>The Vanishing Prairie</em> (1954) were later promoted as a double-series release with a promotional cover image that shows nature in an art-directed graphic style. <em>White Elephant</em>, in part, takes on a similar graphic design so that the art and story can express different bold, clear visual statements.</p>
+        <p class="linebreak">Classic Disney films were famous for their use of live-action as source material in drawing animals, with footage nearly always available for any animal because of the studio’s film series: <i>True-Life Adventures</i>. The first two feature films in this series, <i>The Living Desert</i> (1953) and <i>The Vanishing Prairie</i> (1954) were later promoted as a double-series release with a promotional cover image that shows nature in an art-directed graphic style. <i>White Elephant</i>, in part, takes on a similar graphic design so that the art and story can express different bold, clear visual statements.</p>
       </div>
 
       <div class="quote clear-top clear-bottom">
         <div class="quote clear-top clear-bottom">
             <img alt="" src="https://animathabitat.com/inc/img/~01/art/disney.living-desert-vanishing-prairie.jpg" />
-            <p class="text-right"><em>The Living Desert, The Vanishing Prairie</em> (1971) &copy; Disney</p>
+            <p class="text-right"><i>The Living Desert, The Vanishing Prairie</i> (1971) &copy; Disney</p>
 
             <!-- [ca.movieposter.com/q/Living+Desert/Vanishing+Prairie_posters.html] -->
 
@@ -114,17 +114,17 @@
       </div>
 
       <div>
-        <p>Several individual artists known to have inspired Disney animation have also been referenced in the making of <em>White Elephant</em>. In particular, I looked at the sequential photographs of animal locomotion by Eadweard Muybridge (1830-1904), who pioneered the photographic study of the motion of animals. I was also inspired by the drawings of Heinrich Kley (1863-1945), who provided a unique interpretation of animals in unusual poses. Kley's drawings had a clear influence on Walt Disney's &ldquo;Dance of the Hours&rdquo; in <em>Fantasia</em> (1940). His drawings of dancing and skating elephants have, in part, informed the more complex sequences of character animation in <em>White Elephant</em>. The ability to visualize character anatomy in its stretched states was key to my realizing the armature and silhouette of an animated elephant across its range of motion.<sup>&nbsp;[<a class="button" onclick="fn();" title="NGA">5</a>]</sup></p>
+        <p>Several individual artists known to have inspired Disney animation have also been referenced in the making of <i>White Elephant</i>. In particular, I looked at the sequential photographs of animal locomotion by Eadweard Muybridge (1830-1904), who pioneered the photographic study of the motion of animals. I was also inspired by the drawings of Heinrich Kley (1863-1945), who provided a unique interpretation of animals in unusual poses. Kley's drawings had a clear influence on Walt Disney's &ldquo;Dance of the Hours&rdquo; in <i>Fantasia</i> (1940). His drawings of dancing and skating elephants have, in part, informed the more complex sequences of character animation in <i>White Elephant</i>. The ability to visualize character anatomy in its stretched states was key to my realizing the armature and silhouette of an animated elephant across its range of motion.<sup>&nbsp;[<a class="button" onclick="fn();" title="NGA">5</a>]</sup></p>
       </div>
 
       <div class="clear">
         <img alt="" src="https://animathabitat.com/inc/img/~01/art/~heinrich-kley/kley.elephant-dance.jpg" />
-        <p class="text-right gutter-side"><em>The Drawings of Heinrich Kley</em> (1909, republished 1961), 52.</p>
+        <p class="text-right gutter-side"><i>The Drawings of Heinrich Kley</i> (1909, republished 1961), 52.</p>
 
       </div>
 
       <div>
-        <p>Images of elephants are all around us. We uphold elephants in culture, and yet we are causing them to disappear along with much of our natural world. The objective at Animat Habitat is to use art and story to promote wildlife conservation. These artists and storytellers and their images in particular have influenced the visual language of <em>White Elephant</em>, the comic book and a companion app.</p>
+        <p>Images of elephants are all around us. We uphold elephants in culture, and yet we are causing them to disappear along with much of our natural world. The objective at Animat Habitat is to use art and story to promote wildlife conservation. These artists and storytellers and their images in particular have influenced the visual language of <i>White Elephant</i>, the comic book and a companion app.</p>
 
       </div>
 
@@ -146,7 +146,7 @@
         <div class="clear toggle-off" id="register" spellcheck="false">
           <div>
             <h3><a onclick="toggle_register();">&minus;</a></h3><h3>Behind-the-scenes&hellip;</h3>
-            <p>Register your name and address to get behind-the-scenes of <em>White Elephant</em>.</p>
+            <p>Register your name and address to get behind-the-scenes of <i>White Elephant</i>.</p>
 
           </div>
 
