--- a/scene/one/wildlife-documentary-2/index.html
+++ b/scene/one/wildlife-documentary-2/index.html
@@ -32,7 +32,7 @@
     <ul class="page">
       <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
       <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><em>Wildlife Documentary &ndash; Lights</em></a></li>
+      <li class="crumb scene scene-one"><a><i>Wildlife Documentary &ndash; Lights</i></a></li>
     </ul>
   </nav>
 
@@ -43,27 +43,27 @@
         <h2 class="scene-one">Wildlife Documentary (cont'd)</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, art director at Animat Habitat.</h5>
 
-        <p class="linebreak"><em>This article is continued from Wildlife Documentary &ndash; <a href="../wildlife-documentary/">Action</a>. Whereas the &lsquo;action&rsquo; set of documentary films was selected based on a call to action, this &lsquo;lights&rsquo; set was selected based on a best picture. This pair of picturesque documentary films both shine a light on the plight of the natural world, each telling an authentic story with awesome imagery. Here is a look at two documentaries: <em>The Elephant Queen</em> (2018) and <em>Into the Okavango</em> (2018). <em>The Elephant Queen</em> is a story from Mark Deeble and Victoria Stone, to be published with the release of Apple TV Plus. <em>Into the Okavango</em> is about a project led by Dr Steve Boyes, filmed by Neil Gelinas, and produced by National Geographic Documentary Films to be published on the National Geographic channel with Disney Plus.</em></p>
+        <p class="linebreak"><i>This article is continued from Wildlife Documentary &ndash; <a href="../wildlife-documentary/">Action</a>. Whereas the &lsquo;action&rsquo; set of documentary films was selected based on a call to action, this &lsquo;lights&rsquo; set was selected based on a best picture. This pair of picturesque documentary films both shine a light on the plight of the natural world, each telling an authentic story with awesome imagery. Here is a look at two documentaries: <i>The Elephant Queen</i> (2018) and <i>Into the Okavango</i> (2018). <i>The Elephant Queen</i> is a story from Mark Deeble and Victoria Stone, to be published with the release of Apple TV Plus. <i>Into the Okavango</i> is about a project led by Dr Steve Boyes, filmed by Neil Gelinas, and produced by National Geographic Documentary Films to be published on the National Geographic channel with Disney Plus.</i></p>
 
         <h3 class="linebreak">The Elephant Queen (2018)</h3>
         <p>1h 36min</p>
 
-        <p class="linebreak"><em>The Elephant Queen</em>&mdash;an Apple Original documentary film shares the traditional story of the matriarchal elephant herd on the big screen. The family story is a familiar journey: there and back again, guided by an elder female who knows where to go and when to go and so on. This story has been told and retold with a high standard of cinematography by BBC Studios Natural History Unit in the television mini-series <em>Planet Earth</em> (2006) and <em>Planet Earth II</em> (2016). This film directed by Mark Deeble and Victoria Stone manages to match that picturesque visual language, capturing the intimate relationships of animals on film in a way that seems genuine and that shows several ecosystems as interconnected.</p>
+        <p class="linebreak"><i>The Elephant Queen</i>&mdash;an Apple Original documentary film shares the traditional story of the matriarchal elephant herd on the big screen. The family story is a familiar journey: there and back again, guided by an elder female who knows where to go and when to go and so on. This story has been told and retold with a high standard of cinematography by BBC Studios Natural History Unit in the television mini-series <i>Planet Earth</i> (2006) and <i>Planet Earth II</i> (2016). This film directed by Mark Deeble and Victoria Stone manages to match that picturesque visual language, capturing the intimate relationships of animals on film in a way that seems genuine and that shows several ecosystems as interconnected.</p>
 
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>For thousands of years, [elephants] were thought to be able to summon the rain. The truth is that [a matriarch] could sense rain coming when it was over a hundred miles away.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Chiwetel Ejiofor, narrator of <em>The Elephant Queen</em> (2018)</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>For thousands of years, [elephants] were thought to be able to summon the rain. The truth is that [a matriarch] could sense rain coming when it was over a hundred miles away.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Chiwetel Ejiofor, narrator of <i>The Elephant Queen</i> (2018)</font></h4>
       </div>
 
       <div class="clear">
         <img alt="The Elephant Queen key art (16 by 9)" src="https://animathabitat.com/inc/img/~01/title/apple-tv.the-elephant-queen.key-art.16-9.jpg" />
-        <p class="text-right gutter-side"><em>The Elephant Queen</em> (2018) &copy; Apple TV Plus [<a href="../../../url/-com/theelephantqueen/" title="The Elephant Queen" target="_blank" rel="noopener">theelephantqueen.com</a>]</p>
+        <p class="text-right gutter-side"><i>The Elephant Queen</i> (2018) &copy; Apple TV Plus [<a href="../../../url/-com/theelephantqueen/" title="The Elephant Queen" target="_blank" rel="noopener">theelephantqueen.com</a>]</p>
 
       </div>
 
       <div>
-        <p>The film takes advantage of a feature-length narrative arc to consider the dynamic of a family unit and the ecosystems that surround them. This gives time to connect with individual elephants in the herd, and gives weight to the responsibility of a matriarch to lead the way to food and to water, and in an unrelenting habitat and so on. This familiar journey of an elephant herd in Africa is realized as an individual story of a wise and gentle matriarch named Athena. The film is narrated by Chiwetel Ejiofor, who gives voice to the journey of Athena and her family, and mixed with a score that creates space for the imagery to fill in beats of the story in-between. <em><em>The Elephant Queen</em> (2018) turns the plight of elephants in a ravaged landscape into a relatable story of survival.</em></p>
+        <p>The film takes advantage of a feature-length narrative arc to consider the dynamic of a family unit and the ecosystems that surround them. This gives time to connect with individual elephants in the herd, and gives weight to the responsibility of a matriarch to lead the way to food and to water, and in an unrelenting habitat and so on. This familiar journey of an elephant herd in Africa is realized as an individual story of a wise and gentle matriarch named Athena. The film is narrated by Chiwetel Ejiofor, who gives voice to the journey of Athena and her family, and mixed with a score that creates space for the imagery to fill in beats of the story in-between. <i><i>The Elephant Queen</i> (2018) turns the plight of elephants in a ravaged landscape into a relatable story of survival.</i></p>
 
         <p class="linebreak">The film is not specific about location. Red earth and a feature appearance of Satao hint at where the &lsquo;refuge&rsquo; is, and at where the &lsquo;kingdom&rsquo; for Athena's family may be. This story of migration throughout the wet and dry seasons is common however to elephants across Africa. The film is able to overlook this local context in favor of building on the characters within an individual family group, including the wildlife around them, and indeed featuring a legend: Satao, one of the last of the big tuskers. The treatment of Satao in this film, entering the frame and incidentally revealing his part role in the story of Athena, was clearly a meaningful moment for the film-makers and an absolute masterclass of wildlife film-making. The sequence with Satao is an exclamation mark on a beautiful, bittersweet story that reads like a love letter to elephants.</p>
 
@@ -71,19 +71,19 @@
 
         <p class="linebreak">Athena was last seen leading her family away from the kingdom.</p>
 
-        <p class="linebreak"><em>The Elephant Queen</em> (documentary film, 2018) is rated 7.8 on IMDB.</p>
+        <p class="linebreak"><i>The Elephant Queen</i> (documentary film, 2018) is rated 7.8 on IMDB.</p>
 
-        <p class="linebreak"><em>The Elephant Queen</em> &ndash; <a href="../../../url/yt/e8TsCQmngFk/" rel="noopener" target="_blank" title="Youtube / Apple TV / The Elephant Queen &ndash; Official Movie Trailer">Official Trailer</a> (2018).</p>
+        <p class="linebreak"><i>The Elephant Queen</i> &ndash; <a href="../../../url/yt/e8TsCQmngFk/" rel="noopener" target="_blank" title="Youtube / Apple TV / The Elephant Queen &ndash; Official Movie Trailer">Official Trailer</a> (2018).</p>
 
         <p class="linebreak">Discover more about elephants and how you can help them: <a href="../../../url/-com/theeelephantqueen/" title="The Elephant Queen (documentary film, 2018)" target="_blank" rel="noopener">theeelephantqueen.com</a>.</p>
 
         <h3 class="linebreak">Into the Okavango (2018)</h3>
         <p>1h 28min</p>
 
-        <p class="linebreak"><em>Into the Okavango</em>&mdash;a National Geographic Documentary Films documentary film follows National Geographic Fellow <a href="../../../url/-com/nationalgeographic-steve-boyes/" title="National Geographic / Steve Boyes" target="_blank" rel="noopener">Dr Steve Boyes</a> on a first expedition of National Geographic <a href="../../../url/-org/nationalgeographic-okavango/" title="National Geographic Society / Okavango Wilderness Project">Okavango Wilderness Project</a> (NGOWP). Boyes, a conservationist and native of South Africa, leads a research team to survey and trace the flow of water that feeds <em>the jewel of the Kalahari:</em> the Okavango Delta in Botswana. The team of scientists, photographers, film-makers, and African guides set out in dug-out mekoros &ndash; canoes &ndash; at the water source on a distant Angolan plateau. This film then documents the data-driven mission from the water tower in Angola to the delta in Botswana, ultimately capturing an extraordinary effort to safeguard the ecosystem of the greater Okavango Basin.</p>
+        <p class="linebreak"><i>Into the Okavango</i>&mdash;a National Geographic Documentary Films documentary film follows National Geographic Fellow <a href="../../../url/-com/nationalgeographic-steve-boyes/" title="National Geographic / Steve Boyes" target="_blank" rel="noopener">Dr Steve Boyes</a> on a first expedition of National Geographic <a href="../../../url/-org/nationalgeographic-okavango/" title="National Geographic Society / Okavango Wilderness Project">Okavango Wilderness Project</a> (NGOWP). Boyes, a conservationist and native of South Africa, leads a research team to survey and trace the flow of water that feeds <i>the jewel of the Kalahari:</i> the Okavango Delta in Botswana. The team of scientists, photographers, film-makers, and African guides set out in dug-out mekoros &ndash; canoes &ndash; at the water source on a distant Angolan plateau. This film then documents the data-driven mission from the water tower in Angola to the delta in Botswana, ultimately capturing an extraordinary effort to safeguard the ecosystem of the greater Okavango Basin.</p>
 
         <div>
-          <p><em>The water comes from Cuito.</em></p>
+          <p><i>The water comes from Cuito.</i></p>
 
         </div>
 
@@ -97,14 +97,14 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>Communities along the water tower have maintained a lifestyle intertwined with the rivers and the ecosystem they support. But as land mines from the decades-long civil war are decommissioned and more roads open up, the outside world is encroaching into these isolated communities and the surrounding wilderness. As a result, the illegal commercial bush-meat trade has picked up, as have unregulated development, charcoal production, and logging.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;National Geographic Okavango Wilderness Project [<a class="color" href="../../../url/-org/nationalgeographic-okavango-what/" rel="noopener" target="_blank" title="National Geographic Society / Okavango Wilderness Project &ndash; What We're Doing">nationalgeographic.org</a>]</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>Communities along the water tower have maintained a lifestyle intertwined with the rivers and the ecosystem they support. But as land mines from the decades-long civil war are decommissioned and more roads open up, the outside world is encroaching into these isolated communities and the surrounding wilderness. As a result, the illegal commercial bush-meat trade has picked up, as have unregulated development, charcoal production, and logging.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;National Geographic Okavango Wilderness Project [<a class="color" href="../../../url/-org/nationalgeographic-okavango-what/" rel="noopener" target="_blank" title="National Geographic Society / Okavango Wilderness Project &ndash; What We're Doing">nationalgeographic.org</a>]</font></h4>
       </div>
 
       <div>
-        <p><em>Drag!</em> The water at the source of the Cuito river is not a river. It is a peatland characterized by seepages and streams. The Angolan plateau is like a sponge holding the water that will flood the Okavango. The team get out of their mekoros and drag the equipment across a dry land, until a rivulet opens into a river: the Cuito. As the team continues through Angola, the film documents a woodland that has been devastated by fires. The fires appear to be getting worse, and the elephants appear to be all gone. There appears to be a missing piece in a puzzle that once connected elephants to Angola.</p>
+        <p><i>Drag!</i> The water at the source of the Cuito river is not a river. It is a peatland characterized by seepages and streams. The Angolan plateau is like a sponge holding the water that will flood the Okavango. The team get out of their mekoros and drag the equipment across a dry land, until a rivulet opens into a river: the Cuito. As the team continues through Angola, the film documents a woodland that has been devastated by fires. The fires appear to be getting worse, and the elephants appear to be all gone. There appears to be a missing piece in a puzzle that once connected elephants to Angola.</p>
 
         <div>
-          <p><em>There are elephants in the living room of Africa.</em></p>
+          <p><i>There are elephants in the living room of Africa.</i></p>
 
         </div>
 
@@ -116,19 +116,19 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>We need this information to benchmark this near-pristine wildlife, before upstream development happens.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Steve Boyes. TED: &lsquo;How we're saving one of Earth's last wild places.&rsquo; (2018) [<a class="color" href="../../../url/ted/steve-boyes-how-were-saving-one-of-earths-last-wild-places/" rel="noopener" target="_blank" title="TED / Steve Boyes: How we're saving one of Earth's last wild places">ted.com</a>]</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>We need this information to benchmark this near-pristine wildlife, before upstream development happens.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Steve Boyes. TED: &lsquo;How we're saving one of Earth's last wild places.&rsquo; (2018) [<a class="color" href="../../../url/ted/steve-boyes-how-were-saving-one-of-earths-last-wild-places/" rel="noopener" target="_blank" title="TED / Steve Boyes: How we're saving one of Earth's last wild places">ted.com</a>]</font></h4>
       </div>
 
       <div class="clear">
         <img alt="Into the Okavango title" src="https://animathabitat.com/inc/img/~01/title/national-geographic.into-the-okavango.banner.jpg" />
-        <p class="text-right gutter-side"><em>Into the Okavango</em> (2018) &copy; National Geographic Documentary Films [<a href="../../../url/-com/nationalgeographic-into-the-okavango/" title="Into the Okavango (documentary film, 2018)" target="_blank" rel="noopener">films.nationalgeographic.com</a>]</p>
+        <p class="text-right gutter-side"><i>Into the Okavango</i> (2018) &copy; National Geographic Documentary Films [<a href="../../../url/-com/nationalgeographic-into-the-okavango/" title="Into the Okavango (documentary film, 2018)" target="_blank" rel="noopener">films.nationalgeographic.com</a>]</p>
 
       </div>
 
       <div>
-        <p><em>Into the Okavango</em> (documentary film, 2018) is rated 7.6 on IMDB.</p>
+        <p><i>Into the Okavango</i> (documentary film, 2018) is rated 7.6 on IMDB.</p>
 
-        <p class="linebreak"><em>Into the Okavango</em> &ndash; <a href="../../../url/-com/nationalgeographic-into-the-okavango-trailer-2018/" rel="noopener" target="_blank" title="National Geographic Documentary Films / Into the Okavango &ndash; Trailer">Official Trailer</a> (2018).</p>
+        <p class="linebreak"><i>Into the Okavango</i> &ndash; <a href="../../../url/-com/nationalgeographic-into-the-okavango-trailer-2018/" rel="noopener" target="_blank" title="National Geographic Documentary Films / Into the Okavango &ndash; Trailer">Official Trailer</a> (2018).</p>
         <p class="linebreak">Why it matters: <a href="../../../url/-org/nationalgeographic-okavango/" title="National Geographic Society / Okavango Wilderness Project" target="_blank" rel="noopener">nationalgeographic.org/projects/okavango/</a>.</p>
 
       </div>
@@ -142,7 +142,7 @@
         <div class="clear toggle-off" id="register" spellcheck="false">
           <div>
             <h3><a onclick="toggle_register();">&minus;</a></h3><h3>Behind-the-scenes&hellip;</h3>
-            <p>Register your name and address to get behind-the-scenes of <em>White Elephant</em>.</p>
+            <p>Register your name and address to get behind-the-scenes of <i>White Elephant</i>.</p>
 
           </div>
 
