--- a/scene/two/index.html
+++ b/scene/two/index.html
@@ -32,7 +32,7 @@
   <nav>
     <ul class="page">
       <li class="crumb scene-two logo"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (Two) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.two.svg"/></a></li>
-      <li class="crumb scene scene-two"><a><em>White Tiger</em></a></li>
+      <li class="crumb scene scene-two"><a><i>White Tiger</i></a></li>
       <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
       <li class="right thin dark" id="currency"><a class="title" onclick="toggle_currency();">
         <font class="paypal-ca"><b class="overscore">CA</b>&nbsp;&#92;&nbsp;US</font>
@@ -56,7 +56,7 @@
       <section class="single">
         <div class="quote">
           <img alt="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux. White Tiger oil painting. &ndash;&nbsp;peinture &agrave; l'huile." class="trim" src="../../inc/img/boutique/02/white-tiger.2020.study.blur.720-360.jpg" />
-          <p class="text-right gutter-side"><em>White Tiger</em> &ndash; Taiga, Siberia<font class="fr">&nbsp;&#92;&nbsp;Sib&eacute;rie</font> (oil painting<font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l'huile</font>, 2025)</p>
+          <p class="text-right gutter-side"><i>White Tiger</i> &ndash; Taiga, Siberia<font class="fr">&nbsp;&#92;&nbsp;Sib&eacute;rie</font> (oil painting<font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l'huile</font>, 2025)</p>
 
         </div>
       </section>
@@ -89,7 +89,7 @@
         <!-- <p>Exhibited in May<font class="fr">&nbsp;&#92;&nbsp;Expos&eacute; en mai&nbsp;:</font> 2025</p> -->
         <p>Scheduled for May<font class="fr">&nbsp;&#92;&nbsp;Pr&eacute;vu pour mai</font> 2025.</p>
 
-        <p class="linebreak"><em>White Tiger</em> is an oil painting of an Amur tiger in the taiga. This painting is photographed and reproduced in limited edition as an archival pigment print on acid-free archival paper, and printed with an inch unprinted matte to allow for framing options and safe handling. The archival pigment prints are available in two sizes. A digital copy of the corrected and edited photograph is also available.<font class="fr">&nbsp;&#92;&nbsp;<em>Tigre blanc</em> est une peinture &agrave; l'huile d’un tigre dans la ta&iuml;ga. Cette peinture est photographi&eacute;e et reproduite en &eacute;dition limit&eacute;e en tant que tirage pigmentaire d'archives sur du papier d'archivage sans acide, et imprim&eacute;e avec une mate d'un pouce non imprim&eacute;e pour permettre une manipulation en toute s&eacute;curit&eacute; ainsi que des options d'encadrement. Les tirages pigmentaires d'archives sont disponibles en deux tailles. Une copie num&eacute;rique de la photo corrig&eacute;e et &eacute;dit&eacute;e est &eacute;galement disponible.</font></p>
+        <p class="linebreak"><i>White Tiger</i> is an oil painting of an Amur tiger in the taiga. This painting is photographed and reproduced in limited edition as an archival pigment print on acid-free archival paper, and printed with an inch unprinted matte to allow for framing options and safe handling. The archival pigment prints are available in two sizes. A digital copy of the corrected and edited photograph is also available.<font class="fr">&nbsp;&#92;&nbsp;<i>Tigre blanc</i> est une peinture &agrave; l'huile d’un tigre dans la ta&iuml;ga. Cette peinture est photographi&eacute;e et reproduite en &eacute;dition limit&eacute;e en tant que tirage pigmentaire d'archives sur du papier d'archivage sans acide, et imprim&eacute;e avec une mate d'un pouce non imprim&eacute;e pour permettre une manipulation en toute s&eacute;curit&eacute; ainsi que des options d'encadrement. Les tirages pigmentaires d'archives sont disponibles en deux tailles. Une copie num&eacute;rique de la photo corrig&eacute;e et &eacute;dit&eacute;e est &eacute;galement disponible.</font></p>
 
         <!-- The digital download includes a range of resolutions. -->
         <!-- Le t&eacute;l&eacute;chargement num&eacute;rique comprend une gamme de r&eacute;solutions. -->
@@ -258,25 +258,25 @@
     <article>
       <div class="quote">
 
-        <!-- <h3><a href="history-of-rewilding/"><font class="scene-two">History of Rewilding</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <!-- <h3><a href="history-of-rewilding/"><font class="scene-two">History of Rewilding</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <!-- <h3><a href="the-beginning-of-printing/"><font class="scene-two">The Beginning of Printing</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <!-- <h3><a href="the-beginning-of-printing/"><font class="scene-two">The Beginning of Printing</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <!-- <h3><a href="the-beginning-of-exhibiting/"><font class="scene-two">The Beginning of Exhibiting</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <!-- <h3><a href="the-beginning-of-exhibiting/"><font class="scene-two">The Beginning of Exhibiting</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <h3><a href="history-of-the-forest-and-the-trees/"><font class="scene-two">History of the Forest and the Trees</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="history-of-the-forest-and-the-trees/"><font class="scene-two">A History of the Forest and the Trees</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <!-- <h3><a href="tiger-conservation-siberia/"><font class="scene-two">Tiger Conservation in Siberia</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <!-- <h3><a href="tiger-conservation-siberia/"><font class="scene-two">Tiger Conservation in Siberia</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <h3><a href="the-second-chapter/"><font class="scene-two">The Second Chapter</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <h3><a href="the-beginning-of-chapter-two/"><font class="scene-two">The Beginning of Chapter Two</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="the-beginning-of-painting/"><font class="scene-two">The Beginning of Painting</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <h3><a href="the-beginning-of-painting/"><font class="scene-two">The Beginning of Painting</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
         <pre class="thin"></pre>
 
       </div>
@@ -297,7 +297,7 @@
       <p class="small">In Memoriam</p>
 
       <p class="linebreak small"><font class="title">Bloody Mary &middot;&nbsp;White Sky &middot;&nbsp;White Moon</font></p>
-      <p class="small"><font class="small">Sooyong Park <em>Endangered Emperors of Siberia: The Fall of Three Generations</em> (film, 2003)</font></p>
+      <p class="small"><font class="small">Sooyong Park <i>Endangered Emperors of Siberia: The Fall of Three Generations</i> (film, 2003)</font></p>
       <!-- Bloody Mary was killed by poachers. -->
       <!-- White Sky was killed by poachers. -->
       <!-- White Moon (and her first cub) were never seen again. -->
