--- a/scene/two/the-beginning-of-chapter-two/index.html
+++ b/scene/two/the-beginning-of-chapter-two/index.html
@@ -32,7 +32,7 @@
     <ul class="page">
       <li class="crumb scene-two logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (Two) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.two.svg"/></a></li>
       <li class="crumb btn scene-two"><a href="../" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux.">II</a></li>
-      <li class="crumb scene scene-two"><a><em>The Second Chapter</em></a></li>
+      <li class="crumb scene scene-two"><a><i>Chapter Two</i></a></li>
     </ul>
   </nav>
 
@@ -40,20 +40,20 @@
     <article>
       <div>
         <h4 class="letterhead thin">March 2021</h4>
-        <h2 class="scene-two">The Second Chapter</h2>
+        <h2 class="scene-two">The Beginning of Chapter Two</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, art director at Animat Habitat.</h5>
 
-        <p class="linebreak"><em>The triptych with Pure Red Color, Pure Yellow Color and Pure Blue Color painted by Aleksandr Rodchenko was shown at exhibition in Moscow in September 1921. This was a final, neutral statement on the subject of painting: three monochrome canvases painted without representation. The exhibition was titled 5&times;5&equals;25, and was produced by five Russian Avant-garde artists as a conclusion to the bourgeois practice of painting. For Rodchenko and for the other four artists with like variations on a monochrome canvas, this exhibition marked the end of painting and the beginning of a new chapter&mdash;a search for more constructive forms of art. For example, Rodchenko then turned to graphic art and photography in his commentary on the Soviet regime. For many modern critics, that exhibition in 1921 marked a shift in the history of art, and this marked departure from painting had an indirect influence on Abstract Expressionism in the 1940s and into the 1950s and so on.</em></p>
+        <p class="linebreak"><i>The triptych with Pure Red Color, Pure Yellow Color and Pure Blue Color painted by Aleksandr Rodchenko was shown at exhibition in Moscow in September 1921. This was a final, neutral statement on the subject of painting: three monochrome canvases painted without representation. The exhibition was titled 5&times;5&equals;25, and was produced by five Russian Avant-garde artists as a conclusion to the bourgeois practice of painting. For Rodchenko and for the other four artists with like variations on a monochrome canvas, this exhibition marked the end of painting and the beginning of a new chapter&mdash;a search for more constructive forms of art. For example, Rodchenko then turned to graphic art and photography in his commentary on the Soviet regime. For many modern critics, that exhibition in 1921 marked a shift in the history of art, and this marked departure from painting had an indirect influence on Abstract Expressionism in the 1940s and into the 1950s and so on.</i></p>
 
         <!-- Aleksandra Exter, Liubov Popova, Aleksandr Rodchenko and Varvara Stepanova and Aleksandr Vesnin. -->
         <!-- Abstract Expressionists: namely the likes of Wassily Kandinsky, Mark Rothko and Ad Reinhardt. -->
 
         <h3 class="linebreak">5&times;5&equals;25 (1921)</h3>
-        <p>A century on from the then infamous exhibition in Moscow, we recall select stylistic elements from this time in art history that influenced so much of the Expressionism and Minimalism of modern art. Specifically, we feature a style of lettering for use in print materials to accompany <em>The Beginning of Painting</em> and <em>White Tiger</em> and other artworks presented as part of the second chapter at Animat Habitat. The design decision to appropriate lettering like this today will oblige a clich&eacute; &ndash; where a subject relates in some way to the Soviet era, there is the inclination is to reach for an angular block-like all-caps typeface often applied in Avant-garde posters out of revolutionary Russia. While the subject &ndash; the tiger &ndash; is not set in a Constructivist period per say, there persists a natural connection to the Siberian taiga landscape. Furthermore, the medium &ndash; oil color &ndash; hearkens to a more traditional time in art history&mdash;to a turning point when painting was eschewed for other forms of graphic art found to be more accessible, expressive and progressive and so on.</p>
+        <p>A century on from the then infamous exhibition in Moscow, we recall select stylistic elements from this time in art history that influenced so much of the Expressionism and Minimalism of modern art. Specifically, we feature a style of lettering for use in print materials to accompany <i>The Beginning of Painting</i> and <i>White Tiger</i> and other artworks presented as part of a second chapter at Animat Habitat. The design decision to appropriate lettering like this today will oblige a clich&eacute; &ndash; where a subject relates in some way to the Soviet era, there is the inclination is to reach for an angular block-like all-caps typeface often applied in Avant-garde posters out of revolutionary Russia. While the subject &ndash; the tiger &ndash; is not set in a Constructivist period per say, there persists a natural connection to the Siberian taiga landscape. Furthermore, the medium &ndash; oil color &ndash; hearkens to a more traditional time in art history&mdash;to a turning point when painting was eschewed for other forms of graphic art found to be more accessible, expressive and progressive and so on.</p>
 
         <p class="linebreak">Animat Habitat publications will alternate between digital and physical media. The traditional artworks will attempt to carry on tradition in some meaningful way. The beginning of painting at the studio has created an opportunity to acknowledge the influence of Constructivist artists on modern art history, their impact on civil society in Soviet Russia, and their commentary on the role of art in communication.</p>
 
-        <p class="linebreak">The use of lettering like this in the second chapter at Animat Habitat juxtaposes a seperate, parallel path taken a hundred years ago in another direction. Lettering like this relates in some way some ideals of Constructivism in 1920s and 1930s Russia. This project carries forward some of those ideals in context of the challenges today to reconstruct our cities in a balance with the natural world.</p>
+        <p class="linebreak">The use of lettering like this as part of a visual identity for scene two at Animat Habitat juxtaposes a seperate, parallel path taken a hundred years ago in an alternate direction. Lettering like this relates in some way some ideals of Constructivism in 1920s and 1930s Russia. This project carries forward some of those ideals in context of the challenges today to reconstruct our cities in a balance with the natural world.</p>
 
       </div>
 
@@ -62,9 +62,9 @@
 
       <div class="clear-top">
         <h3 class="linebreak">The Rodchenko Typeface</h3>
-        <p>The typeface titled <em>Rodchenko</em> was designed in 1996 by Tagir Safayev at ParaType. <em>ParaType</em> was at first a font library published in 1989 by a company called ParaGraph. Nine years later, director of the font department at ParaGraph Emil Yakupov founded the company ParaType with rights to the font library along with the name. The name ParaType itself was derived from a combination of the word &lsaquo; παρά &rsaquo; with <em>type</em>, which can be interpreted as &lsquo;near&rsquo; or &lsquo;available&rsquo; typefaces.<sup>&nbsp;[<a class="button" onclick="fn();" title="ParaType - About">1</a>]</sup></p>
+        <p>The typeface titled <i>Rodchenko</i> was designed in 1996 by Tagir Safayev at ParaType. <i>ParaType</i> was at first a font library published in 1989 by a company called ParaGraph. Nine years later, director of the font department at ParaGraph Emil Yakupov founded the company ParaType with rights to the font library along with the name. The name ParaType itself was derived from a combination of the word &lsaquo; παρά &rsaquo; with <i>type</i>, which can be interpreted as &lsquo;near&rsquo; or &lsquo;available&rsquo; typefaces.<sup>&nbsp;[<a class="button" onclick="fn();" title="ParaType - About">1</a>]</sup></p>
 
-        <p class="linebreak">In 1997, the initial typeface design of <em>Rodchenko</em> was licensed to ITC and published as <em>Stenberg</em>, with an Inline style. <em>Rodchenko</em> (typeface, 1996-2002) was maintained at ParaType, appearing slightly more spaced than ITC <em>Stenberg</em> (typeface, 1997). The <em>Rodchenko</em> font family was extended with two lighter weights as well as another condensed style. The geometrical sans serif design &ndash; with caps and small caps only &ndash; was based on the lettering of Constructivist artists in Russia in the 1920s and 1930s. Namely partners Aleksandr Rodchenko and Varvara Stepanova and brothers Vladimir and George Stenberg and so on. The font was made for use in advertising and display typography. ParaType describes the letterforms as made from straight lines only. <em>Totally simplified, this face is perceived as a symbol of Russian Avant-garde.</em><sup>&nbsp;[<a class="button" onclick="fn();" title="ParaType - Fonts">2-3</a>]</sup></p>
+        <p class="linebreak">In 1997, the initial typeface design of <i>Rodchenko</i> was licensed to ITC and published as <i>Stenberg</i>, with an Inline style. <i>Rodchenko</i> (typeface, 1996-2002) was maintained at ParaType, appearing slightly more spaced than ITC <i>Stenberg</i> (typeface, 1997). The <i>Rodchenko</i> font family was extended with two lighter weights as well as another condensed style. The geometrical sans serif design &ndash; with caps and small caps only &ndash; was based on the lettering of Constructivist artists in Russia in the 1920s and 1930s. Namely partners Aleksandr Rodchenko and Varvara Stepanova and brothers Vladimir and George Stenberg and so on. The font was made for use in advertising and display typography. ParaType describes the letterforms as made from straight lines only. <i>Totally simplified, this face is perceived as a symbol of Russian Avant-garde.</i><sup>&nbsp;[<a class="button" onclick="fn();" title="ParaType - Fonts">2-3</a>]</sup></p>
 
         <!-- Gustav Klutsis and others. -->
 
@@ -74,7 +74,7 @@
       <p class="text-right gutter-side">Rochenko type specimen [<a href="../../../url/com/paratype-rodchenko/" rel="noopener" target="_blank" title="ParaType / Fonts / Rodchenko">paratype.com</a>, recolored]</p>
 
       <div>
-        <p>Tagir Safayev &ndash; Russian graphic designer and type developer &ndash; worked at ParaType from 1991 until 2003. Safayev designed and developed more than one hundred fonts, of note of course the Cyrillic font ITC <em>Stenberg</em> (1997) and its initial stencil font <em>Rodchenko</em> (1996-2002). In 1995, Tagir Safayev received the Rodchenko Award of the Society of Designers of Russia for <em>Rodchenko</em> (typeface, 1996-2002). Today, Tagir Safayev is a staff designer at ParaType in Moscow.<sup>&nbsp;[<a class="button" onclick="fn();" title="Luc Devroye">4</a>]</sup></p>
+        <p>Tagir Safayev &ndash; Russian graphic designer and type developer &ndash; worked at ParaType from 1991 until 2003. Safayev designed and developed more than one hundred fonts, of note of course the Cyrillic font ITC <i>Stenberg</i> (1997) and its initial stencil font <i>Rodchenko</i> (1996-2002). In 1995, Tagir Safayev received the Rodchenko Award of the Society of Designers of Russia for <i>Rodchenko</i> (typeface, 1996-2002). Today, Tagir Safayev is a staff designer at ParaType in Moscow.<sup>&nbsp;[<a class="button" onclick="fn();" title="Luc Devroye">4</a>]</sup></p>
 
       </div>
 
@@ -110,10 +110,10 @@
       </div>
 
       <div class="clear-top">
-        <h3 class="linebreak">The Second Color</h3>
+        <h3 class="linebreak">Color Two</h3>
         <p>Font is a matter of functionality, history and style. Typography is a unique design space without content, wherein associations inhere within the letterforms. These associations take hold with time and with a pattern of use. A pattern can become so practiced in a culture that this practice shapes a relationship to the typeface. To begin the second chapter at Animat Habitat, we have designed a second project identity with a pattern of use for lettering and coloring.</p>
 
-        <p class="linebreak">Color is a fundamental part of each project identity at Animat Habitat. Each project color is a playful echo of the scene. The second color is <em>Pine</em>. The color green echos the evergreens&mdash;the taiga&mdash;the boreal forest habitat that extends across the northern hemisphere. This represents the land of the Amur tiger, as well as the largest swath of Canadian wilderness south of the tundra.</p>
+        <p class="linebreak">Color is a fundamental part of each project identity at Animat Habitat. Each project color is a playful echo of the scene. The second color is <i>Pine</i>. The color green echos the evergreens&mdash;the taiga&mdash;the boreal forest habitat that extends across the northern hemisphere. This represents the land of the Amur tiger, as well as the largest swath of Canadian wilderness south of the tundra.</p>
 
         <!-- The use / pattern of angles. -->
 
@@ -141,12 +141,12 @@
 
       <div>
 
-        <p>High-value cyan, magenta, yellow colors are designed to feature in the print materials for the exhibition. These modern colors repeat the theme&hellip; <em>The beginning of painting.</em> The right angles and the bright colors are a means to highlight the exhibition, to stand out in a noisy marketplace and to stand apart from the Earth tones of wildlife art. In nature, shapes are less exact and colors are more limited in comparison to the clarity of vector graphics and the purity of modern dyes and inks. This contrast between the art on display and the stationary on the side allows for color to remain representational and for the two art forms to appeal to a diverse aesthetic.</p>
+        <p>High-value cyan, magenta, yellow colors are designed to feature in the print materials for the exhibition. These modern colors repeat the theme&hellip; <i>The beginning of painting.</i> The right angles and the bright colors are a means to highlight the exhibition, to stand out in a noisy marketplace and to stand apart from the Earth tones of wildlife art. In nature, shapes are less exact and colors are more limited in comparison to the clarity of vector graphics and the purity of modern dyes and inks. This contrast between the art on display and the stationary on the side allows for color to remain representational and for the two art forms to appeal to a diverse aesthetic.</p>
 
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>If you do a painting with five strokes instead of ten, you can make the painting sing.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Tyrus Wong, <em>Tyrus</em> (documentary film, 2015)</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>If you do a painting with five strokes instead of ten, you can make the painting sing.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Tyrus Wong, <i>Tyrus</i> (documentary film, 2015)</font></h4>
 
         <!-- If there is any kind of magic in this world, it exists in the attempt of understanding someone sharing something. -->
 
@@ -168,7 +168,7 @@
         <div class="clear toggle-off" id="register" spellcheck="false">
           <div>
             <h3><a onclick="toggle_register();">&minus;</a></h3><h3>Behind-the-scenes&hellip;</h3>
-            <p>Register your name and address to get behind-the-scenes of <em>White Tiger</em>.</p>
+            <p>Register your name and address to get behind-the-scenes of <i>White Tiger</i>.</p>
 
           </div>
 
