--- a/scene/zero/index.html
+++ b/scene/zero/index.html
@@ -32,7 +32,7 @@
   <nav>
     <ul class="page">
       <li class="crumb dark logo"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
-      <li class="crumb scene dark"><a><em>White Rhino</em></a></li>
+      <li class="crumb scene dark"><a><i>White Rhino</i></a></li>
       <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
     </ul>
   </nav>
@@ -51,7 +51,7 @@
       <section class="single">
         <div class="quote">
           <img alt="Animat Habitat scene zero. &ndash;&nbsp;sc&egrave;ne z&eacute;ro. White Rhino oil painting. &ndash;&nbsp;peinture &agrave; l'huile. &copy; Dane Aleksander, 2007" class="trim" src="../../inc/img/boutique/00/white-rhino.2007.480-160.jpg" />
-          <p class="gutter-side text-right"><em>White Rhino</em>, Ngorongoro Conservation Area<font class="fr">&nbsp;&#92;&nbsp;Zone de conservation de Ngorongoro</font>, Tanzania<font class="fr">&nbsp;&#92;&nbsp;Tanzanie</font> (oil paint<font class="fr">&nbsp;&#92;&nbsp;peinture &agrave; l'huile</font>, 2007) &copy; Dane Aleksander</p>
+          <p class="gutter-side text-right"><i>White Rhino</i>, Ngorongoro Conservation Area<font class="fr">&nbsp;&#92;&nbsp;Zone de conservation de Ngorongoro</font>, Tanzania<font class="fr">&nbsp;&#92;&nbsp;Tanzanie</font> (oil paint<font class="fr">&nbsp;&#92;&nbsp;peinture &agrave; l'huile</font>, 2007) &copy; Dane Aleksander</p>
 
         </div>
       </section>
@@ -82,7 +82,7 @@
         </div>
         <p>Exhibited in April<font class="fr">&nbsp;&#92;&nbsp;Expos&eacute; en avril</font> 2007.</p>
 
-        <p class="linebreak"><em>White Rhino</em> is an oil painting that sets a serene landscape in Tanzania in contrast with an endangerment on the horizon for the northern white rhinoceros. The painting is regarded as a formative study at Animat Habitat where it started a conversation about the role we want to play in shaping the world we want to live in.<font class="fr">&nbsp;&#92;&nbsp;<em>Rhinoc&eacute;ros blanc</em> est une peinture &agrave; l'huile qui fixe un paysage serein en Tanzanie en contraste avec une menace &agrave; l'horizon pour le rhinoc&eacute;ros blanc. La peinture est consid&eacute;r&eacute;e comme l'&eacute;tude formative chez Animat Habitat o&ugrave; elle a commenc&eacute; une conversation sur la fa&ccedil;on dont nous voulons fa&ccedil;onner le monde dans lequel nous voulons vivre.</font></p>
+        <p class="linebreak"><i>White Rhino</i> is an oil painting that sets a serene landscape in Tanzania in contrast with an endangerment on the horizon for the northern white rhinoceros. The painting is regarded as a formative study at Animat Habitat where it started a conversation about the role we want to play in shaping the world we want to live in.<font class="fr">&nbsp;&#92;&nbsp;<i>Rhinoc&eacute;ros blanc</i> est une peinture &agrave; l'huile qui fixe un paysage serein en Tanzanie en contraste avec une menace &agrave; l'horizon pour le rhinoc&eacute;ros blanc. La peinture est consid&eacute;r&eacute;e comme l'&eacute;tude formative chez Animat Habitat o&ugrave; elle a commenc&eacute; une conversation sur la fa&ccedil;on dont nous voulons fa&ccedil;onner le monde dans lequel nous voulons vivre.</font></p>
 
         <!-- <h5>UNESCO World Heritage Site:<font class="fr">&nbsp;&#92;&nbsp;Patrimoine mondial&nbsp;:</font> <a href="../../url/whc/39/" rel="noopener" target="_blank" title="UNESCO World Heritage Site / Ngorongoro Conservation Area">Ngorongoro Conservation Area</a></h5> -->
 
@@ -117,10 +117,10 @@
     <article>
       <div class="quote">
 
-        <h3><a href="northern-white-rhinoceros/">Northern White Rhinoceros<font class="desktop"> &#47; <em>Nature</em></font></a></h3>
+        <h3><a href="northern-white-rhinoceros/">Northern White Rhinoceros<font class="desktop"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="../../url/git/danealeksander-art-international-baccalaureate/">Silver Studio Art Show<font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <h3><a href="../../url/git/danealeksander-art-international-baccalaureate/">Silver Studio Art Show<font class="desktop"> &#47; <i>Art</i></font></a></h3>
         <pre class="thin"></pre>
 
       </div>
@@ -130,7 +130,7 @@
   <div class="clear color">
     <section class="single">
       <div class="quote text-center">
-        <h4><em>Do not speak of a rhinoceros if there is no tree nearby.</em><font class="fr thin">&nbsp;&#92;&nbsp;<em>Ne parlez pas de rhinoc&eacute;ros s'il n'y a pas d'arbre &agrave; proximit&eacute;.</em></font><br><font class="color small thin">&mdash;&nbsp;Zulu proverb</font><font class="fr small thin">&nbsp;&#92;&nbsp;proverbe zoulou</font></h4>
+        <h4><i>Do not speak of a rhinoceros if there is no tree nearby.</i><font class="fr thin">&nbsp;&#92;&nbsp;<i>Ne parlez pas de rhinoc&eacute;ros s'il n'y a pas d'arbre &agrave; proximit&eacute;.</i></font><br><font class="color small thin">&mdash;&nbsp;Zulu proverb</font><font class="fr small thin">&nbsp;&#92;&nbsp;proverbe zoulou</font></h4>
 
       </div>
     </section>
