--- a/scene/zero/northern-white-rhinoceros/index.html
+++ b/scene/zero/northern-white-rhinoceros/index.html
@@ -32,7 +32,7 @@
     <ul class="page">
       <li class="crumb dark logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb btn dark"><a href="../" title="Animat Habitat scene zero. &ndash;&nbsp;sc&egrave;ne z&eacute;ro.">&lt;</a></li>
-      <li class="crumb scene dark"><a><em>Northern White Rhinoceros</em></a></li>
+      <li class="crumb scene dark"><a><i>Northern White Rhinoceros</i></a></li>
     </ul>
   </nav>
 
@@ -43,7 +43,7 @@
         <h2 class="dark">Northern White Rhinoceros</h2>
         <h5 class="author">Press secretary at Animat Habitat.</h5>
 
-        <p class="linebreak"><em>One of the more incomprehensible acts that we humans, as a species, have to face up to is the extirpation of a once thriving group of animals, such as the northern white rhinoceros. Once upon a time&hellip; there were thousands of this subspecies living across Africa. The crisis of poaching that has supplied an illegal trade in rhino horn has made the plight of the northern white rhinoceros particularly devastating. Now the next candidates for oblivion.</em></p>
+        <p class="linebreak"><i>One of the more incomprehensible acts that we humans, as a species, have to face up to is the extirpation of a once thriving group of animals, such as the northern white rhinoceros. Once upon a time&hellip; there were thousands of this subspecies living across Africa. The crisis of poaching that has supplied an illegal trade in rhino horn has made the plight of the northern white rhinoceros particularly devastating. Now the next candidates for oblivion.</i></p>
 
         <!-- William Hornaday, Our Vanishing Wildlife (1913) -->
 
@@ -55,7 +55,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>Not just the keepers but the rangers, too, they spend their lives with these animals, more than they do with their own families. And the moment I saw Jojo Wachira leaning in, and the keepers were saying goodbye to Sudan&hellip; Sudan kind of then leaned his massive heavy head right back into Jojo’s head. To me that was the story. It was not just this story of the last male northern white rhino on the planet dying, it was actually the deep bond that these keepers had, and it became this symbol of what humans can be. In that image, [you can see that] we did this to these animals. Humans are the ones that made this happen. We can be the great destroyer or the best protectors.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Ami Vitale, Nikon Ambassador and National Geographic photographer interviewed on <em>Boots on the Ground</em> (podcast, September 2021)</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>Not just the keepers but the rangers, too, they spend their lives with these animals, more than they do with their own families. And the moment I saw Jojo Wachira leaning in, and the keepers were saying goodbye to Sudan&hellip; Sudan kind of then leaned his massive heavy head right back into Jojo’s head. To me that was the story. It was not just this story of the last male northern white rhino on the planet dying, it was actually the deep bond that these keepers had, and it became this symbol of what humans can be. In that image, [you can see that] we did this to these animals. Humans are the ones that made this happen. We can be the great destroyer or the best protectors.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Ami Vitale, Nikon Ambassador and National Geographic photographer interviewed on <i>Boots on the Ground</i> (podcast, September 2021)</font></h4>
 
         <!-- Sept 2 2021 -->
 
@@ -63,36 +63,36 @@
 
       <div class="clear">
         <img alt="A wildlife ranger comforts Sudan moments before he passed away, Ol Pejeta Conservancy, Kenya (March 2018) &copy; Ami Vitale" src="https://animathabitat.com/inc/img/~00/photo/~ami-vitale/vitale.2018.sudan-at-ol-pejeta-conservancy.jpg" />
-        <p class="text-right gutter-side"><em>A wildlife ranger comforts Sudan moments before he passed away</em>, Ol Pejeta Conservancy, Kenya (March&nbsp;2018) &copy; Ami Vitale [<a href="../../../url/www/amivitale-goodbye-sudan/" rel="noopener" target="_blank" title="Ami Vitale / The Last Goodbye">amivitale.com</a>]</p>
+        <p class="text-right gutter-side"><i>A wildlife ranger comforts Sudan moments before he passed away</i>, Ol Pejeta Conservancy, Kenya (March&nbsp;2018) &copy; Ami Vitale [<a href="../../../url/www/amivitale-goodbye-sudan/" rel="noopener" target="_blank" title="Ami Vitale / The Last Goodbye">amivitale.com</a>]</p>
 
       </div>
 
       <div>
-        <p>Ami Vitale, Nikon Ambassador and National Geographic photographer, was interviewed by Dibblex Lesalon on the Kenya-based podcast <em>Boots on the Ground</em> in September 2021, where she was asked to share the story behind her photographs of Sudan before his death. Vitale has documented a number of wildlife conservation stories in Kenya, perhaps most notably her short film <em>Shaba</em> (2021) tells the story of an elephant in a way to support the foundation of Reteti Elephant Sanctuary. In the interview with Lesalon, Vitale spoke about how Kenya has been doing a lot of things right. She has seen some of the many ways Kenya has been a leader when you look at conservation, with the government committing to conservation and with the community coming together to see value in conservation and so on. &ldquo;There are challenges and a lot of missteps,&rdquo; Vitale acknowledged, &ldquo;but there are also a lot of great lessons to be learned&mdash;there is so much noise in the world, this is a really good time for all of us to take a moment and be quiet&hellip; And listen. Truly listen.&rdquo;<sup>&nbsp;[<a class="button" onclick="fn();" title="Shaba, 2021.">2</a>]</sup></p>
+        <p>Ami Vitale, Nikon Ambassador and National Geographic photographer, was interviewed by Dibblex Lesalon on the Kenya-based podcast <i>Boots on the Ground</i> in September 2021, where she was asked to share the story behind her photographs of Sudan before his death. Vitale has documented a number of wildlife conservation stories in Kenya, perhaps most notably her short film <i>Shaba</i> (2021) tells the story of an elephant in a way to support the foundation of Reteti Elephant Sanctuary. In the interview with Lesalon, Vitale spoke about how Kenya has been doing a lot of things right. She has seen some of the many ways Kenya has been a leader when you look at conservation, with the government committing to conservation and with the community coming together to see value in conservation and so on. &ldquo;There are challenges and a lot of missteps,&rdquo; Vitale acknowledged, &ldquo;but there are also a lot of great lessons to be learned&mdash;there is so much noise in the world, this is a really good time for all of us to take a moment and be quiet&hellip; And listen. Truly listen.&rdquo;<sup>&nbsp;[<a class="button" onclick="fn();" title="Shaba, 2021.">2</a>]</sup></p>
 
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>It is thought as many as twenty million elephants once roamed the continent, but many have been killed for their tusks&mdash;their ivory used for entirely ornimental purposes. Now just 350,000 elephants remain. [&hellip;] But of all Africa's remaining wildlife, it is the rhinoceros that has been most affected by poaching. In the Far East, its horn is used as traditional medicine. All of Africa's rhinos are now under threath, but for one subspecies it is likely to be too late. The northern white rhinoceros is facing extinction.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;David Attenborough. (2019) <em>Seven Worlds, One Planet</em>, e/7: Africa. BBC Studios</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>It is thought as many as twenty million elephants once roamed the continent, but many have been killed for their tusks&mdash;their ivory used for entirely ornimental purposes. Now just 350,000 elephants remain. [&hellip;] But of all Africa's remaining wildlife, it is the rhinoceros that has been most affected by poaching. In the Far East, its horn is used as traditional medicine. All of Africa's rhinos are now under threath, but for one subspecies it is likely to be too late. The northern white rhinoceros is facing extinction.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;David Attenborough. (2019) <i>Seven Worlds, One Planet</i>, e/7: Africa. BBC Studios</font></h4>
 
       </div>
 
       <div>
 
-        <p><em>To be, and then not to be anymore.</em> The extinction of the northern white rhinoceros will inevitably mark an important moment in the history of humankind. We now hold a responsibility to examine why an extinction like this has happened and what that will mean for us humans, as a species, as well. We must carry on the story of the northern white rhinoceros as a reminder that there are other ways to look at wildlife. Stories like this can help remind people how we are all interconnected&mdash;all inextricably linked to the natural world.</p>
+        <p><i>To be, and then not to be anymore.</i> The extinction of the northern white rhinoceros will inevitably mark an important moment in the history of humankind. We now hold a responsibility to examine why an extinction like this has happened and what that will mean for us humans, as a species, as well. We must carry on the story of the northern white rhinoceros as a reminder that there are other ways to look at wildlife. Stories like this can help remind people how we are all interconnected&mdash;all inextricably linked to the natural world.</p>
 
         <p class="linebreak">The black rhino &ndash; also known as the hook-lipped rhino &ndash; is categorized by the IUCN as critically endangered and has declined by more than ninety-five per cent since the 1960s. The black rhino is made up of four subspecies: the western black rhino, eastern black rhino, south-western black rhino and southern black rhino. The white rhino &ndash; misnamed for its wide mouth &ndash; is categorized by the IUCN as near threatened, and has been functionally reduced to one subspecies: southern white rhinos.<sup>&nbsp;[<a class="button" onclick="fn();" title="">3</a>]</sup></p>
 
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>These two females are the last of their kind. When they die, an entire subspecies that inhabited the earth for millions of years will have disappeared forever.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;David Attenborough (cont'd)</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>These two females are the last of their kind. When they die, an entire subspecies that inhabited the earth for millions of years will have disappeared forever.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;David Attenborough (cont'd)</font></h4>
 
       </div>
 
       <div class="clear">
         <img alt="Fatu and Najin graze, Ol Pejeta Conservancy, Kenya (March 2018) &copy; Ami Vitale" src="https://animathabitat.com/inc/img/~00/photo/~ami-vitale/vitale.2018.fatu-and-najin-graze.jpg" />
-        <p class="gutter-side text-right"><em>Fatu and Najin graze</em>, Ol Pejeta Conservancy, Kenya (March 2018) &copy; Ami Vitale [<a href="../../../url/www/amivitale-goodbye-sudan/" rel="noopener" target="_blank" title="Ami Vitale / The Last Goodbye">amivitale.com</a>]</p>
+        <p class="gutter-side text-right"><i>Fatu and Najin graze</i>, Ol Pejeta Conservancy, Kenya (March 2018) &copy; Ami Vitale [<a href="../../../url/www/amivitale-goodbye-sudan/" rel="noopener" target="_blank" title="Ami Vitale / The Last Goodbye">amivitale.com</a>]</p>
 
       </div>
 
@@ -105,7 +105,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>We watch them every day, looking at extinction. There is nothing much they can do except accept the fate that you have allowed them to be in.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;James Mwenda, ranger at Ol Pejeta conservancy, Kenya</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>We watch them every day, looking at extinction. There is nothing much they can do except accept the fate that you have allowed them to be in.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;James Mwenda, ranger at Ol Pejeta conservancy, Kenya</font></h4>
 
       </div>
 
@@ -116,7 +116,7 @@
       </div>
 
       <div>
-        <p>Najin and Fatu are mother and daughter. It is no longer possible for the northern white rhinoceros to reproduce naturally. <em>They are the terminus of a lineage that split-off hundreds of thousands of years ago.</em></p>
+        <p>Najin and Fatu are mother and daughter. It is no longer possible for the northern white rhinoceros to reproduce naturally. <i>They are the terminus of a lineage that split-off hundreds of thousands of years ago.</i></p>
 
         <!-- E.O. Wilson, Journal: The Biological Diversity Crisis (1985) -->
 
@@ -128,7 +128,7 @@
       <div class="quote" id="footnotes">
         <!-- <p class="small"><sup>1</sup> Sam Anderson. The Last Two Northern White Rhinos On Earth: What will we lose when Najin and Fatu die? New York Times. 2021. <a href="../../../url/www/nytimes-the-last-two-northern-white-rhinos-on-earth/" title="New York Times / The Last Two Northern White Rhinos On Earth" target="_blank" rel="noopener">Website&nbsp;Link</a></p> -->
         <p class="small"><sup>1</sup> Ami Vitale. The Last Goodbye. 2019. <a href="../../../url/www/amivitale-goodbye-sudan/" title="Ami Vitale / The Last Goodbye" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-        <p class="small"><sup>2</sup> Reteti Elephant Sanctuary. <em>Shaba</em>, a short film by Ami Vitale. 2021. <a href="../../../url/-org/shabafilm/" title="Ami Vitale / Shaba (documentary film, 2021)" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+        <p class="small"><sup>2</sup> Reteti Elephant Sanctuary. <i>Shaba</i>, a short film by Ami Vitale. 2021. <a href="../../../url/-org/shabafilm/" title="Ami Vitale / Shaba (documentary film, 2021)" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
         <p class="small"><sup>3</sup> IUCN Red List. Conservation efforts bring cautious hope for African rhinos. IUCN. March 2020. <a href="../../../url/-org/iucn-conservation-efforts-bring-cautious-hope-african-rhinos/" title="." target="_blank" rel="noopener">Website&nbsp;Link</a></p>
         <p class="small"><sup>4</sup> Seven Worlds, One Planet. &lsquo;These Two Rhinos Are The Last Of Their Kind.&rsquo; BBC Earth. 2019. <a href="../../../url/yt/Q8eh58Z249o/" title="YouTube / BBC Earth / Seven Worlds, One Planet: These Two Rhinos Are The Last Of Their Kind." target="_blank" rel="noopener">Video&nbsp;Link</a></p>
         <p class="small"><sup>4</sup> Seven Worlds, One Planet. &lsquo;Living on the brink&rsquo; BBC Earth. 2019. <a href="../../../url/www/bbcearth-living-on-the-brink/" title="BBC Earth / Seven Worlds, One Planet: Living on the brink." target="_blank" rel="noopener">Website&nbsp;Link</a></p>
