--- a/societas/annum/index.html
+++ b/societas/annum/index.html
@@ -26,7 +26,7 @@
     <ul class="page">
       <li class="crumb dark logo"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb dark"><a href="../" title="Animat Habitat societ&amacr;s.">Societ&amacr;s</a></li>
-      <li class="crumb scene dark"><a><em>Annum</em></a></li>
+      <li class="crumb scene dark"><a><i>Annum</i></a></li>
       <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
     </ul>
   </nav>
@@ -36,7 +36,7 @@
 
       <div>
         <h2 class="letterhead">Letters<font class="fr">&nbsp;&#92;&nbsp;Lettres</font></h2>
-        <p class="lineend"><em>The annual letter from the president is addressed to members of Animat Habitat.</em><font class="fr">&nbsp;&#92;&nbsp;<em>Le lettre annuelle du pr&eacute;sident est adress&eacute;e aux membres de Animat Habitat.</em></font></p>
+        <p class="lineend"><i>The annual letter from the president is addressed to members of Animat Habitat.</i><font class="fr">&nbsp;&#92;&nbsp;<i>Le lettre annuelle du pr&eacute;sident est adress&eacute;e aux membres de Animat Habitat.</i></font></p>
 
         <ul>
           <li>Annual Address &ndash; 2023<font class="fr">&nbsp;&#92;&nbsp;Adresse annuelle</font></li>
