--- a/societas/concilium/index.html
+++ b/societas/concilium/index.html
@@ -30,7 +30,7 @@
   <nav>
     <ul class="page">
       <li class="crumb dark logo"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
-      <li class="crumb active dark"><a><em>Concilium</em></a></li>
+      <li class="crumb active dark"><a><i>Concilium</i></a></li>
       <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
     </ul>
   </nav>
@@ -53,7 +53,7 @@
           <a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-57U63714MU8341144MNDAT2A" title="PayPal CA$250 / Periwinkle Blue Council at Animat Habitat." rel="noopener"><button>Periwinkle <font class="small">CA$250<sup>&nbsp;[1]</sup></font></button></a>
           <p class="linebreak">As a Periwinkle Council member, your donation will help fund research and development at Animat Habitat, and you will receive:<font class="fr">&nbsp;&#92;&nbsp;En tant que membre du Conseil Pervenche, votre don contribuera au financement de la recherche et du d&eacute;veloppement chez Animat Habitat, et vous recevrez&nbsp;:</font></p>
 
-          <p class="linebreak"><em>All patron benefits plus&hellip;</em><font class="fr">&nbsp;&#92;&nbsp;<em>Tous les avantages des patrons plus&hellip;</em></font><sup>&nbsp;[2]</sup></p>
+          <p class="linebreak"><i>All patron benefits plus&hellip;</i><font class="fr">&nbsp;&#92;&nbsp;<i>Tous les avantages des patrons plus&hellip;</i></font><sup>&nbsp;[2]</sup></p>
 
           <ul class="lineend square">
             <li class="linebreak">Voice on the Periwinkle Council.<font class="fr"><br>&#92;&nbsp;Voix sur le Conseil Pervenche.</font></li>
@@ -62,7 +62,7 @@
 
           <pre class="thin"></pre>
 
-          <!-- <p class="linebreak small"><em>This council is for anyone terribly partial to the periwinkle blue&hellip;</em><font class="fr">&nbsp;&#92;&nbsp;<em>Ce conseil est pour ceux qui sont terriblement partiels au bleu pervenche&hellip;</em></font></p> -->
+          <!-- <p class="linebreak small"><i>This council is for anyone terribly partial to the periwinkle blue&hellip;</i><font class="fr">&nbsp;&#92;&nbsp;<i>Ce conseil est pour ceux qui sont terriblement partiels au bleu pervenche&hellip;</i></font></p> -->
 
           <p class="linebreak small">Members of the Periwinkle Council have an opportunity to submit nominees for the Annual Nature Documentary Award, to access Periwinkle Blue screenings of select nominees, and to vote for a best film or series or mini-series of the year.<font class="fr">&nbsp;&#92;&nbsp;Les membres du Conseil Pervenche ont la possibilit&eacute; de soumettre des nomin&eacute;s pour la revue annuelle des documentaire sur la nature, d'acc&eacute;der &agrave; des projections priv&eacute;es de certains nomin&eacute;s et de voter pour le meilleur film, s&eacute;rie ou mini-s&eacute;rie de l'ann&eacute;e.</font></p>
 
@@ -79,7 +79,7 @@
 
           <p class="linebreak">As a Silver Council member, your donation will help fund exhibitions and publications at Animat Habitat, and you will receive:<font class="fr">&nbsp;&#92;&nbsp;En tant que membre du Conseil Silver, votre don contribuera au financement des expositions et des publications chez Animat Habitat, et vous recevrez&nbsp;:</font></p>
 
-          <p class="linebreak"><em>All patron benefits plus&hellip;</em><font class="fr">&nbsp;&#92;&nbsp;<em>Tous les avantages des patrons plus&hellip;</em></font><sup>&nbsp;[2]</sup></p>
+          <p class="linebreak"><i>All patron benefits plus&hellip;</i><font class="fr">&nbsp;&#92;&nbsp;<i>Tous les avantages des patrons plus&hellip;</i></font><sup>&nbsp;[2]</sup></p>
 
           <ul class="lineend square">
             <li class="linebreak">Voice on the Silver Council.<font class="fr"><br>&#92;&nbsp;Voix sur le Conseil Silver.</font></li>
