--- a/app/beta/index.html
+++ b/app/beta/index.html
@@ -33,7 +33,7 @@
     <ul class="page">
       <li class="crumb dark logo"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <!-- <li class="crumb dark"><a href="../" title="Animat Habitat app.">App</a></li> -->
-      <li class="crumb active dark"><a><em>Beta</em></a></li>
+      <li class="crumb active dark"><a><i>Beta</i></a></li>
       <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
     </ul>
   </nav>
@@ -43,7 +43,7 @@
 
       <div>
         <h2 class="letterhead">Beta Programs<font class="fr">&nbsp;&#92;&nbsp;Programmes b&ecirc;ta</font></h2>
-        <p><em>Welcome to the beta programs at Animat Habitat.</em><font class="fr">&nbsp;&#92;&nbsp;<em>Bienvenue aux programmes b&ecirc;ta chez Animat Habitat.</em></font></p>
+        <p><i>Welcome to the beta programs at Animat Habitat.</i><font class="fr">&nbsp;&#92;&nbsp;<i>Bienvenue aux programmes b&ecirc;ta chez Animat Habitat.</i></font></p>
 
         <h5 class="linebreak">Beta App on iOS and iPadOS<font class="fr">&nbsp;&#92;&nbsp;Application b&ecirc;ta sur iOS et iPadOS</font></h5>
         <p>Add your name to the beta program waiting room for Apple iPhone or iPad users: <a href="ios-ipados/" title="Beta: Companion App on iOS and iPadOS">Beta Room</a>.<font class="fr">&nbsp;&#92;&nbsp;Enregistrez votre nom &agrave; la file d'attente du programme b&ecirc;ta pour les utilisateurs Apple iPhone ou iPad.</font></p>
