--- a/scene/one/companion-app-augmented-reality-kit/index.html
+++ b/scene/one/companion-app-augmented-reality-kit/index.html
@@ -30,7 +30,7 @@
     <ul class="page">
       <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
       <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><em>Augmented Reality Kit</em></a></li>
+      <li class="crumb scene scene-one"><a><i>Augmented Reality Kit</i></a></li>
     </ul>
   </nav>
 
@@ -41,7 +41,7 @@
         <h2 class="scene-one">Where is Augmented Reality?</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, animator at Animat Habitat.</h5>
 
-        <!-- <p class="linebreak"><em>This article is an update to an earlier broadcast: <a href="../companion-app-augmented-reality/">What is Augmented Reality?</a></em></p> -->
+        <!-- <p class="linebreak"><i>This article is an update to an earlier broadcast: <a href="../companion-app-augmented-reality/">What is Augmented Reality?</a></i></p> -->
 
       </div>
 
