--- a/scene/one/elephant-conservation-botswana/index.html
+++ b/scene/one/elephant-conservation-botswana/index.html
@@ -32,7 +32,7 @@
     <ul class="page">
       <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
       <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><em>Elephant Conservation in Botswana</em></a></li>
+      <li class="crumb scene scene-one"><a><i>Elephant Conservation in Botswana</i></a></li>
     </ul>
   </nav>
 
@@ -46,9 +46,9 @@
         <h2 class="scene-one">Elephant Corridors</h2>
         <h5 class="author">Press secretary at Animat Habitat.</h5>
 
-        <p class="linebreak"><em>Botswana has the largest number of savanna elephants in Africa today. While most African elephant populations have decreased due to poaching, urban expansion and landscape fragmentation, the elephant population in and around 115,000 square kilometres range in northern Botswana has remained stable.</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Chase et al, 2017">1</a>]</sup></p>
+        <p class="linebreak"><i>Botswana has the largest number of savanna elephants in Africa today. While most African elephant populations have decreased due to poaching, urban expansion and landscape fragmentation, the elephant population in and around 115,000 square kilometres range in northern Botswana has remained stable.</i><sup>&nbsp;[<a class="button" onclick="fn();" title="Chase et al, 2017">1</a>]</sup></p>
 
-        <p class="linebreak"><em>Botswana is now home to around 130,000 elephants<!-- (and potential home range range for up to 200,000 elephants)-->. This is more than 33 per cent of the current savanna elephant population. That is in sharp contrast to less than three per cent of the African savanna elephants living in Botswana fifty years ago. Plummeting elephant populations elsewhere and the safety provided by Botswana has attracted a steady migration from neighboring countries, where expanding rural communities and rising poaching levels are putting regional elephants under increased pressure and stress.</em></p>
+        <p class="linebreak"><i>Botswana is now home to around 130,000 elephants<!-- (and potential home range range for up to 200,000 elephants)-->. This is more than 33 per cent of the current savanna elephant population. That is in sharp contrast to less than three per cent of the African savanna elephants living in Botswana fifty years ago. Plummeting elephant populations elsewhere and the safety provided by Botswana has attracted a steady migration from neighboring countries, where expanding rural communities and rising poaching levels are putting regional elephants under increased pressure and stress.</i></p>
 
         <h3 class="linebreak" id="colin-bell-header">Once upon a time&hellip; in Botswana.</h3>
         <p>The recent history of elephants in Botswana has taken on a greater significance for the future of elephants in Africa.</p>
@@ -56,7 +56,7 @@
         <p class="linebreak" id="colin-bell-a">History: <a class="color" onclick="toggle_colin_bell();">Making a safe haven</a>.<sup>&nbsp;[<a class="button" onclick="fn();" title="Bell and Pinnock, 2019">2</a>]</sup></p>
 
         <div class="clear indent-left-line" id="colin-bell">
-          <p class="linebreak"><font class="color"><em>In his chapter, &lsquo;Making a safe haven&rsquo;, in a book that he co-authored with Don Pinnock, <em>The Last Elephants</em> (2019), Colin Bell tells a history of elephants in Botswana.</em></font></p>
+          <p class="linebreak"><font class="color"><i>In his chapter, &lsquo;Making a safe haven&rsquo;, in a book that he co-authored with Don Pinnock, <i>The Last Elephants</i> (2019), Colin Bell tells a history of elephants in Botswana.</i></font></p>
 
           <div>
             <p><b class="color">&ldquo;</b>In the decades leading up to the 1980s, [&hellip;] security was non-existent along Botswana's porous, unfenced borders and in the country's wilderness, poachers had free reign. Elephants in those days were jittery, reclusive and most often very aggressive. The 1980s ushered in escalating poaching levels, resulting in even angrier elephants.<b class="color">&rdquo;</b></p>
@@ -79,7 +79,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>Elephants clearly have a cognitive ability to understand where they are threatened and where they are safe. In this case they're seeking refuge and sanctuary in Botswana where they are well protected.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Dr Michael Chase, director and co-founder of Elephants Without Borders</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>Elephants clearly have a cognitive ability to understand where they are threatened and where they are safe. In this case they're seeking refuge and sanctuary in Botswana where they are well protected.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Dr Michael Chase, director and co-founder of Elephants Without Borders</font></h4>
       </div>
 
       <br>
@@ -94,7 +94,7 @@
 
         <div class="quote" id="footnotes">
           <p class="small"><sup>1</sup> Adams, T.A., Chase, M.J., Attard, A., Leggett, K. &lsquo;A preliminary study of stakeholders' opinions and perceptions of elephants and elephant management in Botswana.&rsquo; Pachyderm, No.58 2017. <a href="../../../url/-org/pachydermjournal-419/" title="A preliminary study of stakeholders’ opinions and perceptions of elephants and elephant management in Botswana." target="_blank" rel="noopener">Download&nbsp;PDF</a></p>
-          <p class="small"><sup>2</sup> Bell, C., Pinnock, D. <em>The Last Elephants</em>, &lsquo;Making a safe haven&rsquo;, p&nbsp;211-221. (2019) Smithsonian Books.</p>
+          <p class="small"><sup>2</sup> Bell, C., Pinnock, D. <i>The Last Elephants</i>, &lsquo;Making a safe haven&rsquo;, p&nbsp;211-221. (2019) Smithsonian Books.</p>
 
         </div>
       </div>
@@ -108,7 +108,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>Elephants are an umbrella species. They're ambassadors for conservation, helping to locate and connect key conservation areas in Africa's largest wilderness area.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Kelly Landen, <em>The Last Elephants</em>, &lsquo;Botswana's sanctuary&rsquo; p&nbsp;225. (2019) Smithsonian Books</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>Elephants are an umbrella species. They're ambassadors for conservation, helping to locate and connect key conservation areas in Africa's largest wilderness area.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Kelly Landen, <i>The Last Elephants</i>, &lsquo;Botswana's sanctuary&rsquo; p&nbsp;225. (2019) Smithsonian Books</font></h4>
       </div>
 
       <div>
@@ -147,7 +147,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>The story of Botswana's elephant population has been a bright spot in a sometimes bleak landscape. Outside of Botswana, the African elephant is in crisis. Habitat loss, competition for resources, civil unrest, terrorism, human-wildlife conflict and escalated rates of poaching for ivory threaten their very existence.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Kelly Landen, program manager and co-founder of Elephants Without Borders</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>The story of Botswana's elephant population has been a bright spot in a sometimes bleak landscape. Outside of Botswana, the African elephant is in crisis. Habitat loss, competition for resources, civil unrest, terrorism, human-wildlife conflict and escalated rates of poaching for ivory threaten their very existence.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Kelly Landen, program manager and co-founder of Elephants Without Borders</font></h4>
       </div>
 
       <div class="clear">
@@ -161,7 +161,7 @@
 
         <h3 class="linebreak" id="don-pinnock-header">Today&hellip; in Botswana</h3>
 
-        <p>Once again from his chapter on Botswana in <em>The Last Elephants</em>, &lsquo;Making a safe haven&rsquo;, Colin Bell sets the stage for the state of elephants in Botswana today:</p>
+        <p>Once again from his chapter on Botswana in <i>The Last Elephants</i>, &lsquo;Making a safe haven&rsquo;, Colin Bell sets the stage for the state of elephants in Botswana today:</p>
 
         <div>
           <p><b class="color">&ldquo;</b>[&hellip;] with elephant populations in East Africa now at less than fifteen per cent of what they were, the syndicates are switching their attention southwards. Botswana's long, unmanned, unfenced border with Namibia and Zimbabwe (with Zambia close by) is difficult to monitor. Poaching is rising despite the country's stringent anti-poaching laws.<b class="color">&rdquo;</b></p>
@@ -171,7 +171,7 @@
         <p id="don-pinnock-a">History: <a class="color" onclick="toggle_don_pinnock();">Postscript</a>.<sup>&nbsp;[<a class="button" onclick="fn();" title="Bell and Pinnock, 2019">2</a>]</sup></p>
 
         <div class="clear indent-left-line" id="don-pinnock">
-          <p><font class="color"><em>Don Pinnock added a postscript to that chapter on Botswana.</em></font></p>
+          <p><font class="color"><i>Don Pinnock added a postscript to that chapter on Botswana.</i></font></p>
 
           <div>
             <p><b class="color">&ldquo;</b>President Ian Khama reached the end of his two terms as head of state in March 2018 and handed over the presidential reins to his vice-president, expecting his handpicked successor to continue with his policies. President Mokgweetsi EK Masisi is now firmly in charge of the country and has surprised the Khamas (and just about everyone) by rapidly reversing many of the previous administration's revered wildlife policies and oversights.<b class="color">&rdquo;</b></p>
@@ -199,7 +199,7 @@
 
         <p>The real solution is to allow these elephants safe passage to past, now underutilized, home ranges in Angola, Zambia and Zimbabwe, and safe passage back to Botswana with the change of season. The solution is to protect the wild places in the Kavango-Zambezi area for elephants. This solution calls for a reconsidered land management plan in Caprivi. This solution requires the recreation and preservation of wildlife corridors across Botswana's northern border and throughout managed farmland and so on. This solution has the potential to spark a tourism industry that can benefit local communities with revenue and employment in all five KAZA countries. Today, the future of elephants in Botswana is once again up for debate and this time there is a far reaching implication for the future of elephants in Africa.</p>
 
-        <p class="linebreak">Animat Habitat has recognized the data collected by EWB as a fundamental support structure for elephant conservation in Botswana and across the continent. <font class="color"><a class="color" href="../../../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">Elephants Without Borders</a> (EWB) was named as an official selection to receive a percentage of revenue from the first publication at Animat Habitat&mdash;scene one: <em>White Elephant</em>.</font> This is part of our mission to support wildlife conservation projects on the ground &ndash; and in the air &ndash; in Africa.</p>
+        <p class="linebreak">Animat Habitat has recognized the data collected by EWB as a fundamental support structure for elephant conservation in Botswana and across the continent. <font class="color"><a class="color" href="../../../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">Elephants Without Borders</a> (EWB) was named as an official selection to receive a percentage of revenue from the first publication at Animat Habitat&mdash;scene one: <i>White Elephant</i>.</font> This is part of our mission to support wildlife conservation projects on the ground &ndash; and in the air &ndash; in Africa.</p>
 
         <!-- <p class="linebreak">For the latest on elephants in Botswana, we look to <a href="../../../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">Elephants Without Borders</a>.</p> -->
 
@@ -210,7 +210,7 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>For elephants to survive, we need to identify safe corridors, linkages between areas, networks, dispersal areas, transfrontier parks. There's not much time left. Their future is in our hands. We have to get it right and do it now, while we still have the opportunity.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Dr Michael Chase, director and co-founder of Elephants Without Borders</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>For elephants to survive, we need to identify safe corridors, linkages between areas, networks, dispersal areas, transfrontier parks. There's not much time left. Their future is in our hands. We have to get it right and do it now, while we still have the opportunity.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Dr Michael Chase, director and co-founder of Elephants Without Borders</font></h4>
       </div>
 
       <div class="clear">
@@ -228,7 +228,7 @@
         <div class="clear toggle-off" id="register" spellcheck="false">
           <div>
             <h3><a onclick="toggle_register();">&minus;</a></h3><h3>Behind-the-scenes&hellip;</h3>
-            <p>Register your name and address to get behind-the-scenes of <em>White Elephant</em>.</p>
+            <p>Register your name and address to get behind-the-scenes of <i>White Elephant</i>.</p>
 
           </div>
 
