--- a/scene/one/making-of-ella-2/index.html
+++ b/scene/one/making-of-ella-2/index.html
@@ -30,7 +30,7 @@
     <ul class="page">
       <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
       <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><em>Making of Ella Ch&nbsp;2</em></a></li>
+      <li class="crumb scene scene-one"><a><i>Making of Ella Ch&nbsp;2</i></a></li>
     </ul>
   </nav>
 
@@ -44,7 +44,7 @@
 
       <div>
         <h3>Pre-visualization</h3>
-        <p>This is an animatic: a pre-visualization of a visual story. The focus is placed on pacing and on a linear sequence of events. This is the <em>White Elephant</em> animatic, with comic book pages and panels fitted to the standard widescreen format. This working timeline for the story serves as a foundation for cinematography and audio engineering and so on.</p>
+        <p>This is an animatic: a pre-visualization of a visual story. The focus is placed on pacing and on a linear sequence of events. This is the <i>White Elephant</i> animatic, with comic book pages and panels fitted to the standard widescreen format. This working timeline for the story serves as a foundation for cinematography and audio engineering and so on.</p>
 
       </div>
 
@@ -66,7 +66,7 @@
         <div class="clear toggle-off" id="register" spellcheck="false">
           <div>
             <h3><a onclick="toggle_register();">&minus;</a></h3><h3>Behind-the-scenes&hellip;</h3>
-            <p>Register your name and address to get behind-the-scenes of <em>White Elephant</em>.</p>
+            <p>Register your name and address to get behind-the-scenes of <i>White Elephant</i>.</p>
 
           </div>
 
