--- a/scene/one/wildlife-documentary-big-tuskers/index.html
+++ b/scene/one/wildlife-documentary-big-tuskers/index.html
@@ -32,7 +32,7 @@
     <ul class="page">
       <li class="crumb scene-one logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
       <li class="crumb btn scene-one"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <li class="crumb scene scene-one"><a><em>Wildlife Documentary &ndash; Feature</em></a></li>
+      <li class="crumb scene scene-one"><a><i>Wildlife Documentary &ndash; Feature</i></a></li>
     </ul>
   </nav>
 
@@ -43,25 +43,25 @@
         <h2 class="scene-one">Last of the Big Tuskers</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, art director at Animat Habitat.</h5>
 
-        <p class="linebreak"><em>This article is continued from Wildlife Documentary &ndash; <a href="../wildlife-documentary/">Action</a>. This &lsquo;action&rsquo; set features a last documentary: <em>Last of the Big Tuskers</em>&mdash;a film by James Currie. The film entered festivals in 2018.</em></p>
+        <p class="linebreak"><i>This article is continued from Wildlife Documentary &ndash; <a href="../wildlife-documentary/">Action</a>. This &lsquo;action&rsquo; set features a last documentary: <i>Last of the Big Tuskers</i>&mdash;a film by James Currie. The film entered festivals in 2018.</i></p>
 
       </div>
 
       <img alt="Last of the Big Tuskers title" src="https://danealeksander.github.io/inc/img/copy/umboko-productions/lotbt-cover-1.4.spot.header.jpg" />
-      <p class="text-right gutter-side"><em>Last of the Big Tuskers</em> cover art &copy; Umboko Productions [<a href="../../../url/git/bigtuskers/" title="Last of the Big Tuskers / A film by James Currie." target="_blank">bigtuskers.com</a>]</p>
+      <p class="text-right gutter-side"><i>Last of the Big Tuskers</i> cover art &copy; Umboko Productions [<a href="../../../url/git/bigtuskers/" title="Last of the Big Tuskers / A film by James Currie." target="_blank">bigtuskers.com</a>]</p>
 
       <div class="clear-top">
         <h3 class="linebreak">Last of the Big Tuskers (2018)</h3>
         <p>59min</p>
 
-        <p class="linebreak"><em>Last of the Big Tuskers</em> is an Umboko Productions documentary film about the role of dominant elephant bulls in elephant social structures. For a documentary that looks at the lives of elephants, the film focuses uniquely less on the matriarchal herds, telling a story of elephant conservation instead in the context of the other elephant groups: askari bachelor herds.</p>
+        <p class="linebreak"><i>Last of the Big Tuskers</i> is an Umboko Productions documentary film about the role of dominant elephant bulls in elephant social structures. For a documentary that looks at the lives of elephants, the film focuses uniquely less on the matriarchal herds, telling a story of elephant conservation instead in the context of the other elephant groups: askari bachelor herds.</p>
 
-        <p class="linebreak">These elephant bulls, called askaris, follow in the footsteps of a patriarch&mdash;a biggest bull elephant, likely with the biggest tusks, in the area. The increasingly few elephants with tusks estimated in excess of one-hundred pounds per tusk are known as <em>super-tuskers</em>. This film explains that the tusks of bull elephants grow at an accelerated rate when the bull is coming of age. When an elephant with the genetic makeup for big tusks has just reached the physical maturity of a <em>super-tusker</em>, that elephant becomes a prime target for poaching at the same time as that same elephant has just reached prime age for breeding. In the populations that remain of elephants in the wild, the result is that the genetic makeup for big tusks is artificially devolved.</p>
+        <p class="linebreak">These elephant bulls, called askaris, follow in the footsteps of a patriarch&mdash;a biggest bull elephant, likely with the biggest tusks, in the area. The increasingly few elephants with tusks estimated in excess of one-hundred pounds per tusk are known as <i>super-tuskers</i>. This film explains that the tusks of bull elephants grow at an accelerated rate when the bull is coming of age. When an elephant with the genetic makeup for big tusks has just reached the physical maturity of a <i>super-tusker</i>, that elephant becomes a prime target for poaching at the same time as that same elephant has just reached prime age for breeding. In the populations that remain of elephants in the wild, the result is that the genetic makeup for big tusks is artificially devolved.</p>
 
         <!-- <div class="color quote">
           <p><b class="color">&ldquo;</b>They're called askaris, and do what most young groups of men do: hang out, chase girls, and test their strength and wits against each other and the world. The older male becomes the father figure they never had in the matriarchal herd, teaching them masculine ethicat as well as more practical matters of survival in the wild, such as where their best watering holes and most succulent branches and berries are. These geography lessons they never forget. Hence the cliche about elephant's long memories. In return, the ascaris treat their father figure with utmost respect and affection. When he is too old to strip the bark off branches, they escort him to marshes or swamps where the leaves are softer. For elephants do not die gracefully of old age, they starve to death after they lose their sixth set of teeth, and when their leader is too weak to stand, and dementia sets in, the ascaris sometimes even guard him, as he sags, preventing hyenas and lions from attacking him. Even when he dies, the ascaris has been know to chase the scavengers off the carcass. After he is gone, they will visit his bones for as long as they are there, paying respect to a fallen leader. The fact that almost all elephants, which perish naturally, do so in the soft-food wetlands has lead to the myth of secret graveyards and ivory troves where elephants instinctively migrate to die. The truth is, they all usually die in the last areas where the food is soft enough to ingest.<b class="color">&rdquo;</b></p>
 
-          <p class="linebreak"><font class="color">&ldquo;</font>This is why those who hunt old bulls don't, or refuse to, understand the harm they're doing. An aging elephant male is not something surplus to be dispatched by some meager trophy gatherer. He is a breathing reference library. He's there for the health and well-being of future elephants. He teaches youngster who they are and imparts priceless bush skills to succeeding generations.<font class="color">&rdquo; &mdash;&nbsp;Lawrence Anthony, <em>The Elephant Whisperer: My Life with the Herd in the African Wild</em> (2009)</font></p>
+          <p class="linebreak"><font class="color">&ldquo;</font>This is why those who hunt old bulls don't, or refuse to, understand the harm they're doing. An aging elephant male is not something surplus to be dispatched by some meager trophy gatherer. He is a breathing reference library. He's there for the health and well-being of future elephants. He teaches youngster who they are and imparts priceless bush skills to succeeding generations.<font class="color">&rdquo; &mdash;&nbsp;Lawrence Anthony, <i>The Elephant Whisperer: My Life with the Herd in the African Wild</i> (2009)</font></p>
 
         </div> -->
 
@@ -71,9 +71,9 @@
 
         <p class="linebreak">Far too often, and for too long, elephants have been poached for their ivory tusks. For the few years leading up to this film, on average, almost one hundred elephants have been killed every day. Every dead elephant is a tragedy for a family-based herd and increasingly for the survival of the highly-intelligent species. The hope for this project is to share the value in keeping elephants alive, in particular big tuskers.</p>
 
-        <p class="linebreak">Every now and then&hellip; Everyday, people become evermore desensitized to the ways in which we take advantage of nature, wild or otherwise. This is known as a baseline shift&mdash;a baseline that represents what we think of as normal, which changes with every generation. Enter: director and on-camera co-host of <em>Last of the Big Tuskers</em>, James Currie, who grew up in South Africa, and who returns in this film to see the <em>last</em> big tuskers in <a href="../../../url/git/bigtuskers-tembe-tusker-foundation/" title="Last of the Big Tuskers / Tembe Elephant Park" target="_blank">Tembe Elephant Park</a>.</p>
+        <p class="linebreak">Every now and then&hellip; Everyday, people become evermore desensitized to the ways in which we take advantage of nature, wild or otherwise. This is known as a baseline shift&mdash;a baseline that represents what we think of as normal, which changes with every generation. Enter: director and on-camera co-host of <i>Last of the Big Tuskers</i>, James Currie, who grew up in South Africa, and who returns in this film to see the <i>last</i> big tuskers in <a href="../../../url/git/bigtuskers-tembe-tusker-foundation/" title="Last of the Big Tuskers / Tembe Elephant Park" target="_blank">Tembe Elephant Park</a>.</p>
 
-        <p class="linebreak">Tembe Elephant Park, South Africa, has a unique topography: <em>sandforest</em>. This special sandforest shares a border with Mozambique and holds an elephant population with very special characteristics, as Alois Haberhauer, Elephant Geneticist at the University of Kriel, described in the film: &ldquo;a special genetic makeup to produce strong tuskers.&rdquo; Leonard Muller, Elephant Monitor at Ezemvelo KZN Wildlife, also in the film explained the special circumstances for the elephants in Tembe:</p>
+        <p class="linebreak">Tembe Elephant Park, South Africa, has a unique topography: <i>sandforest</i>. This special sandforest shares a border with Mozambique and holds an elephant population with very special characteristics, as Alois Haberhauer, Elephant Geneticist at the University of Kriel, described in the film: &ldquo;a special genetic makeup to produce strong tuskers.&rdquo; Leonard Muller, Elephant Monitor at Ezemvelo KZN Wildlife, also in the film explained the special circumstances for the elephants in Tembe:</p>
 
         <div>
           <p><b class="color">&ldquo;</b>From a genetics standpoint [the elephants in Tembe] are quite gifted. Actually, it has a lot to do with the history of the area as well—that this must have been a very difficult area to hunt in the peak of the ivory trade so that would have left a lot of these bulls alone—that they were not hunted back then for their ivory. Tembe has got a lot more tuskers than anywhere in South Africa per population size. Even if you compare to a place like Tsavo, which is a massive park with lots of elephants, they only have a handful of tuskers [per population size]. So that is something quite special for Tembe.<b class="color">&rdquo;</b></p>
@@ -85,27 +85,27 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>There is mystery behind that masked grey visage and ancient life force, delicate and mighty, awesome and enchanted, commanding the silence ordinarily reserved for mountain peaks, great fires, and the sea.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Peter Matthiessen, <em>The Tree Where Man Was Born</em> (1972)</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>There is mystery behind that masked grey visage and ancient life force, delicate and mighty, awesome and enchanted, commanding the silence ordinarily reserved for mountain peaks, great fires, and the sea.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Peter Matthiessen, <i>The Tree Where Man Was Born</i> (1972)</font></h4>
       </div>
 
       <div class="clear">
         <img alt="Last of the Big Tuskers title" src="https://animathabitat.com/inc/img/~01/title/last-of-the-big-tuskers.title.png" />
-        <p class="text-right gutter-side"><em>Last of the Big Tuskers</em> title lettering &copy; Umboko Productions [<a href="../../../url/git/bigtuskers/" title="Last of the Big Tuskers / A film by James Currie." target="_blank">bigtuskers.com</a>]</p>
+        <p class="text-right gutter-side"><i>Last of the Big Tuskers</i> title lettering &copy; Umboko Productions [<a href="../../../url/git/bigtuskers/" title="Last of the Big Tuskers / A film by James Currie." target="_blank">bigtuskers.com</a>]</p>
 
       </div>
 
       <div>
         <p>The film crowdfunded US$25,000 in a campaign in 2016, and entered festivals in 2018 in the United States as well as in South Africa.</p>
 
-        <p class="linebreak">The art of <em>Last of the Big Tuskers</em> (2018) was created probono by <a href="../../../url/git/danealeksander-visual-effects-art-of-last-of-the-big-tuskers/" title="Dane Aleksander / Visual Effects of Last of the Big Tuskers (2018)" target="_blank">Dane Aleksander</a>.</p>
+        <p class="linebreak">The art of <i>Last of the Big Tuskers</i> (2018) was created probono by <a href="../../../url/git/danealeksander-visual-effects-art-of-last-of-the-big-tuskers/" title="Dane Aleksander / Visual Effects of Last of the Big Tuskers (2018)" target="_blank">Dane Aleksander</a>.</p>
 
         <p class="linebreak">The film is dedicated to the memory of Tom Mahamba.</p>
 
-        <p class="linebreak"><em>Last of the Big Tuskers</em> (2018) is not yet rated.</p>
+        <p class="linebreak"><i>Last of the Big Tuskers</i> (2018) is not yet rated.</p>
 
-        <p class="linebreak"><em>Last of the Big Tuskers</em> &ndash; <a href="../../../url/vimeo/284822327/" rel="noopener" target="_blank" title="Vimeo / Last of the Big Tuskers: Trailer (90 sec.)">Official Trailer</a> (2018).</p>
+        <p class="linebreak"><i>Last of the Big Tuskers</i> &ndash; <a href="../../../url/vimeo/284822327/" rel="noopener" target="_blank" title="Vimeo / Last of the Big Tuskers: Trailer (90 sec.)">Official Trailer</a> (2018).</p>
 
-        <p class="linebreak"><em>Last of the Big Tuskers</em> (2018) is available on <a href="../../../url/vimeo/lastofthebigtuskers/" rel="noopener" target="_blank" title="Vimeo / On Demand / Last of the Big Tuskers (documentary film, 2018)">Vimeo on Demand</a>.</p>
+        <p class="linebreak"><i>Last of the Big Tuskers</i> (2018) is available on <a href="../../../url/vimeo/lastofthebigtuskers/" rel="noopener" target="_blank" title="Vimeo / On Demand / Last of the Big Tuskers (documentary film, 2018)">Vimeo on Demand</a>.</p>
 
       </div>
 
@@ -118,7 +118,7 @@
         <div class="clear toggle-off" id="register" spellcheck="false">
           <div>
             <h3><a onclick="toggle_register();">&minus;</a></h3><h3>Behind-the-scenes&hellip;</h3>
-            <p>Register your name and address to get behind-the-scenes of <em>White Elephant</em>.</p>
+            <p>Register your name and address to get behind-the-scenes of <i>White Elephant</i>.</p>
 
           </div>
 
