--- a/scene/two/the-beginning-of-exhibition/index.html
+++ b/scene/two/the-beginning-of-exhibition/index.html
@@ -30,7 +30,7 @@
     <ul class="page">
       <li class="crumb scene-two logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (Two) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.two.svg"/></a></li>
       <li class="crumb btn scene-two"><a href="../" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux.">II</a></li>
-      <li class="crumb scene scene-two"><a><em>The Beginning of Exhibiting</em></a></li>
+      <li class="crumb scene scene-two"><a><i>The Beginning of Exhibiting</i></a></li>
     </ul>
   </nav>
 
