--- a/scene/two/the-beginning-of-painting/index.html
+++ b/scene/two/the-beginning-of-painting/index.html
@@ -32,7 +32,7 @@
     <ul class="page">
       <li class="crumb scene-two logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (Two) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.two.svg"/></a></li>
       <li class="crumb btn scene-two"><a href="../" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux.">II</a></li>
-      <li class="crumb scene scene-two"><a><em>The Beginning of Painting</em></a></li>
+      <li class="crumb scene scene-two"><a><i>The Beginning of Painting</i></a></li>
     </ul>
   </nav>
 
@@ -43,12 +43,12 @@
         <h2 class="scene-two">The End of Painting</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, art director at Animat Habitat.</h5>
 
-        <p class="linebreak"><em>Enter scene two. Soviet state, 1920. Open with two of the most prolific artists at the time &mdash; partners in business and in marriage Aleksandr Rodchenko and Varvara Stepanova.</em></p>
+        <p class="linebreak"><i>Enter scene two. Soviet state, 1920. Open with two of the most prolific artists at the time &mdash; partners in business and in marriage Aleksandr Rodchenko and Varvara Stepanova.</i></p>
 
         <h3 class="linebreak">The End of Painting</h3>
         <p>The art of Rodchenko and the art of Stepanova is for the most part of a constructivist movement, which was fueled by the revolutionary period in Russia in, and after, 1917. Constructivist artists moved to embrace technology and to promote art as a commodity in the service of society&mdash;as propaganda. In the wake of a revolution, artists had taken a pragmatic approach that applied art to encourage the construction of a socialist society.</p>
 
-        <p class="linebreak">This movement originated as a philosophy of design by Vladimir Tatlin, who wanted to construct art with new types of crafted materials&mdash;to emphasize the character of those materials that composed a piece of art and furthermore that the piece itself <em>was</em> art and not simply a frame with a window to another world. Rodchenko, especially, had been inclined toward the work of Tatlin. In an exhibition titled <em>5x5=25</em> set in Moscow in 1921, Rodchenko exhibited a triptych of monochromatic canvases painted red, yellow, blue, which he famously described, &ldquo;reduced painting to its logical conclusion.&rdquo; It was his declaration: <em>The End of Painting</em>, which stated that there was no reason to continue to explore the medium.<sup>&nbsp;[<a class="button" onclick="fn();" title="MoMA">1</a>]</sup></p>
+        <p class="linebreak">This movement originated as a philosophy of design by Vladimir Tatlin, who wanted to construct art with new types of crafted materials&mdash;to emphasize the character of those materials that composed a piece of art and furthermore that the piece itself <i>was</i> art and not simply a frame with a window to another world. Rodchenko, especially, had been inclined toward the work of Tatlin. In an exhibition titled <i>5x5=25</i> set in Moscow in 1921, Rodchenko exhibited a triptych of monochromatic canvases painted red, yellow, blue, which he famously described, &ldquo;reduced painting to its logical conclusion.&rdquo; It was his declaration: <i>The End of Painting</i>, which stated that there was no reason to continue to explore the medium.<sup>&nbsp;[<a class="button" onclick="fn();" title="MoMA">1</a>]</sup></p>
       </div>
 
       <div class="clear">
@@ -82,7 +82,7 @@
       </div>
 
       <div class="color quote text">
-        <h4><font class="color text-quote">&ldquo;</font><em>Basic colors. Every plane is a plane and there is to be no representation.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Aleksandr Rodchenko</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><i>Basic colors. Every plane is a plane and there is to be no representation.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Aleksandr Rodchenko</font></h4>
 
       </div>
 
@@ -227,7 +227,7 @@
 
       <div>
 
-        <p>This piece is painted on three separate 10 by 10 inch wood panels, specifically <a href="../../../url/com/apollongotrick/" rel="noopener" target="_blank" title="Apollon Gotrick">Apollon Gotrick</a> Birch Wood Panels. Apollon &ndash; founded in the 1960s by Dimitri Apokatanidis &ndash; is an art canvas manufacturing company that began as a picture framing store, based in Montreal, Quebec, Canada. The panels are made in Canada, made of three millimetre Russian birch wood, and these three in particular have made up the canvas for a triptych, titled: &ldquo;The beginning of painting.&rdquo; This piece marks the beginning of painting at Animat Habitat in the lead up to scene two: <em>White Tiger</em>.</p>
+        <p>This piece is painted on three separate 10 by 10 inch wood panels, specifically <a href="../../../url/com/apollongotrick/" rel="noopener" target="_blank" title="Apollon Gotrick">Apollon Gotrick</a> Birch Wood Panels. Apollon &ndash; founded in the 1960s by Dimitri Apokatanidis &ndash; is an art canvas manufacturing company that began as a picture framing store, based in Montreal, Quebec, Canada. The panels are made in Canada, made of three millimetre Russian birch wood, and these three in particular have made up the canvas for a triptych, titled: &ldquo;The beginning of painting.&rdquo; This piece marks the beginning of painting at Animat Habitat in the lead up to scene two: <i>White Tiger</i>.</p>
 
       </div>
 
@@ -247,7 +247,7 @@
         <div class="clear toggle-off" id="register" spellcheck="false">
           <div>
             <h3><a onclick="toggle_register();">&minus;</a></h3><h3>Behind-the-scenes&hellip;</h3>
-            <p>Register your name and address to get behind-the-scenes of <em>White Tiger</em>.</p>
+            <p>Register your name and address to get behind-the-scenes of <i>White Tiger</i>.</p>
 
           </div>
 
@@ -265,7 +265,7 @@
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
           <!-- <a class="nav-previous" href="../technology-lens/" rel="prev"><font class="desktop">Wildlife Documentary &ndash; Picture /</font><font class="mobile">Previous Article /</font></a> -->
-          <a class="nav-next" href="../the-second-chapter/" rel="next"><font class="desktop">/ The Second Chapter</font><font class="mobile">/ Next Article</font></a>
+          <a class="nav-next" href="../the-beginning-of-chapter-two/" rel="next"><font class="desktop">/ The Beginning of Chapter Two</font><font class="mobile">/ Next Article</font></a>
         </div>
       </div>
 
