--- a/societas/princeps/index.html
+++ b/societas/princeps/index.html
@@ -30,7 +30,7 @@
   <nav>
     <ul class="page">
       <li class="crumb dark logo"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
-      <li class="crumb scene dark"><a><em>Princeps</em></a></li>
+      <li class="crumb scene dark"><a><i>Princeps</i></a></li>
       <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
     </ul>
   </nav>
@@ -41,14 +41,42 @@
       <div>
         <h4 class="letterhead title thin">Animat Habitat</h4>
         <h2>Principal Members<font class="fr">&nbsp;&#92;&nbsp;Membres principaux</font></h2>
-        <p class="lineend"><em>A celebration of champions for wild animals and their natural habitats.</em><font class="fr">&nbsp;&#92;&nbsp;<em>Une c&eacute;l&eacute;bration des champions des animaux sauvages et de leurs habitats naturels.</em></font><sup>&nbsp;[<a class="button" onclick="fn();" title="Principal Members">1</a>]</sup></p>
+        <p class="lineend"><i>A celebration of champions for wild animals and their natural habitats.</i><font class="fr">&nbsp;&#92;&nbsp;<i>Une c&eacute;l&eacute;bration des champions des animaux sauvages et de leurs habitats naturels.</i></font><sup>&nbsp;[<a class="button" onclick="fn();" title="Principal Members">1</a>]</sup></p>
+
+        <div class="gutter-tobo">
+
+          <h5>2023</h5>
+          <div class="clear diptych">
+            <div class="clear-left clear-top">
+              <h5 class="small"><i>Journalism, Photo-journalism</i></h5>
+              <p><a href="../../url/-com/bryanchristy/" title="" target="_blank">Brian Christy</a>, investigative journalist and founder of National Geographic Special Investigations.</p>
+              <p><a href="../../url/-com/brentstirton/" title="" target="_blank" rel="noopener">Brent Stirton</a>, photographer, notably for National Geographic Magazine.</p>
+              <p>Recognized for investigative journalism, in particular, documenting the illegal trade in ivory.</p>
+              <p><font class="fr">Reconnu pour journalisme, documentant notamment le commerce ill&eacute;gal de l'ivoire.</font></p>
+
+            </div>
+
+            <div class="clear-left clear-top">
+              <h5 class="small"><i>Journalism</i></h5>
+              <p><a href="../../url/-com/jeffreybarbee/" title="" target="_blank">Jeffrey Barbee</a>, investigative journalist, notably for National Geographic <i>Wildlife Watch</i>.</p>
+              <p><a href="../../url-com/laurelneme/" title="" target="_blank">Laurel A Neme</a>, investigative journalist, notably for National Geographic <i>Wildlife Watch</i>.</p>
+              <p>Recognized for investigative journalism, in particular, reporting reconnaissance in the Kavango basin.</p>
+              <p><font class="fr">Reconnu pour journalisme, notamment des reportages de reconnaissance dans le bassin du Kavango.</font></p>
+
+            </div>
+
+          </div>
+
+        </div>
+
+        <pre class="thin"></pre>
 
         <div class="gutter-tobo">
 
           <h5>2022</h5>
           <div class="clear diptych">
             <div class="clear-left clear-top">
-              <h5 class="small"><em>Arts, Sciences</em></h5>
+              <h5 class="small"><i>Arts, Sciences</i></h5>
               <p>Thalefang Charles, photographer and storyteller, Botswana &ndash; <a href="../../url/-com/wildbirdtrust-okavango-wilderness-project/" title="Wild Bird Trust / Okavango Wilderness Project" target="_blank" rel="noopener">Wild Bird Trust</a>.</p>
               <p>Recognized for his chronicles of Indigenous knowledge across the Okavango Delta.</p>
               <p><font class="fr">Reconnu pour ses chroniques du savoir autochtones &agrave; travers le delta de l'Okavango.</font></p>
@@ -56,7 +84,7 @@
             </div>
 
             <div class="clear-left clear-top">
-              <h5 class="small"><em>Arts, Sciences</em></h5>
+              <h5 class="small"><i>Arts, Sciences</i></h5>
               <p>Rolf Steinmann, wildlife cinematographer, <a href="../../url/vimeo/148059977/" title="" target="_blank">In Between</a> (short film, 2015).</p>
               <p>Recognized for cinematography of wildlife in the Arctic, Antarctic and in between.</p>
               <p><font class="fr">Reconnu pour la cin&eacute;matographie de la nature dans l'Arctique et l'Antarctique.</font></p>
@@ -74,7 +102,7 @@
           <h5>2021</h5>
           <div class="clear diptych">
             <div class="clear-left clear-top">
-              <h5 class="small"><em>Arts</em></h5>
+              <h5 class="small"><i>Arts</i></h5>
               <p>Dr Anne Christine Innis Dagg, CM, zoologist and author, <a href="../../url/-org/anneinnisdaggfoundation/" title="Anne Innis Dagg Foundation" target="_blank">Anne Innis Dagg Foundation</a>.</p>
               <p>Recognized for her foundational research of giraffes.</p>
               <p><font class="fr">Reconnue pour ses recherches fondamentales sur les girafes.</font></p>
@@ -82,7 +110,7 @@
             </div>
 
             <div class="clear-left clear-top">
-              <h5 class="small"><em>Sciences</em></h5>
+              <h5 class="small"><i>Sciences</i></h5>
               <p>Dr Monica L Bond, wildlife biologist and co-founder of <a href="../../url/-org/wildnatureinstitute/" title="Wild Nature Institute" target="_blank">Wild Nature Institute</a>.</p>
               <p>Dr Derek E Lee, wildlife biologist and co-founder of Wild Nature Institute.</p>
               <!-- <p>James Madeli, research coordinator for Wild Nature Institute.</p> -->
@@ -104,7 +132,7 @@
           <h5>2020</h5>
           <div class="clear diptych">
             <div class="clear-left clear-top">
-              <h5 class="small"><em>Arts</em></h5>
+              <h5 class="small"><i>Arts</i></h5>
               <p><a href="../../url/x/paulakahumbu/" title="X / Paula Kahumbu" target="_blank" rel="noopener">Dr Paula Kahumbu</a>, president of Wildlife Direct assumed office in 2007</p>
               <p>Recognized for her role in shining a light on wildlife conservation in Kenya.</p>
               <p><font class="fr">Reconnue pour son r&ocirc;le dans la conservation de la nature au Kenya.</font></p>
@@ -112,7 +140,7 @@
             </div>
 
             <div class="clear-left clear-top">
-              <h5 class="small"><em>Sciences</em></h5>
+              <h5 class="small"><i>Sciences</i></h5>
               <p>Dr Rutledge (Steve) Boyes, founder of <a href="../../url/-com/wildbirdtrust-okavango-wilderness-project/" title="Wild Bird Trust / Okavango Wilderness Project" target="_blank" rel="noopener">Wild Bird Trust</a> in partnership with <a href="../../url/-org/nationalgeographic-okavango/" title="National Geographic / Okavango Wilderness Project" target="_blank" rel="noopener">NGOWP</a>.</p>
               <p>Adjany Costa, Angolan minister of Culture, Tourism, Environment appointed April 2020.</p>
               <p>Kerllen Costa, program director of NGOWP Angola assumed office April 2020.</p>
@@ -133,7 +161,7 @@
           <h5>2019</h5>
           <div class="clear diptych">
             <div class="clear-left clear-top">
-              <h5 class="small"><em>Politics</em><font class="fr">&nbsp;&#92;&nbsp;<em>Politique</em></font></h5>
+              <h5 class="small"><i>Politics</i><font class="fr">&nbsp;&#92;&nbsp;<i>Politique</i></font></h5>
               <p>Mumilaaq Qaqqaq, member of Parliament for Nunavut assumed office October 2019.</p>
               <p>Recognized for her progressive leadership in Canada.</p>
               <p><font class="fr">Reconnue pour sa direction progressiste au Canada.</font></p>
@@ -144,7 +172,7 @@
             </div>
 
             <div class="clear-left clear-top">
-              <h5 class="small"><em>Sciences</em></h5>
+              <h5 class="small"><i>Sciences</i></h5>
               <p>Dr Michael John Chase, elephant ecologist, co-founder of <a href="../../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">Elephants Without Borders</a>.</p>
               <p>Kelly Landen, naturalist and photographer, co-founder of Elephants Without Borders.</p>
               <p>Recognized for scientific research of elephants in the Kavango-Zambezi area.</p>
@@ -163,7 +191,7 @@
           <h5>2018</h5>
           <div class="clear diptych">
             <div class="clear-left clear-top">
-              <h5 class="small"><em>Politics</em><font class="fr">&nbsp;&#92;&nbsp;<em>Politique</em></font></h5>
+              <h5 class="small"><i>Politics</i><font class="fr">&nbsp;&#92;&nbsp;<i>Politique</i></font></h5>
               <p><a href="../../url/x/debhaalandnm/" title="X / Deb Haaland" target="_blank" rel="noopener">Debra Anne Haaland</a>, representative of New Mexico assumed office January 2019.</p>
               <p>Recognized for her progressive leadership in America.</p>
               <p><font class="fr">Reconnue pour sa direction progressiste en Am&eacute;rique.</font></p>
@@ -171,7 +199,7 @@
             </div>
 
             <div class="clear-left clear-top">
-              <h5 class="small"><em>Sciences</em></h5>
+              <h5 class="small"><i>Sciences</i></h5>
               <p>Angela Sheldrick, president of <a href="../../url/-org/sheldrickwildlifetrust/" title="Sheldrick Wildlife Trust" target="_blank" rel="noopener">Sheldrick Wildlife Trust</a> assumed office in 2001.</p>
               <p>Recognized for her continued conservation leadership in Kenya.</p>
               <p><font class="fr">Reconnue pour sa poursuite de la conservation au Kenya.</font></p>
@@ -203,7 +231,7 @@
           <div class="clear diptych">
 
             <div class="clear-left clear-top">
-              <h5 class="small"><em>Politics</em><font class="fr">&nbsp;&#92;&nbsp;<em>Politique</em></font></h5>
+              <h5 class="small"><i>Politics</i><font class="fr">&nbsp;&#92;&nbsp;<i>Politique</i></font></h5>
               <p><a href="../../url/x/meganaleslie/" title="X / Megan Leslie" target="_blank" rel="noopener">Megan Anissa Leslie</a>, president of WWF Canada assumed office December 2017.</p>
               <p>Recognized for her environmental advocacy in Canada.</p>
               <p><font class="fr">Reconnue pour sa d&eacute;fense de l'environnement au Canada.</font></p>
@@ -211,7 +239,7 @@
             </div>
 
             <div class="clear-left clear-top">
-              <h5 class="small"><em>Sciences</em></h5>
+              <h5 class="small"><i>Sciences</i></h5>
               <p>Dr Cynthia Jane Moss, founder of <a href="../../url/-org/elephanttrust/" title="Amboseli Trust for Elephants" target="_blank">Amboseli Trust for Elephants</a>.</p>
               <p>Dr Joyce Hatheway Poole, co-founder of <a href="../../url/-org/elephantvoices/" title="Elephant Voices" target="_blank">Elephant Voices</a>.</p>
               <p>Recognized for scientific research of elephants in Kenya.</p>
@@ -230,7 +258,7 @@
           <h5>2016</h5>
           <div class="clear diptych">
             <div class="clear-left clear-top">
-              <h5 class="small"><em>Arts</em></h5>
+              <h5 class="small"><i>Arts</i></h5>
               <p>Nick Brandt, director and photographer, co-founder of <a href="../../url/-org/biglife/" title="Big Life Foundation" target="_blank">Big Life Foundation</a>.</p>
               <p>Richard Bonham, conservationist, co-founder of Big Life Foundation.</p>
               <p>Recognized for conservation leadership in the Greater Amboseli ecosystem.</p>
@@ -239,7 +267,7 @@
             </div>
 
             <div class="clear-left clear-top">
-              <h5 class="small"><em>Sciences</em></h5>
+              <h5 class="small"><i>Sciences</i></h5>
               <p>Sir David Frederick Attenborough and BBC Studios Natural History Unit.</p>
               <p>Recognized as a voice for the natural world.</p>
               <p><font class="fr">Reconnu comme une voix pour le monde naturel.</font></p>
@@ -257,7 +285,7 @@
           <h5>2015</h5>
           <div class="clear diptych">
             <div class="clear-left clear-top">
-              <h5 class="small"><em>Arts</em></h5>
+              <h5 class="small"><i>Arts</i></h5>
               <p>Robert (Bob) McLellan Bateman, CM, naturalist and artist, <a href="../../url/-org/batemanfoundation/" title="Bateman Foundation" target="_blank">Bateman Foundation</a>.</p>
               <p>Recognized for his artwork to conserve nature in Canada.</p>
               <p><font class="fr">Reconnu pour ses &oelig;uvres visant &agrave; pr&eacute;server la nature au Canada.</font></p>
@@ -265,7 +293,7 @@
             </div>
 
             <div class="clear-left clear-top">
-              <h5 class="small"><em>Sciences</em></h5>
+              <h5 class="small"><i>Sciences</i></h5>
               <p>Dr Dame Jane Morris Goodall, primatologist and anthropologist, <a href="../../url/-org/janegoodall/" title="Jane Goodall Institute" target="_blank">Jane Goodall Institute</a>.</p>
               <p>Recognized for her advocacy to conserve the nature world.</p>
               <p><font class="fr">Reconnue pour sa d&eacute;fense de la conservation de la nature.</font></p>
@@ -282,9 +310,9 @@
   <div class="clear color">
     <section class="single">
       <div class="quote text-center">
-        <!-- <h4><font class="color text-quote">&ldquo;</font><font class="thin">Good afternoon. Good evening. What ever.</font><font class="color text-quote">&rdquo;</font><font class="fr"><font class="thin">&nbsp;&#92;&nbsp;</font>&laquo;&nbsp;<font class="thin">Bon apr&egrave;s-midi. Bonne soir&eacute;e. Quoi que ce soit.</font>&nbsp;&raquo;</font><br><font class="color small thin">&mdash;&nbsp;Dr Dame Jane Goodall, TED: <em>How humans and animals can live together</em> (2007)</font></h4> -->
+        <!-- <h4><font class="color text-quote">&ldquo;</font><font class="thin">Good afternoon. Good evening. What ever.</font><font class="color text-quote">&rdquo;</font><font class="fr"><font class="thin">&nbsp;&#92;&nbsp;</font>&laquo;&nbsp;<font class="thin">Bon apr&egrave;s-midi. Bonne soir&eacute;e. Quoi que ce soit.</font>&nbsp;&raquo;</font><br><font class="color small thin">&mdash;&nbsp;Dr Dame Jane Goodall, TED: <i>How humans and animals can live together</i> (2007)</font></h4> -->
 
-        <h4><font class="color text-quote">&ldquo;</font><font class="thin">Young people, when they are empowered, given the opportunity to take action to make the world a better place, truly are our hope for tomorrow.</font><font class="color text-quote">&rdquo;</font><font class="fr"><font class="thin">&nbsp;&#92;&nbsp;</font>&laquo;&nbsp;<font class="thin">Les jeunes, lorsqu'ils sont responsabilis&eacute;s et ont la possibilit&eacute; d'agir pour rendre le monde meilleur, sont vraiment notre espoir pour demain.</font>&nbsp;&raquo;</font><br><font class="color small thin">&mdash;&nbsp;Jane Goodall, TED: <em>How humans and animals can live together</em> (2007)</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><font class="thin">Young people, when they are empowered, given the opportunity to take action to make the world a better place, truly are our hope for tomorrow.</font><font class="color text-quote">&rdquo;</font><font class="fr"><font class="thin">&nbsp;&#92;&nbsp;</font>&laquo;&nbsp;<font class="thin">Les jeunes, lorsqu'ils sont responsabilis&eacute;s et ont la possibilit&eacute; d'agir pour rendre le monde meilleur, sont vraiment notre espoir pour demain.</font>&nbsp;&raquo;</font><br><font class="color small thin">&mdash;&nbsp;Jane Goodall, TED: <i>How humans and animals can live together</i> (2007)</font></h4>
 
         <!-- <h4><font class="color text-quote">&ldquo;</font><font class="thin">The news is filled with gloom and doom, and yes we do have to know what’s going on. We need to know that we’re destroying this planet. We need to know that it’s the only home we have, and how bizarre that the most intellectual creature [can] be destroying its only home. And we’re doing that. We’re polluting it. We’re using chemical pesticides and herbicides that are actually destroying the very soil on which we all depend. We’re polluting the oceans. We’re cutting down the forests. You know it all. People are beginning to know. But, although we need to know this, and be inspired to do something about it, we also need to know the amazing and wonderful and extraordinary projects that are going on around the world.</font><font class="color text-quote">&rdquo;</font><font class="fr"><font class="thin">&nbsp;&#92;&nbsp;</font>&laquo;&nbsp;<font class="thin">.</font>&nbsp;&raquo;</font><br><font class="color small thin">&mdash;&nbsp;Dr Dame Jane Goodall, in an interview with Paul Baribault, President and Chief Executive Officer of San Diego Zoo Wildlife Alliance, Amazing Wildlife podcast e/42 (2022)</font></h4> -->
 
